Change bold font to semibold and remove dots after subsection title

--- a/belaveshkin.sty
+++ b/belaveshkin.sty
@@ -24,8 +24,8 @@
 \setmainfont[
   Path=\string./fonts/,
   ItalicFont=SourceSerif4-Italic.ttf,%
-  BoldItalicFont=SourceSerif4-BoldItalic.ttf,%
-  BoldFont=SourceSerif4-Bold.ttf,%
+  BoldItalicFont=SourceSerif4-SemiboldIt.ttf,%
+  BoldFont=SourceSerif4-Semibold.ttf,%
 ]{SourceSerif4-Regular.ttf}
 \setsansfont[
   Path=\string./fonts/,
@@ -163,6 +163,9 @@
 \setlength{\aweboxvskip}{3mm}
 \setlength{\aweboxleftmargin}{0.025\linewidth}
 \renewcommand{\tipbox}[1]{\awesomebox[gray]{0pt}{\faLightbulb}{gray}{\emph{#1}}}
+
+%%%%%  INFOBOX  %%%%%
+\newcommand{\infobox}[1]{\awesomebox[gray]{0pt}{\faExclamation}{gray}{\textbf{#1}}}
 
 %%%%%  LISTS  %%%%%
 \setlist[enumerate]{itemindent=3em,labelwidth=1.5em,leftmargin=0pt,nosep}
