--- a/nutrition/intro.tex
+++ b/nutrition/intro.tex
@@ -17,6 +17,7 @@
 
 Здаровыя харчовыя звычкі~--- гэта ключ да даўгалецьця. Няхай зьмены будуць невялікімі, але іх моц~--- у~штодзённым паўторы, у~назапашвальным эфэкце! Бо шматлікія сучасныя хваробы, такія як сардэчна-сасудзістыя, атлусьценьне, рак, нэўрадэгенэратыўныя захворваньні й~само па сабе старэньне не ўзьнікаюць за адзін дзень, а~разьвіваюцца працяглы пэрыяд. Таму важна думаць пра сваё харчаваньне ў~доўгатэрміновай пэрспэктыве, бо нашае жыцьцё~--- гэта ня спрынт «схуднець да лета», а~маратон «быць здаровым ды энэргічным доўгія гады і прадухіліць раньняе старэньне». Усе дыеты падобныя тым, што працуюць у~кароткатэрміновай пэрспэктыве і правальваюцца ў~доўгатэрміновай. Чаму? Таму што правільнае харчаваньне~--- гэта лад жыцьця. Мы будзем гаварыць і пра тое, як уплываюць на наш мэтабалізм стрэс, сьвятло, тэмпэратура, фізычная актыўнасьць, нават настрой. Так, вы пачулі слушна~--- радасьць сапраўды спальвае тлушч! Калі вы думаеце аб укараненьні новай харчовай звычкі, падумайце, ці зможаце вы прытрымлівацца яе ўвесь час? Калі не, то вам лепей узяць плянку крыху ніжэй~--- няма сэнсу ў~тым, каб не ўжываць цукар на працягу тыдня, а~потым сарвацца. А~вось калі ўвесьці звычку ўстрымлівацца ад салодкага хаця б раз на два дні, то ўжо праз год гэта дабратворна адаб'ецца на вашым здароўі.
 
+\enlargethispage{\baselineskip}
 Кожны дзейсны інструмэнт уплыву на здароўе мае й~пабочныя эфэкты. Яда не выключэньне. Сёньня існуюць дзьве супрацьлеглыя тэндэнцыі~--- харчовая залежнасьць, пераяданьне і артарэксія\index{артарэксія}\footnote{Артарэксія~--- разладжэньне прыёму ежы, што характарызуецца дакучлівым імкненьнем да «здаровага і правільнага харчаваньня».~--- \emph{Аўтарскі нататак.}}. Таму перадусім я хачу даць вам некалькі правілаў \textbf{тэхнікі бясьпекі}.
 \begin{enumerate}[itemindent=3em,labelwidth=1.5em,leftmargin=0pt,nosep]
   \item Вашае здароўе~--- найвышэйшы прыярытэт, таму сумнявайцеся ў~любой інфармацыі, у~тым ліку і ў~той, якую даю я. Памятайце, што агульныя правілы ў~вашым канкрэтным выпадку могуць мець індывідуальныя нюансы. Стаўцеся да інфармацыі як дасьледчык~--- экспэрымэнтуйце й~прымайце ўзважанае рашэньне.
