--- a/willpower/chapter10.tex
+++ b/willpower/chapter10.tex
@@ -4,13 +4,13 @@
 
 Я дапамагаю людзям стаць здаравейшымі, але й яны, у~сваю чаргу, вельмі дапамагаюць мне. Камунікацыя з~разумнымі, моцнымі, крэатыўнымі, упэўненымі людзьмі~--- гэта адна з~самых прыемных характарыстык маёй працы. Ня будзе перабольшаньнем, калі я скажу, што яны мяне натхнялі і падбадзёрвалі ў~важных рашэньнях і справах. Людзі вакол нас заўважна ўплываюць на тое, што мы робім, і тое, як мы сябе адчуваем.
 
-\subsection*{Скажы мне, хто твой сябар, і я скажу, хто ты.}
+\subsection*{Скажы мне, хто твой сябар, і я скажу, хто ты}
 
 Калі вы камунікуеце з~разумнымі, ветлівымі людзьмі, якія сочаць за сваім здароўем, маўленьнем і вонкавым выглядам, маюць мэты ў~жыцьці ды імкнуцца іх дасягнуць, ня маюць шкодных звычак, добра зарабляюць і бескарысьліва дапамагаюць адно аднаму ў~дасягненьні мэтаў, шчыльна камунікуюць, бавяць час і сябруюць, то з~высокай ступеньню імавернасьці вы будзеце такім жа. Чым больш вы камунікуеце, тым больш задавальненьня атрымліваеце і тым больш вам хочацца гэта рабіць.
 
 А калі вам цяжка знаходзіць агульную мову зь іншымі людзьмі, вы падазроныя, зь цяжкасьцю разумееце іншых і чакаеце ад іх ці то любові, ці то прызнаньня вашых паслуг, калі вашы сябры, знаёмыя і калегі ня сочаць за здароўем, выпіваюць або кураць, безыніцыятыўныя, не разьвіваюцца, кепска выглядаюць і ня сочаць за сабой, то, хутчэй за ўсё, і вы падобныя да свайго асяродзьдзя.
 
-\tipbox{Калі вы дрэнна разумееце іншых, ня ўмееце камунікаваць, вам абыякавыя іншыя людзі, то й яны ня будуць імкнуцца падтрымліваць з~вамі сувязі~--- так узьнікае заганнае кола варожасьці і недастатковага разуменьня.}
+\infobox{Калі вы дрэнна разумееце іншых, ня ўмееце камунікаваць, вам абыякавыя іншыя людзі, то й яны ня будуць імкнуцца падтрымліваць з~вамі сувязі~--- так узьнікае заганнае кола варожасьці і недастатковага разуменьня.}
 
 \emph{Са старажытных часоў людзі жылі невялікімі плямёнамі, дзе ўсе адно аднаго ведалі і ўзаемадзейнічалі. Людзі арганізоўваліся для калектыўнага паляваньня~--- адны высочваюць здабычу, другія гоняць яе, трэція чакаюць у~засадзе,~--- для падтрымкі ў~канфліктах зь іншымі плямёнамі. Уменьне дамаўляцца, разумець адно аднаго і падтрымліваць лягло ў~аснову сучаснай цывілізацыі. У выпадку посьпеху племені перамагаў кожны, а~калі прайгравала племя, то загінуць маглі ўсе.}
 
@@ -18,7 +18,7 @@
 
 \textbf{Аптымальнае сацыяльнае атачэньне~--- гэта найлепшае асяродзьдзе для росту, падтрымкі і самарэалізацыі.}
 
-\subsection*{Сацыяльная ізаляцыя.}
+\subsection*{Сацыяльная ізаляцыя}
 
 Ізаляцыя згубная як для здароўя, так і для кар'еры. ``Выгнаньне з~племені лічылася больш жорсткім пакараньнем, чым кара сьмерцю'',~--- лічылася, што чалавек, ізаляваны ад грамадства, вырачаны на пакуты і гібель. Людзі~--- істоты глыбока сацыяльныя і зьвязаныя з~навакольнымі нашмат мацней, чым мы можам сабе ўявіць.
 
@@ -38,11 +38,11 @@
 
 Актыўнае сацыяльнае жыцьцё ў~племені, актыўныя ўзаемадзеяньні зь людзьмі~--- усё гэта прыводзіла да таго, што сацыяльны статус і лепшае разуменьне адно аднаго стала забясьпечваць большы рэпрадуктыўны посьпех. Пераход ад герархіі да эгалітарызму прывёў да таго, што вырашальнай стала не фізычная сіла, а~інтэлект, уменьне пралічваць учынкі іншых, разумець матывацыю і пачуцьці суродзічаў, мець у~галаве дынамічныя мадэлі іх псыхікі. Чым больш у~нас кантактаў, тым большае разьвіцьцё зонаў мозгу, адказных за памяць і распазнаньне людзей.
 
-\subsection*{Тэорыя сацыяльнага мозгу.}
+\subsection*{Тэорыя сацыяльнага мозгу}
 
 Тэорыя сацыяльнага мозгу лічыць, што менавіта ўзаемадзеяньне з~суродзічамі было і ёсьць рухальнай сілай эвалюцыі. Наш «сацыяльны мозг» уключае многія аддзелы мозгу: лобныя долі, скроневыя, мігдаліну і да т.~п. Разуменьне іншых людзей~--- гэта надзвычай складаны навык, бо трэба адрозьніваць намёкі, падман, разумець інтанацыі, міміку, супастаўляць гэта з~сытуацыяй і асаблівасьцямі чалавека~--- усё гэта патрабуе інтэнсіўнага разьвіцьця мозгу.
 
-\tipbox{У сярэднім чалавек можа сябраваць, то бок рэгулярна падтрымліваць адносіны, даведвацца і памятаць характарыстыкі 150 чалавек (а некаторыя «прасунутыя карыстальнікі» і больш за 200), што ўдвая больш, чым малпы.}
+\infobox{У сярэднім чалавек можа сябраваць, то бок рэгулярна падтрымліваць адносіны, даведвацца і памятаць характарыстыкі 150 чалавек (а некаторыя «прасунутыя карыстальнікі» і больш за 200), што ўдвая больш, чым малпы.}
 
 \emph{Гэта называецца «колькасьць Данбара» і сьведчыць пра абмежаваньне колькасьці пастаянных сацыяльных сувязяў. Лік 150 увесь час прайграецца ў~чалавечай гісторыі: сярэдні памер вёскі, колькасьць людзей у~племені, памер ваеннага атрада, колькасьць актыўных сяброў у~сацсетках і г.~д.}
 
@@ -60,11 +60,11 @@
 
 \emph{У дзяцінстве я мала камунікаваў з~аднагодкамі, аддаваў перавагу ўсё рабіць і вывучаць самому. Пасьля заканчэньня мэдыцынскага ўнівэрсытэта пайшоў на спэцыялізацыю анэстэзіёляг-рэаніматоляг адно з~тае прычыны, што лекары гэтай спэцыяльнасьці менш за ўсё маюць зносіны з~пацыентамі (а таксама мне падабалася рэаніматалёгія і прыборы). Але, пачаўшы выкладаць у~мэдыцынскім унівэрсытэце, а~затым у~сваёй школе здароўя, я разьвіў навыкі зносінаў і стаў атрымліваць нашмат больш задавальненьня ад камунікацыі і новых людзей. Зрэшты, мне яшчэ вельмі далёка да «камунікатыўных геніяў».}
 
-\subsection*{Інвэстуйце ў~сувязі.}
+\subsection*{Інвэстуйце ў~сувязі}
 
 Сацыяльныя адносіны~--- гэта важны рэсурс, у~яго варта сыстэмна інвэставаць, бо добрыя сувязі не ўзьнікаюць самі па сабе. Стывен Кові, аўтар кнігі ``Сем навыкаў высокаэфэктыўных людзей'', апісвае адносіны як стварэньне эмацыйнага банкаўскага рахунку, які вызначае ўзровень даверу ў~адносінах.
 
-\tipbox{Калі вы паважліва і сумленна ставіцеся да чалавека на рэгулярнай аснове, ягоны давер да вас расьце.}
+\infobox{Калі вы паважліва і сумленна ставіцеся да чалавека на рэгулярнай аснове, ягоны давер да вас расьце.}
 
 Высокі ўзровень даверу робіць магчымым эфэктыўныя камунікацыю, супрацоўніцтва, каапэрацыю.
 
@@ -97,7 +97,7 @@
 
 Колькасьць злачынстваў у~хмарачосах павялічваецца амаль прапарцыйна іх вышыні. Калі ў~трохпавярховых дамах учыняецца 8,8 злачынстваў на тысячу жыхароў, то ў~шаснаццаціпавярховых~--- да 20,2. Таксама гараджане значна часьцей пакутуюць на разнастайныя парушэньні псыхікі, напрыклад трывожны нэўроз і афэктыўны разлад. Навукова даведзеная сувязь актыўнасьці мігдаліны і шчыльнасьці насельніцтва: чым у~буйнейшым населеным пункце жыве чалавек, тым мацней актывуецца ў~яго мігдаліна ў~адказ на стрэс.
 
-\tipbox{Анляйн-камунікацыя наўрад ці заменіць рэальную: у~ёй няма фізычнага кантакту, невэрбальны кантакт~--- слабы, і няма магчымасьці атрымліваць досьвед сумеснага пражываньня падзеяў.}
+\infobox{Анляйн-камунікацыя наўрад ці заменіць рэальную: у~ёй няма фізычнага кантакту, невэрбальны кантакт~--- слабы, і няма магчымасьці атрымліваць досьвед сумеснага пражываньня падзеяў.}
 
 Чым большы горад, тым больш адзіноты: высокая шчыльнасьць людзей спрыяе адчужанасьці. Тут часта выяўляецца звышасьцярожнасьць, калі людзі не карыстаюцца наяўнай магчымасьцю для камунікацыі, лічачы самоту больш спакойнай. Але гэта наша памылка, калі мы думаем, што самота палепшыць нашае самаадчуваньне. Насамрэч, яна можа адно пагоршыць яго, а~вось камунікацыя~--- дапамагае.
 
@@ -128,17 +128,17 @@
 
 \emph{Навукоўцы ацанілі шкоду змушанай самоты, прыраўняўшы яе да 15 скураным цыгарэтам у~дзень, што перавышае нават небясьпеку атлусьценьня і маларухомага ладу жыцьця. Рызыка раньняй сьмерці сярод людзей, якія адчуваюць адзіноту і пакінутасьць, павялічваецца на 26\,\%, жыцьцё на самоце ў~кватэры ці доме~--- на 32\,\%, сацыяльная ізаляцыя~--- на 29\,\%.}
 
-\tipbox{Прыналежнасьць да рэлігійных суполак зьніжае рызыку сьмерці на 20\,\%, што было даведзена на прыкладзе прыхаджанаў цэркваў. Апроч зьніжэньня рызыкі шэрагу захворваньняў, гэта спрыяе ўсталяваньню дадатковых сацыяльных сувязяў.}
+\infobox{Прыналежнасьць да рэлігійных суполак зьніжае рызыку сьмерці на 20\,\%, што было даведзена на прыкладзе прыхаджанаў цэркваў. Апроч зьніжэньня рызыкі шэрагу захворваньняў, гэта спрыяе ўсталяваньню дадатковых сацыяльных сувязяў.}
 
 У самотных вышэйшая рызыка ішэмічнай хваробы сэрца, гіпэртаніі, інсульту, дэмэнцыі, суіцыдальных спробаў і дэпрэсіі. Адзінота павялічвае рызыкі для здароўя, уплываючы на маркеры здароўя, такія як ліпідны профіль, С-рэактыўны бялок, артэрыяльны ціск і да т.~п. Мэханізмы ў~гэтага розныя: разьвіцьцё дэпрэсіі, зьніжэньне фізычнай актыўнасьці, павелічэньне ўзроўню стрэсу, зьніжэньне ўзроўню падтрымкі, грэбаваньне мэдыцынскім абслугоўваньнем і да т.~п. Калі вы шмат часу праводзіце сярод іншых, то вам важна, як вы выглядаеце, як вы рухаецеся, таму вы сочыце за харчаваньнем і актыўнасьцю. Праз сацыяльную ізаляцыю зьяўляецца жаданьне ``запусьціць сябе'', павышаецца рызыка шкодных звычак, такіх як курэньне і алькагалізм.
 
 \textbf{Маладыя і пажылыя людзі найболей уразьлівыя перад ізаляцыяй.} Разьвітыя сацыяльныя сувязі ў~падлеткаў абараняюць ад атлусьценьня ня горш, чым рухальная актыўнасьць. Чым больш у~чалавека ва ўзросьце значных адносінаў зь іншымі людзьмі, тым лепш працуе мозг і менш рызыка Альцгаймэра. Анкалягічныя пацыенты лепш пераносяць хіміятэрапію, калі ў~іх ёсьць суседзі па палаце. У таварыскіх людзей меншая рызыка дыябэту 2 тыпу, а~ў людзей з~дэфіцытам камунікацыі рызыка дыябэту ўзрастае на 42\,\% у~мужчынаў і на 112\,\% у~жанчынаў. Страта кожнага сябра на 12\,\% павялічвае рызыку дыябэту.
 
-\tipbox{Варожасьць і недружалюбнасьць павялічваюць сьмяротнасьць ад сардэчна-сасудзістых захворваньняў незалежна ад іншых фактараў.}
+\infobox{Варожасьць і недружалюбнасьць павялічваюць сьмяротнасьць ад сардэчна-сасудзістых захворваньняў незалежна ад іншых фактараў.}
 
 Пры адзіноце мозг пачынае менш актыўна рэагаваць на станоўчыя стымулы і становіцца больш адчувальны да нэгатыўных, што пагаршае стрэсаўстойлівасьць. Самотным людзям трэба болей часу, каб заснуць, яны часьцей прачынаюцца ноччу і менш глыбока сьпяць. Нават невялікая размова зь незнаёмцамі або малазнаёмымі людзьмі зьніжае ўзровень стрэсу; павелічэньне колькасьці нават слабых сацыяльных сувязяў~--- напрыклад, прадавец крамы або сусед па доме,~--- дабратворна ўплывае на стрэсаўстойлівасьць і ўзровень шчасьця. А вось вварожасьць і непрыязь павялічваюць сьмяротнасьць ад сардэчна-сасудзістых захворваньняў незалежна ад іншых чыньнікаў. 
 
-\subsection*{Соцыюм і актыўнае даўгалецьце.}
+\subsection*{Соцыюм і актыўнае даўгалецьце}
 
 У доўгажыхароў Акінавы ёсьць такія традыцыі, як мааі, юімару, наараі.
 
@@ -150,7 +150,7 @@
 
 Цікавым прыкладам зьяўляецца і эфэкт Разэта. Гэта горад, заснаваны італьянскімі мігрантамі ў~Пэнсільваніі. Разэта прыцягнуў увагу дасьледнікаў нізкім узроўнем сардэчна-сасудзістых захворваньняў~--- удвая меншым, чым у~цэлым па ЗША. Дасьледаваньні паказалі, што \textbf{асаблівых адрозьненьняў у~ладзе жыцьця ў~жыхароў няма, за выключэньнем дзіўнай арганізацыі сацыяльнага жыцьця}: 22 грамадскія арганізацыі ў~мястэчку на 2000 чалавек, дух раўнапраўя і роўнасьці, вялікія сем'і з~традыцыямі павагі старэйшых, клопат жыхароў адно пра аднаго і адчуваньне згуртаваньня і адзінства.
 
-\subsection*{Узровень даходу.}
+\subsection*{Узровень даходу}
 
 Ваш сярэдні даход роўны сярэдняму арыфмэтычнаму даходу найбольш значных для вас людзей у~вашым асяродзьдзі. Калі вы ў~сярэдняй траціне вашых сяброў па даходзе, то ваша імавернасьць больш зарабляць у~бліжэйшыя гады высокая, а~калі вы ў~верхняй траціне~--- то шанцы падняць свой даход памяншаюцца ў~шмат разоў. Забясьпечаныя сябры аўтаматычна стымулююць вас зарабляць больш, пры гэтым лепей каб яны былі багацейшымі за вас, скажам, ня ў~тысячу, а~ў два разы.
 
@@ -175,11 +175,11 @@
 
 \emph{Калі мозгу бракуе камунікацыі, ён гатовы занурыцца ў~бульварныя плёткі. Але ці сапраўды вам трэба ведаць розныя фэйкавыя «зорныя» навіны?! Камунікацыя з~рэальнымі людзьмі нашмат карысьнейшая для здароўя.}
 
-\tipbox{Кожная сувязь характарызуецца сваёй «сілай»: чым больш працяглыя стасункі, чым вышэйшая эмацыйная блізкасьць, давер і чым часьцей мы робім адно аднаму ўзаемныя паслугі, тым мацнейшая сувязь. Але вялікае значэньне маюць і ``слабыя'' сувязі.}
+\infobox{Кожная сувязь характарызуецца сваёй «сілай»: чым больш працяглыя стасункі, чым вышэйшая эмацыйная блізкасьць, давер і чым часьцей мы робім адно аднаму ўзаемныя паслугі, тым мацнейшая сувязь. Але вялікае значэньне маюць і ``слабыя'' сувязі.}
 
 \textbf{Слабыя сувязі}~--- гэта людзі, зь якімі мы сустракаемся, але не знаёмыя блізка: калегі, суседзі, прадаўцы, былыя аднаклясьнікі і да т.~п. Яны не зьяўляюцца нашымі сябрамі і адносяцца да іншых клястараў, і, такім парадкам, могуць даць нам доступ да новай інфармацыі, ідэй, знаёмстваў, магчымасьцяў і да таго ж прывесьці да пашырэньня нашага ўплыву. Гэтыя сувязі могуць быць значна больш разнастайнымі, плюралістычнымі, і мы можам падтрымліваць тысячы такіх «слабых» сацыяльных сувязяў.
 
-\subsection*{Як павялічыць свой сацыяльны капітал.}
+\subsection*{Як павялічыць свой сацыяльны капітал}
 
 Вядома, ня варта хадзіць і высільвацца, каб з~кім-небудзь пасябраваць, калі ўжо гэта карысна для здароўя. Аднавіць старую сувязь лягчэй, чым выбудаваць новую: складзіце сьпіс добрых знаёмых, якія выпалі з~поля ўвагі, і аднавіце гэтыя адносіны. Знаёміцца~--- гэта навык, які трэніруецца гэтак жа, як іншыя навыкі. Пра гэта напісаныя кнігі, ёсьць курсы камунікацыі і прамоўніцкага майстэрства. Калі вам замінаюць псыхалягічныя праблемы, то дапаможа псыхатэрапія. Навык прыходзіць і ўмацоўваецца толькі з~практыкай, таму трэніруйцеся ўсюды, дзе будзе дарэчы знаёміцца і ўступаць у~кантакт.
 
@@ -187,23 +187,23 @@
 
 Нашыя сацыяльныя сувязі~--- гэта наш сацыяльны капітал, сукупнасьць псыхалягічных стасункаў, якія спрыяюць павышэньню дабрабыту. Чым больш у~вас якасных сацыяльных сувязяў, тым большыя вашыя рэсурсы і шырэйшыя магчымасьці.
 
-\tipbox{Зьбіраць карысныя знаёмствы, весьці базу дадзеных, адзначаючы розныя дэталі пра людзей як для моцных, так і для слабых сувязяў,~--- гэта добрая ідэя.}
+\infobox{Зьбіраць карысныя знаёмствы, весьці базу дадзеных, адзначаючы розныя дэталі пра людзей як для моцных, так і для слабых сувязяў,~--- гэта добрая ідэя.}
 
 Знаёмце адно з~адным сваіх сяброў, бо чым шчыльнейшая сацыяльная сетка, тым яна эфэктыўнейшая. Новыя знаёмствы вы можаце завесьці, уступіўшы ў~цікавыя вам суполкі, грамадзкія арганізацыі, клюб выпускнікоў, адукацыйныя курсы або заняўшыся новымі праектамі на працы. Карысна знаёміцца з~тымі, хто сам зьвязаны зь вялікай колькасьцю людзей, напрыклад з~палітыкамі, блогерамі, рэстаратарамі, спартоўцамі, акторамі, грамадзкімі дзеячамі, піяршчыкамі, журналістамі і да т.~п. Знаёмцеся і камунікуйце ў~кавярнях, рэстарацыях, на спартовых занятках, канфэрэнцыях, канцэртах, працы.
 
 \textbf{Сацыяльныя сеткі}~--- гэта зручны інструмэнт для нэтворкінгу. Шмат разоў я спачатку знаёміўся і камунікаваў анляйн, а~сустракаўся асабіста толькі празь месяцы ці нават гады камунікацыі. Знайсьці цікавых вам людзей можна і ў~коле вашых знаёмых, і сярод падпісантаў спэцыялізаваных суполак. Камунікуючы, камэнтуючы нататкі і артыкулы, уступаючы ў~дыскусіі, вы можаце лёгка знайсьці аднадумцаў.
 
-\subsection*{Знаёмцеся мэтанакіравана.}
+\subsection*{Знаёмцеся мэтанакіравана}
 
 Не пускайце знаёмствы на самацёк: складзіце сьпіс тых людзей, з~кім хацелі б пазнаёміцца, а~калі ідзяце на канфэрэнцыю ці мерапрыемства, то загадзя зьбярыце інфармацыю пра тых, хто там будзе. Бо любому чалавеку прыемна, калі ім цікавяцца і абмяркоўваюць важныя для яго тэмы.
 
-\subsection*{Будзьце карысныя.}
+\subsection*{Будзьце карысныя}
 
 Спытайце сябе, чым я магу быць карысны сябру? У чым яго выгада ад камунікацыі са мной? Дапамагайце іншым у~дасягненьні іх мэтаў. Не чакайце рэакцыі ў~адказ або падзякі, шукайце, як вы можаце зрабіць іншых людзей больш шчасьлівымі. Шчодрасьць~--- гэта ключ да камунікацыі і посьпеху. Навучаючы іншых, ствараючы супольнасьць, вы таксама дапамагаеце іншым і ўтвараеце моцныя сувязі. Радуйцеся вашым сябрам, натхняйцеся імі, дзякуйце, у~тым ліку і публічна. Бо людзі запамінаюць ня тое, што вы сказалі, а~тое, як яны сябе адчувалі ў~камунікацыі з~вамі.
 
 \emph{Як заўважыў Оскар Уайльд, «усе спачуваюць няшчасьцям сваіх сяброў, ды толькі нямногія цешацца іх посьпехам».}
 
-\subsection*{Знаходзьце час для падтрыманьня сувязяў.}
+\subsection*{Знаходзьце час для падтрыманьня сувязяў}
 
 «Сардэчны сябар не народзіцца раптам»~--- кажа народная мудрасьць: адносіны важна паглыбляць і падтрымліваць. Тут важнейшая якасьць, а~ня колькасьць часу, калі вы сумесна перажываеце эмоцыі і нешта робіце разам. Нагадвайце пра сябе рознымі спосабамі: віншуйце, дзякуйце, дзяліцеся карысным. Лічыцца, што трэба ня менш за тры кантакты, каб чалавек вас запомніў.
 
@@ -211,7 +211,7 @@
 
 \textbf{Сям'я} можа стаць як крыніцай неймавернай падтрымкі, так і разбуральнай сілай. Таму выбар мужа ці жонці, выхаваньне дзяцей, адносіны з~бацькамі і сваякамі павінны стаць важнай часткай жыцьця. Калі выбудаваць здаровыя адносіны, яны будуць вельмі карысныя для нас: клопат, падтрымка, любоў, каханьне, адчуваньне, што ў~табе маюць патрэбу,~--- гэта магутныя стымулы жыць даўжэй і лепш. Сем'і, дзе муж і жонка нешчасьлівыя адно з~адным, толькі пагаршаюць здароўе і кароцяць жыцьцё. Развод, сьмерць мужа/жонкі значна павялічваюць рызыку хваробаў сэрца. 
 
-\tipbox{Добры шлюб падаўжае жыцьцё мужчынаў на 7 гадоў, а~жанчынаў~--- на 2 гады. Няшчасны шлюб пагаршае здароўе абаіх сужэнцаў.}
+\infobox{Добры шлюб падаўжае жыцьцё мужчынаў на 7 гадоў, а~жанчынаў~--- на 2 гады. Няшчасны шлюб пагаршае здароўе абаіх сужэнцаў.}
 
 У краінах, дзе шмат доўгажыхароў, сям'ю ставяць на першае месца, надаюць вялікае значэньне сямейным каштоўнасьцям, падтрымліваюць блізкіх, памятаюць і шануюць продкаў, рэгулярна наведваюць бацькоў. У вялікіх сем'ях пажылыя людзі, якія жывуць сумесна зь дзецьмі, лепш харчуюцца, больш актыўнічаюць і радзей хварэюць.
 
@@ -252,13 +252,13 @@
 
 Філёзафы ў~Атэнах, кіраўнікі і псыхолягі ў~Вэне~--- таленты заўсёды былі сканцэнтраваныя лякальна, у~межах адных школ або гарадоў. Многія геніяльныя навукоўцы, пісьменьнікі, музыкі, прадпрымальнікі былі знаёмыя адно з~адным, абменьваліся ідэямі і шчыльна камунікавалі. Таму найлепшы спосаб прасунуцца да сваёй мэты~--- быць фізычна бліжэй да месца, дзе ў~вас зьявіцца больш настаўнікаў і аднадумцаў. Хочаце стаць акторам? Адпраўляйцеся ў~Галівуд і ўладкоўвайцеся хаця б прыбіральнікам.
 
-\subsection*{На што можа паўплываць атачэньне.}
+\subsection*{На што можа паўплываць атачэньне}
 
 Нашыя сувязі зь іншымі людзьмі залежаць ад іх сувязяў і гэтак далей. Даведзена, што на нас могуць уплываць сябры сяброў нашых сяброў. Можна ўявіць, што мы~--- як клетка сацыяльнага макраарганізма, своеасаблівага рою, па зьвёнах якога распаўсюджваюцца ідэі і звычкі. Дасьледаваньні паказалі, што, калі людзі пачынаюць набіраць вагу, іх сябры на 20\,\% набіраюць лішнія кіло, а~сябры сяброў~--- у~сярэднім на 10\,\%. Такое сацыяльнае заражэньне адбываецца неўсьвядомлена, мы проста схільныя капіяваць звычкі. Калі нашыя сябры пачынаюць часьцей есьці больш калярыйную ежу, мы «заражаемся» гэтым прыкладам.
 
 \textbf{Сацыяльнае заражэньне}~--- гэта калі чалавек мяняе свае паводзіны пад узьдзеяньнем навакольных людзей, пры гэтым ён капіюе ня толькі ідэі, але й спосабы іх рэалізацыі. Эвалюцыйны навык капіяваць эмоцыі быў магутным і карысным мэханізмам выжываньня, важным для каардынацыі групы. Чым больш згуртавана мы дзеялі на паляваньні і пры абароне ад ворагаў, тым вышэй была імавернасьць выжыць. Нашы люстраныя нэўроны капіююць стрэс, радасьць ды іншыя эмоцыі.
 
-\tipbox{Перайманьне закладзена ў нашы інстынкты: мы ўсьміхаемся ў адказ на ўсьмешку, хмурымся, убачыўшы хмурнага чалавека, пазяхаем, калі бачым які пазяхае.}
+\infobox{Перайманьне закладзена ў нашы інстынкты: мы ўсьміхаемся ў адказ на ўсьмешку, хмурымся, убачыўшы хмурнага чалавека, пазяхаем, калі бачым які пазяхае.}
 
 Сацыяльнае «заражэньне» распаўсюджваецца на мноства станаў: дэпрэсія, рызыка суіцыду, атлусьценьне, алькагалізм, курэньне, шлюб, дзеці, развод, узровень прыбытку і інш. Адна лыжка дзёгцю псуе бочку мёду~--- і напраўду, мы часта капіюем дзеі іншных, спрыяючы распаўсюджваньню звычкі або ідэі па ўсіх сваіх сацыяльных сувязях. Цікава, што мы можам нават не разумець сапраўдных прычынаў сваіх паводзінаў. Нам здаецца, што гэта нашае асабістае рашэньне, але гэта адно перайманьне.
 
@@ -272,11 +272,11 @@
 
 \textbf{Ваш настрой уплывае на іншых: прыйдучы да працы ці вярнуўшыся дахаты, прывядзіце сябе ў норму, надайце час псыхалягічнай гігіене. Гэта важна ня толькі для вас, але й для вашых блізкіх.}
 
-\subsection*{З кім ты ясі.}
+\subsection*{З кім ты ясі}
 
 Узьдзейнічаюць на нас і хуткаплынныя кантакты: напрыклад, калі ў~рэстаране ў~афіцыянта залішняя вага, то людзі звычайна зьядаюць больш, у~4 разы часьцей замаўляюць дэсерт і на 17\,\% часьцей алькаголь. Наш мозг схільны прыдумляць гісторыі, зьвязваючы ўсе факты навокал: калі ўсё вакол тоўстыя, то, магчыма, і табе варта назапасіць некалькі кіляграмаў, бо ``быць як усе''~--- гэта камфортна для мозгу і, як ён лічыць, важна для выжываньня. За апошнія два гады жыхары ЗША сталі на 62\,\% часьцей абедаць адны. Добра гэта ці дрэнна? З аднаго боку, пераяданьне сацыяльна заразнае: калі ваш блізкі сябар пакутуе на атлусьценьне, рызыка лішняй вагі ў~вас павялічваецца на 171\,\%, а~імавернасьць своечасова спыніцца ў~час яды ў~кампаніі зьмяншаецца на 60\,\%. Многія людзі знаёмыя з~гэтым эфэктам не па чутках.
 
-\tipbox{У пажылых мужчынаў ежа ў~адзіноце (пры наяўнасьці сям'і) у~2,4 разы павялічвае рызыку дэпрэсіі і на 50\,\% рызыку сьмерці.}
+\infobox{У пажылых мужчынаў ежа ў~адзіноце (пры наяўнасьці сям'і) у~2,4 разы павялічвае рызыку дэпрэсіі і на 50\,\% рызыку сьмерці.}
 
 Зь іншага боку, яда ў~атачэньні сям'і і блізкіх аказвае магутны ахоўны эфэкт. У цэлым, у~коле сям'і і блізкіх мы ямо менш, але хутчэй, а~ў кампаніі~--- больш, але павольней. Акрамя гэтага, яда ў~коле сям'і і сяброў зьяўляецца магутным інструмэнтам згуртоўваньня, выхаваньня, станоўча ўплывае і на пасьпяховасьць у~школе, і на колькасьць зьяданай гародніны.
 
@@ -301,7 +301,7 @@
 
 \textbf{Эмацыйны інтэлект.} Пачынаецца разьвіцьцё эмацыйнага інтэлекту з~усьвядомленасьці і ўменьня разумець і выяўляць свае эмоцыі. Людзі зь нізкім эмацыйным інтэлектам пакутуюць ад няўпэўненасьці, самакрытычнасьці і ня могуць эфэктыўна ўзаемадзейнічаць з~навакольнымі. Чым лепш вы разумееце самі сябе і дакладней сыгналізуеце аб сваіх намерах іншым, тым лягчэй вас зразумець і прыемней з~вамі размаўляць. Гэта спрыяе зьяўленьню пачуцьця агульнасьці і эфэктыўнай сумеснай рабоце.
 
-\tipbox{Эмацыйную пісьменнасьць можна ўмоўна падзяліць на 4 часткі: усьведамленьне сваіх пачуцьцяў, кіраваньне эмоцыямі, суперажываньне, эмацыйная інтэрактыўнасьць.}
+\infobox{Эмацыйную пісьменнасьць можна ўмоўна падзяліць на 4 часткі: усьведамленьне сваіх пачуцьцяў, кіраваньне эмоцыямі, суперажываньне, эмацыйная інтэрактыўнасьць.}
 
 \textbf{Уважлівасьць.} У кожным з~нас ёсьць мэханізм разуменьня іншых людзей: мы ўмеем адрозьніваць падман, дакладна ацэньваем людзей, можам бачыць, як яны рэагуюць на нашы словы, і мяняць свой стыль камунікацыі так, каб навакольным было прыемна з~намі размаўляць. Калі мы няўважлівыя да іншых людзей, то не атрымліваем ад іх зваротнай сувязі і нам цяжка палепшыць эфэктыўнасьць камунікацыі. 
 
@@ -323,7 +323,7 @@
 
 \textbf{Навучыцеся слухаць.} Філёзаф Фрэнсіс Бэкан заўважыў: «Мужчына ўжо напалову закаханы ў~кожную жанчыну, якая слухае, як ён гаворыць». Вы можаце прыкметна палепшыць свае сацыяльныя навыкі, калі навучыцеся актыўна слухаць суразмоўцу. Асабліва ўважліва мы павінны слухаць важнага нам чалавека, перадусім калі ён адчувае моцную эмоцыю або калі ёсьць рызыка ўзьнікненьня непаразуменьняў.
 
-\tipbox{Шчырая ўвага ня толькі паляпшае разуменьне, гэта яшчэ і найлепшы камплімэнт. Спытайце сябе: ці адкрыты вы да суразмоўцы, ці адчуваеце да яго цікавасьць?}
+\infobox{Шчырая ўвага ня толькі паляпшае разуменьне, гэта яшчэ і найлепшы камплімэнт. Спытайце сябе: ці адкрыты вы да суразмоўцы, ці адчуваеце да яго цікавасьць?}
 
 \emph{Слухаючы суразмоўцу, я заўсёды імкнуся сфакусавацца на ім, зразумець як мага глыбей ня толькі яго маўленьне, але й эмоцыі і невэрбаліку. Калі я вучыўся ў~мэдыцынскім унівэрсытэце, то выявіў цікаўны пабочны эфэкт гэтай звычкі~--- нават калі я не размаўляў з~выкладчыкам, але ўважліва слухаў яго на занятках і лекцыях, то ён па змоўчаньні пачынаў лічыць мяне разумным і кемлівым яшчэ да таго, як я адкрываў рот на іспыце.}
 
@@ -337,7 +337,7 @@
 
 \textbf{Трэніруйце эмоцыі.} Важна ня толькі разумець, але яшчэ і дакладна выяўляць свае эмоцыі. Складзіце сьпіс эмоцыяў і паспрабуйце іх прымерыць на сябе, як быццам розныя строі. Трэніруйцеся зь люстэркам~--- так вы можаце ярчэй зразумець міміку і невэрбаліку.
 
-\tipbox{Чым большы спэктар эмоцыяў і чым дакладней вы іх выражаеце, тым лягчэй вам будзе іх заўважаць не адно ў~сябе, але й у~іншых людзей.}
+\infobox{Чым большы спэктар эмоцыяў і чым дакладней вы іх выражаеце, тым лягчэй вам будзе іх заўважаць не адно ў~сябе, але й у~іншых людзей.}
 
 Паспрабуйце ў~адной эмоцыі абраць найболей пасоўны і прыгожы спосаб яе выразу: зьбярыце фота вашых усьмешак ці вашага суму і прапануйце сябрам вызначыць эмоцыю. Калі яны памыляюцца, значыць, вы недакладна выяўляеце свае эмоцыі і можаце быць няслушна зразуметыя навакольнымі. Навучыцца адчуваць нэгатыўныя эмоцыі таксама важна~--- гэта дапаможа вам быць больш стрыманымі і канструктыўней рэагаваць.
 
@@ -351,7 +351,7 @@
 
 \textbf{Прасіце аб дапамозе.} Уменьне зьвяртацца па дапамогу вельмі важнае, бо нашыя сацыяльныя сувязі сапраўды могуць нам дапамагчы~--- эмацыйна, інфармацыйна і мноствам іншых спосабаў. Ня бойцеся прасіць аб гэтым, бо для многіх людзей пасільная дапамога сапраўды прыемная, і яны з~задавальненьнем паспрыяюць вырашэньню вашых праблемаў. Прасіце правільна: знайдзіце чалавека, прыцягніце яго ўвагу і выразна апішыце вашу праблему. Выкажыце свае пачуцьці адносна гэтай сытуацыі, удакладніце, чаго б вы хацелі. І затым апішыце магчымыя наступствы. Калі вам дапамагаюць, прымайце гэта годна, падкрэсьліце ролю чалавека і важнасьць яго ўдзелу, дзякуйце.
 
-\tipbox{Вы і вашыя знаёмыя фармуеце сыстэму ўзаемных сувязяў~--- калі ўсе яе ўдзельнікі адчуваюць неабходнасьць адно ў~адным, гэта ўзбагачае кожнага з~вас.}
+\infobox{Вы і вашыя знаёмыя фармуеце сыстэму ўзаемных сувязяў~--- калі ўсе яе ўдзельнікі адчуваюць неабходнасьць адно ў~адным, гэта ўзбагачае кожнага з~вас.}
 
 \textbf{Позірк вочы ў~вочы і аксытацын.} У наш век смартфонаў мы глядзім адно на аднаго нашмат менш. Хочацца, каб мы падарылі сваім каханым і блізкім нешта большае, чым падарункі~--- падарылі ім свой чысты час, сваю шчырую ўвагу і позірк вочы-ў-вочы. Нашыя вочы створаныя для камунікацыі. Белая цьвердавіца чалавечага вока разьвілася зь неабходнасьці адсочваць рухі вачэй і кірунак позірку. Людзі валодаюць найбольшымі суадносінамі адкрытай цьвердавіцы ў~контуры вока, і наш контур вачэй гарызантальна падоўжаны. 
 
@@ -404,7 +404,7 @@
 
 \textbf{Абараняйце свае межы.} Псыхалягічныя межы падобныя межам клетак арганізма: яны прапускаюць карысныя рэчывы і блякуюць пранікненьне шкодных. Абарона асабістых межаў~--- гэта сьвядомы допуск іншых людзей да ўнутраных перажываньняў, і толькі вы вырашаеце, хто, як і калі будзе з~вамі ўзаемадзейнічаць. Важна дакладна выяўляць свае (не)жаданьні і ўмець адмаўляць, казаць ``не'' экалягічна і своечасова.
 
-\tipbox{Не прымушайце сябе выслухоўваць нецікавыя рэчы, умейце выразна паказваць, калі вам нешта ня трэба ці некарысна.}
+\infobox{Не прымушайце сябе выслухоўваць нецікавыя рэчы, умейце выразна паказваць, калі вам нешта ня трэба ці некарысна.}
 
 Вучыцеся адсочваць, калі нехта спрабуе прымусіць вас нешта зрабіць рознымі спосабамі: маніпулюючы пачуцьцём віны, прымушаючы, запалохваючы і да т.~п. Калі людзі не прымаюць вашыя ўмовы камунікацыі ды ігнаруюць вашыя запыты~--- спыняйце такую камунікацыю. Здаровыя межы абараняюць ад залежных адносінаў і дазваляюць не прымаць адказнасьць за тое, як сябе паводзяць ці пачуваюцца іншыя людзі. Ня бойцеся наступстваў адмовы, што на вас прытояць нейкую крыўду ці што бяз вас усё пойдзе ў~глум~--- гэта перабольшаньні.
 
@@ -414,7 +414,7 @@
 
 \textbf{Выкладайцеся максімальна ў~сваіх межах.} Галоўнае~--- не мяжа, а~тое, што ўнутры. Для таго каб межы функцыянавалі аптымальна, важна ўмець самастойна вырашаць бягучыя задачы, спраўляцца з~эмацыйнымі выклікамі, рэгуляваць свой стан. На жаль, многія людзі так і не пераадолелі інфантыльнасьць, таму замест вырашэньня сваіх праблемаў чакаюць, што нехта прыйдзе і вырашыць іх пытаньні. Многія людзі маюць настолькі слабыя межы, ажно амаль зьліваюцца з~навакольнымі, чакаючы ад іх дапамогі і дзеяў, і жывуць у~пошуку ``збаўцы''. Чым больш абавязкаў або чаканьняў вы перакладаеце на іншых людзей, тым больш гэта забірае сілаў у~вас: даводзіцца ўпрошваць, ціснуць ці маніпуляваць для атрыманьня жаданага.
 
-\tipbox{Маніпуляцыі не працуюць, толькі вы самі можаце сябе па-сапраўднаму выратаваць~--- хоць бы як багор Мюнхгаўзэн, які выцягнуў сябе за валасы з~багны.}
+\infobox{Маніпуляцыі не працуюць, толькі вы самі можаце сябе па-сапраўднаму выратаваць~--- хоць бы як багор Мюнхгаўзэн, які выцягнуў сябе за валасы з~багны.}
 
 \textbf{Будзьце сьціплыя.} Разуменьне сваіх межаў і абмежаваньняў дазваляе ставіць сабе задачы, адэкватныя вашым сілам. Сьціпласьць~--- гэта ўсьведамленьне і кантроль тых рэсурсаў, якімі вы валодаеце ў~сапраўдны момант, то бок мы жывём ``па сродках'', а~ня просім ці патрабуем дапамогі. Розныя ілюзіі адносна сябе і сваіх магчымасьцяў і псыхалягічныя абароны размываюць і затуманьваюць межы. Самаацэнка многіх людзей не зьяўляецца прадуктам іх унутранага локусу і задавальненьня ад зробленай працы, а~завязаная толькі на іншых людзях. Калі вы ня можаце хваліць сябе, то пачынаеце жыць дзеля пахвалы іншых. 
 
@@ -445,11 +445,11 @@
 
 У закрытых групах высокі сацыяльны кантроль, гэта абрывае іншыя сувязі і абмяжоўвае вас. Больш за тое, у~групе могуць пачаць распаўсюджвацца свае небясьпечныя правілы, якія ігнаруюць грамадзкія нормы: часта групавая салідарнасьць толькі ўмацоўвае намер жыць насуперак астатняму грамадзтву. Павышэньне даверу ўнутры такой групы зьніжае давер да навакольнага сьвету. Многія сэкты і закрытыя супольнасьці небясьпечныя для сваіх удзельнікаў.
 
-\subsection*{Статкавы інстынкт.}
+\subsection*{Статкавы інстынкт}
 
 Для захаваньня ўстойлівасьці і аўтаноміі вельмі важна вытрымліваць сацыяльны ціск і ўмець супраціўляцца статкаваму інстынкту. Для нашага мозгу адрозьнівацца ад навакольных~--- гэта паводзінная памылка. Мозг заўжды дае нам зразумець, калі нашы дзеяньні ці меркаваньні супярэчаць навакольным, і мы пачуваемся вельмі некамфортна. А вось зьмена меркаваньня на агульнапрынятае прыносіць палягчэньне~--- але ня факт, што гэта правільна.
 
-\tipbox{У працэсе эвалюцыі, калі вонкавыя ўмовы былі пастаяннымі, адхіленьне ад паводзінаў групы магло каштаваць жыцьця: усе бягуць~--- і я бягу, усе выжылі ці ўсе загінулі.}
+\infobox{У працэсе эвалюцыі, калі вонкавыя ўмовы былі пастаяннымі, адхіленьне ад паводзінаў групы магло каштаваць жыцьця: усе бягуць~--- і я бягу, усе выжылі ці ўсе загінулі.}
 
 Таму ў~стабільных умовах або сыстэмах меркаваньне большасьці можа быць слушным. Напрыклад, эмоцыі людзей не мяняюцца, таму антычныя кнігі да гэтага часу нам цікавыя і ўтрымліваюць мноства карысных для нас ідэй. А вось калі асяродзьдзе новае ці хутказьменлівае, тут канфармізм будзе зусім не адаптыўны.
 
@@ -461,7 +461,7 @@
 
 Важна памятаць: мы маем права ставіць свае інтарэсы вышэй за інтарэсы іншых людзей (не кранаючы пры гэтым іх асабістыя межы), мы маем права памыляцца і адчуваць самыя розныя пачуцьці, нават калі грамадзкая думка вызначае іх як «сацыяльна непрымальныя». Прызнавайцеся сабе шчыра, калі вы ўзрушаныя або злуяцеся. Мы можам і нават абавязаныя мяняць сваё меркаваньне, калі адкрыліся дадатковыя абставіны, і паважаць меркаваньне большасьці ці паважаных чальцоў грамадзтва мы павінны не таму, што яны паважаныя ці іх большасьць, а~з аб'ектыўных аргумэнтаў.
 
-\subsection*{Таксічныя людзі.}
+\subsection*{Таксічныя людзі}
 
 Чым больш людзей лезе ў~ваша жыцьцё, тым хутчэй яно дае расколіну: сапраўды, у~сьвеце ёсьць вялікая колькасьць людзей, якія імкнуцца, сьвядома ці неўсьвядомлена, парушаць межы навакольных, маніпуляваць эмоцыямі, палохаць або зьневажаць. Для абароны~--- перахапляйце кантроль у~размове, мяняйце тэму, гаварыце пра суразмоўцу, а~не пра сябе. Можна выкарыстаць вядомы аргумэнт прафэсара Праабражэнскага: ``Проста не хачу''. Не пускайцеся ў~тлумачэньні~--- маніпулятары прымаюць гэта за праяву слабасьці. Дасьледаваньні паказалі, што калі ўкараніць у~каманду аднаго чалавека зь неканструктыўнымі паводзінамі, то яе эфэктыўнасьць упадзе на 30--40\,\%. Таму важная ня толькі наяўнасьць моцных удзельнікаў, але й адсутнасьць слабых. Сярод людзей, зь якімі вы камунікуеце, адзначце тых, зносіны зь якімі робяць вас шчасьлівымі і натхняюць, і тых, хто толькі выцягвае вашу энэргію. Заплянуйце канкрэтныя крокі, каб павялічыць час камунікацыі зь першымі, а~з другімі~--- максімальна скараціць і фармалізаваць.
 
@@ -469,7 +469,7 @@
 
 Калі крытыка дэструктыўная, то не ўзмацняйце праблему, абараняючыся ці крытыкуючы апанента. Бо крытыкаваць вас могуць і не за справу, а~толькі спрабуючы зацьвердзіцца за ваш кошт. Вы можаце перапыніць размову, падкрэсьліць нязгоду ці сказаць, што ў~вольны час падумаеце над пачутым. А калі вам камфортней~--- можаце і праігнараваць сказанае. Калі вы сапраўды памыліліся, то прызнайце віну і выбачыцеся. Падзякуйце за заўвагу і падрабязна распытайце чалавека. Так ці інакш, вы маеце права на памылку: не памыляецца толькі той, хто нічога ня робіць. А ўменьне сумленна прызнаць свае памылкі і выправіць іх~--- гэта рыса сапраўды ўпэўненага ў~сябе чалавека.
 
-\tipbox{Сярод людзей, зь якімі вы маеце зносіны, адзначце тых, камунікаваньне зь якімі робіць вас шчасьлівей і натхняе, і тых, хто толькі выцягвае вашу энэргію. Заплянуйце пэўныя крокі, каб павялічыць час камунікаваньня зь першымі, а з другімі~--- максымальнае скараціць і фармалізаваць.}
+\infobox{Сярод людзей, зь якімі вы маеце зносіны, адзначце тых, камунікаваньне зь якімі робіць вас шчасьлівей і натхняе, і тых, хто толькі выцягвае вашу энэргію. Заплянуйце пэўныя крокі, каб павялічыць час камунікаваньня зь першымі, а з другімі~--- максымальнае скараціць і фармалізаваць.}
 
 \textbf{Фэномэн падпарадкаваньня.} Навукоўцы лічаць, што схільнасьць да падпарадкаваньня сфармавалася ў~працэсе эвалюцыі і закладзена ў~нас генэтычна, бо выжывалі найбольш зладжаныя групы, якія падпарадкоўваюцца сваім лідэрам. Наогул падпарадкаваньне аўтарытэту, няхай гэта будзе старэйшыя па ўзросьце людзі, бацькі, прадстаўнікі ўлады ці рэлігіі, лічыцца дабрадзейнасьцю і выхоўваецца з~самага дзяцінства ў~пераважнай большасьці культур. Апроч эвалюцыйнай схільнасьці, мы праходзім велізарную школу падпарадкаваньня ў~дзіцячым садку, школе, войску. Усе гэтыя структуры, так ці інакш, прымушаюць душыць свае жаданьні і імпульсы, абясцэньваюць уласную думку і ініцыятыву. Магчыма, ніхто спэцыяльна такой мэты ня ставіць, але ў~сукупнасьці ўсе выхаваўчыя сродкі моцна душаць волю чалавека. \textbf{У выніку многія дарослыя людзі аўтаматычна падпарадкоўваюцца любому, хто ўяўляецца ім аўтарытэтам.}
 
@@ -477,7 +477,7 @@
 
 \textbf{Чым вышэйшая схільнасьць згаджацца}, тым вышэйшая рызыка злоўжываньня ўладай, карупцыі і скажэньня рэальнасьці. Лідэр, які звыкся дамагацца сьляпога падпарадкаваньня, неўзабаве губляе сувязь з~рэальнасьцю і, пазбавіўшыся зваротнай сувязі, пачынае рабіць усё больш памылак. Калі лідэр бярэ ўсю адказнасьць і ініцыятыву на сябе, то яго падначаленыя, адпаведна, будуць паводзіць сябе безадказна і безыніцыятыўна. 
 
-\tipbox{Маўклівая згода большасьці зьяўляецца тым грунтам, дзе гіне магчымасьць разьвіцьця: прымушаючы і запалохваючы, не чакайце ад працаўнікоў паляпшэньняў, ідэяў і прарыўных рашэньняў.}
+\infobox{Маўклівая згода большасьці зьяўляецца тым грунтам, дзе гіне магчымасьць разьвіцьця: прымушаючы і запалохваючы, не чакайце ад працаўнікоў паляпшэньняў, ідэяў і прарыўных рашэньняў.}
 
 Вядома, уменьне падпарадкоўвацца і дакладна выконваць распараджэньні вельмі важнае для эфэктыўнай працы складаных сыстэм. Без лідэра і адзінаначальля праца арганізацый і кампаній можа быць паралізаваная бясконцым абмеркаваньнем і аналізам. Але падпарадкаваньне павінна быць не сьляпым, а~ўсьвядомленым, а~ў процівагу павінен быць разьвіты навык усьвядомленага непадпарадкаваньня. 
 
@@ -491,7 +491,7 @@
 
 У паўсядзённым жыцьці чалавек з~уладай і аўтарытэтам можа прасіць ці патрабаваць, каб вы зрабілі нешта дрэннае, кіруючыся нават добрымі намерамі. Спытайце сябе, ці мае гэты аўтарытэт дастатковую кампэтэнтнасьць і ці легітымны ён? Выкананьне гэтага распараджэньня прынясе карысьць ці шкоду? Да ўсьвядомленага непадпарадкаваньня трэба падыходзіць творча: можна запытаць загад у~пісьмовым выглядзе або прыводзіць меркаваньне іншых аўтарытэтаў. Знаходзьце саюзьнікаў і пачынайце пярэчыць як мага раней, да фармулёўкі канкрэтнага заданьня ці загаду. Прымаючы рашэньне аб выкананьні, арыентуйцеся на вышэйшыя каштоўнасьці, не дазваляйце ветлівасьці ці субардынацыі прымусіць вас пагадзіцца. Удакладняйце загад, ацэньвайце яго бясьпеку, законнасьць і практычнасьць і прапануйце альтэрнатыўныя магчымасьці і сцэнары.
 
-\tipbox{Прымаючы рашэнне, не падпарадкоўвайцеся чужому аўтарытэту безумоўна. Пры гэтым заставайцеся ў~рамках правілаў і ветлівасьці, а~не пераходзіце ў~адкрыты бунт.}
+\infobox{Прымаючы рашэнне, не падпарадкоўвайцеся чужому аўтарытэту безумоўна. Пры гэтым заставайцеся ў~рамках правілаў і ветлівасьці, а~не пераходзіце ў~адкрыты бунт.}
 
 Як часта мы рабілі нешта не таму, што хацелі, а~таму, што нехта сказаў? Як бы нам ні хацелася перакласьці адказнасьць за дзеі на іншых, яна заўжды ляжыць на нас. Кошт падпарадкаваньня ў~нашым жыцьці нашмат вышэйшы, чым здаецца.
 
@@ -524,7 +524,7 @@
 
 \textbf{Знайдзіце настаўніка.} Настаўнік, як правіла, -- гэта добраахвотны дарадца ці настаўнік, які вядзе вас у~розных сфэрах жыцьця: трэнэр для спартоўца, дасьведчаны лекар для пачаткоўца, бізнэс-кансультант, асобасны коуч дапамагаюць у~самаразьвіцьці. Добры настаўнік, а~лепей некалькі,~--- гэта важны крок для разьвіцьця. Настаўнік дзеліцца ведамі, сувязямі, досьведам, матывуе, можа падбадзёрыць і зьберагчы ад памылак. Гэта чалавек, якім вы захапляецеся і хочаце ў~нечым быць да яго падобнымі. Знайдзіце найлепшых у~справе, у~якой вы імкняцеся стаць майстрам, і станьце ў~іх чаляднікам, знайдзіце тое, чым вы можаце быць для іх карысныя.
 
-\tipbox{Быць настаўнікам і мець настаўніка~--- гэта важныя складнікі сацыяльнага атачэньня.}
+\infobox{Быць настаўнікам і мець настаўніка~--- гэта важныя складнікі сацыяльнага атачэньня.}
 
 \textbf{Сацыяльны імунітэт.} Якому сацыяльнаму ўзьдзеяньню вы можаце пасьпяхова супрацьстаяць, а~што ня ў~сілах перамагчы? Прааналізуйце ваша атачэньне. У каго з~вашых блізкіх звычкі ці рысы, якіх вы хочаце пазбавіцца? У каго зь іх звычкі ці рысы, якія вы хочаце займець? Каго вы капіюеце? Ад каго вы ``заразіліся'' сваімі звычкамі? Чый эмацыянальны, інтэлектуальны ўплыў варта выключыць, паменшыць, павялічыць? Як вы ўплываеце на іншых? Які ў~вас прынцып адбору атачэньня? Якімі якасьцямі вы б хацелі, каб валодалі вашыя сябры і знаёмыя? Апішыце сваё ``ідэальнае атачэньне''. Якіх сяброў і якога ўплыву вам бракуе?
 
