--- a/willpower/chapter11.tex
+++ b/willpower/chapter11.tex
@@ -31,7 +31,7 @@
 
 Многія людзі лічаць, што ім бракуе кіслароду ў~памяшканьні або на вуліцы, хоць рэальная прычына нядужаньня, як правіла, зусім іншая~--- забруджваньне паветра або сындром гіпэрвэнтыляцыі (пачашчанае дыханьне пры стрэсе, якое можа прывесьці да галавакружэньня).
 
-\tipbox{Бруднае паветра~--- адзін з~самых небясьпечных шкоднасных чыньнікаў навакольнага асяродзьдзя.}
+\infobox{Бруднае паветра~--- адзін з~самых небясьпечных шкоднасных чыньнікаў навакольнага асяродзьдзя.}
 
 \emph{Сур'ёзнае навуковае вывучэньне шкоды бруднага паветра пачалося ў~1952 годзе, калі Лёндан накрыў смог ад спальваньня вугалю, што прывяло да тысячаў сьмерцяў. З таго часу чысьціня паветра стала рэгулявацца заканадаўча, але да вырашэньня праблемы нам далёка.}
 
@@ -47,7 +47,7 @@
 
 \textbf{Чым небясьпечна?} Бруднае паветра зьвязанае з~16\,\% усіх сьмерцяў, што практычна ў~15 разоў больш, чым гіне сёньня ва ўсім сьвеце ад войнаў і іншых формаў гвалту. Бруднае паветра скарачае працягласьць жыцьця больш чым на год. Высокі ўзровень часьціц PM2.5 адказны за 3\,\% усіх сардэчна-сасудзістых сьмерцяў і за 5\,\% сьмерцяў ад раку лёгкіх.
 
-\tipbox{У самых забруджаных гарадах вырашэньне праблемы магло б павялічыць чаканую працягласьць жыцьця на 20 месяцаў.}
+\infobox{У самых забруджаных гарадах вырашэньне праблемы магло б павялічыць чаканую працягласьць жыцьця на 20 месяцаў.}
 
 Бруднае паветра выклікае хуткія і павольныя зваротныя рэакцыі. Хуткая рэакцыя зьвязаная з~раздражненьнем рэцэптараў лёгкіх, а~павольны адказ~--- з~павелічэньнем ўзроўню хранічнага запаленьня і ўзроўню С-рэактыўнага бялку. Кожныя дадатковыя 5\,мкг/м\textsuperscript{3} часьціц на 1,3\,\% павялічваюць узровень С-рэактыўнага бялку. А запаленьне, як мы ведаем, павялічвае рызыку шматлікіх захворваньняў і паскарае старэньне, узмацняючы згусальнасьць крыві, павялічваючы канцэнтрацыю фібрынагену. Бруднае паветра зьвязанае з~павелічэньнем таўшчыні комплексу інтым-мэдыя (маркер прагрэсаваньня атэрасклерозу) і павялічвае рызыку інсульту і інфаркту. Таксама забруджваньне паветра павялічвае рызыку дыябэту, прыводзіць да зьніжэньня адчувальнасьці да інсуліну, пагаршае якасьць сну, зьніжае функцыі нырак.
 
@@ -55,7 +55,7 @@
 
 \textbf{Уплыў на мозг.} Бруднае паветра пагаршае кагнітыўныя здольнасьці і памяншае ўзровень шчасьця, уплывае на мозг, зьмяншае прадукцыйнасьць, мяняе наша стаўленьне да рызыкі, павялічвае агрэсію і, як вынік, злачыннасьць. Запаленьне ад бруднага паветра зьвязана з~рызыкай дэпрэсіі і суіцыду: павелічэньне забруджваньня паветра на 10\,мкг/м\textsuperscript{3} на працягу трох дзён павышала рызыку самагубства на 2\,\%. Пражываньне паблізу ажыўленых трасаў павялічвае рызыку нэўрадэгенэратыўных захворваньняў.
 
-\tipbox{Рызыка хваробы Альцгаймэра на 12\,\% вышэйшая ў~тых, хто жыве за 50 мэтраў ад дарогі, у~параўнаньні з~тымі, хто жыве на адлегласьці 200 і больш мэтраў. Пятая частка ўсіх выпадкаў захворваньняў можа быць выклікана брудным паветрам.}
+\infobox{Рызыка хваробы Альцгаймэра на 12\,\% вышэйшая ў~тых, хто жыве за 50 мэтраў ад дарогі, у~параўнаньні з~тымі, хто жыве на адлегласьці 200 і больш мэтраў. Пятая частка ўсіх выпадкаў захворваньняў можа быць выклікана брудным паветрам.}
 
 Асабліва адчувальныя да бруднага паветра дзеці, цяжарныя, старыя, людзі з~хранічнымі захворваньнямі. Часьціцы сажы могуць патрапіць нават у~пляцэнту~--- так, забруджваньне павялічвае рызыку заганаў разьвіцьця, выклікае затрымку росту і зьніжэньне аб'ёму мозгу ў~дзяцей, пагаршэньне іх псыхічнага здароўя, уключаючы рызыку дзіцячых дэпрэсій. У розных дасьледаваньнях бруднае паветра павялічвае рызыку аўтызму ад 12 да 76\,\%. Дасьледаваньні на жывёлах пацьвярджаюць, што пражываньне паблізу ажыўленых трасаў шкодзіць мозгу нашчадкаш яшчэ на раньніх стадыях разьвіцьця, павялічваючы ўзровень нэўразапаленьня.
 
@@ -82,7 +82,7 @@
 
 Аптымізуйце маршруты для прагулак і прабежак, выбірайце аддаленыя зялёныя вулачкі, гэта можа зьнізіць узьдзеяньне бруднага паветра на 50--60\,\%.
 
-\tipbox{Будзе выдатна, калі навігатары навучацца пракладаць ня толькі самы хуткі, але й самы ``зялёны'' маршрут.}
+\infobox{Будзе выдатна, калі навігатары навучацца пракладаць ня толькі самы хуткі, але й самы ``зялёны'' маршрут.}
 
 Гэтае правіла тычыцца і кіроўцаў, бо доўгая дарога за рулём і заторы павялічваюць рызыку ўдыханьня бруднага паветра. Не прыціскайце нос свайго аўтамабіля да выхлапной трубы машыны, якая стаіць наперадзе. У заторы лепш закрыць вокны і адключыць вэнтыляцыю салёна, гэта дазволіць зьменшыць забруджваньне ад суседніх машын. Па магчымасьці, менш карыстайцеся аўтамабілем у~гадзіну пік. У некаторых машынах, напрыклад у~Tesla, усталяваныя вельмі якасныя фільтры салёна, зьвяртайце на гэта ўвагу пры выбары і абслугоўваньні аўто.
 
@@ -96,11 +96,11 @@
 
 Часам людзі лічаць, што яны могуць «прывыкнуць» да бруднага паветра, як у~анекдоце: «Ды як вы можаце дыхаць такім паветрам?~--- А мы не зацягваемся!». Але гэта небясьпечная памылка. Нават калі вы ня бачыце забруджваньня, гэта ня значыць, што яно ня шкодзіць вам.
 
-\subsection*{У жылым памяшканьні.}
+\subsection*{У жылым памяшканьні}
 
 Дома мы праводзім шмат часу, таму важна забясьпечыць там аптымальную якасьць паветра~--- і гэта вам па сілах. Бо лёгкія могуць пасьпяваць чысьціцца, пакуль вы сьпіце і адпачываеце ад гарадзкога паветра. Прытокавая вэнтыляцыя з~функцыяй ачысткі дапамагае забясьпечыць паўнавартасную ачыстку і зьмену паветра. Калі вы выкарыстоўваеце кандыцыянэр, то яго трэба рэгулярна чысьціць і мяняць фільтры, інакш на іх могуць запасіцца бактэрыі і цьвіль, якія затым разносяцца па пакоі. Рэгулярна запускайце рэжым вэнтыляцыі, каб не размнажалася цьвіль.
 
-\tipbox{Заўсёды гатуйце ежу пры ўключанай выцяжцы, пазьбягайце залішне паліць сьвечкі ці араматычныя палачкі, не карыстайцеся аэразолямі і араматызатарамі.}
+\infobox{Заўсёды гатуйце ежу пры ўключанай выцяжцы, пазьбягайце залішне паліць сьвечкі ці араматычныя палачкі, не карыстайцеся аэразолямі і араматызатарамі.}
 
 Сачыце за тэхнічным станам награвальнікаў вады на газе, газавымі плітамі, абагравальнікамі і ўсімі прыборамі, дзе спальваецца паліва. Абмяжоўвайце колькасьць сынтэтычных мыйных сродкаў, лепш выкарыстоўваць ачыстку парай. Часьцей выносьце сьмецьце, трымайце бытавую хімію ў~старанна закаркаваных ёмістасьцях далей ад дзяцей.
 
@@ -121,7 +121,7 @@
 
 У офісах увесь час ідуць бітвы паміж тымі, каму душна, і тымі, хто баіцца скавышоў. Ёсьць людзі, якія асабліва гостра адчуваюць якасьць паветра, а~ёсьць тыя, хто баіцца сьвежага паветра. Мы ўжо пагаварылі пра важнасьць чыстага паветра на вуліцы, але вялікае значэньне мае паветра, якім вы дыхаеце дома і на працы. Паветра ў~памяшканьні часта ў~некалькі разоў бруднейшае, чым звонку. Калі мы заходзім з~вуліцы ў~памяшканьне, то можам адчуць сьпёртасьць паветра, але гэтае адчуваньне хутка зьнікае~--- мы да яго звыкаем. 
 
-\tipbox{Сьпёртасьць~--- гэта часта лішак вуглякіслага газу, які выдыхаюць людзі. Гэта нябачны, але шкодны ў~высокіх канцэнтрацыях чыньнік.}
+\infobox{Сьпёртасьць~--- гэта часта лішак вуглякіслага газу, які выдыхаюць людзі. Гэта нябачны, але шкодны ў~высокіх канцэнтрацыях чыньнік.}
 
 Сярэдняя канцэнтрацыя вуглякіслага газу (CO\textsubscript{2}) складае ў~вонкавым паветры 0,035\,\%, ці 350 ppm. Але ў~гарадах, дзе больш спальваньня паліва, яго канцэнтрацыя можа дасягаць і 500 ppm. Галоўная крыніца вуглякіслага газу ўнутры памяшканьняў~--- гэта мы самі. Кожны чалавек на кожным выдыху выдыхае паветра з~падвышаным утрыманьнем вуглякіслага газу, які ўтварыўся ў~выніку жыцьцядзейнасьці. Каб падтрымліваць узровень CO\textsubscript{2} на нармальных 800 ppm на аднаго чалавека ў~пакоі, патрабуецца вэнтыляцыя каля 34 м\textsuperscript{3}/гадзіну! Калі вокны і дзьверы зашпунтаваныя, а~вэнтыляцыя не працуе, то ўзровень CO\textsubscript{2} хутка пачне зашкальваць.
 
@@ -141,7 +141,7 @@
 
 \textbf{Прыток і адток паветра.} Неабходна забясьпечыць як прыток паветра, так і яго адток. Пры адсутнасьці аднаго ці іншага якасьць вэнтыляцыі падае. Эфэктыўнасьць выцяжкі праверыць лёгка~--- запаліце запалку і патушыце, дым ад яе павінен уцягвацца ў~адтуліну. У ідэале сіла выцяжкі павінна быць такой, каб утрымліваць аркуш паперы.
 
-\tipbox{Ветраньне дома дапамагае хутка ачысьціць паветра, але пры закрытых вокнах і адсутнасьці выцяжкі вуглякіслы газ за пару гадзінаў зноў назапасіцца да небясьпечных узроўняў.}
+\infobox{Ветраньне дома дапамагае хутка ачысьціць паветра, але пры закрытых вокнах і адсутнасьці выцяжкі вуглякіслы газ за пару гадзінаў зноў назапасіцца да небясьпечных узроўняў.}
 
 На жаль, проста адкрыць вокны не заўсёды магчыма, бо гэта астуджае кватэру, упускае шум, праз адкрытыя вокны паступае паветра без папярэдняй ачысткі.
 
@@ -164,7 +164,7 @@
 
 Чаму ж так цяжка прыстасавацца да шуму? Бо мы рэагуем на яго вельмі хутка. Гук~--- гэта адна з~крыніц інфармацыі аб навакольным сьвеце. Нас атачаюць гукі, як прыемныя прыродныя: птушкі, хвалі, дождж, так і небясьпечныя: гук стоенага злодзея або выбух пэтардаў. Асаблівасьць у~тым, што мы рэагуем на гукавыя раздражняльнікі хутчэй, чым на візуальныя, 140--160 мілісэкунд супраць 180--200, таму цяжэй тармазіць сваё раздражненьне.
 
-\tipbox{Запуск стрэсавай рэакцыі на нязвыклы гук, які перавышае звычайны фон,~--- гэта старажытны эвалюцыйны мэханізм выжываньня.}
+\infobox{Запуск стрэсавай рэакцыі на нязвыклы гук, які перавышае звычайны фон,~--- гэта старажытны эвалюцыйны мэханізм выжываньня.}
 
 Да шумавога забруджваньня, як і да сьпёртага паветра, можна звыкнуць і перастаць заўважаць, але вось псыхалягічнае прывыканьне не суправаджаецца фізычным.
 
@@ -176,7 +176,7 @@
 
 \textbf{Цішыня на вагу золата.} Чым вышэйшая шчыльнасьць насельніцтва і больш мэханізмаў вакол нас, тым больш і шуму. У сучасным сьвеце, калі шчыльнасьць насельніцтва ўзрастае, шчыльнасьць забудовы расьце, колькасьць аўтамабіляў павялічваецца, зьяўляецца больш гукаўзнаўляльных прылад, шумных прыбораў і да т.~п., колькасьць шуму становіцца неймаверна вялікая ў~любы час содняў. Гэтая зьява атрымала назву ``шумавое забруджваньне''~--- па аналёгіі са сьветлавым, цеплавым, інфармацыйным.
 
-\tipbox{Цішыня цяпер становіцца рэсурсам, раскошай, за якую людзі гатовыя плаціць вялікія грошы.}
+\infobox{Цішыня цяпер становіцца рэсурсам, раскошай, за якую людзі гатовыя плаціць вялікія грошы.}
 
 Больш за палову насельніцтва падвяргаюцца рэгулярнаму ўзьдзеяньню шуму вышэй за 55 дэцыбелаў (пры норме да 40). Асноўныя крыніцы шумавога забруджваньня~--- гэта транспарт (аўтамабілі, матацыклы, цягнікі, самалёты), забаўляльныя мерапрыемствы і кавярні, шум ад суседзяў. Часта ўнутры рэстарацыяў, ня кажучы ўжо пра клюбы, гук мацнейшы за норму.
 
@@ -235,7 +235,7 @@
 
 Практыка маўчаньня ўключае як адмову ад маўленьня, так і адсутнасьць шумнага асяродзьдзя, а~таксама~--- ``цішыню розуму''. Цяпер шматлікія з~нас пачуваюцца ў~цішыні некамфортна і імкнуцца заглушыць яе радыё ці тэлевізарам, у~гутарцы зь іншымі мы пазьбягаем паўзаў, запаўняючы іх пустой балбатнёй.
 
-\tipbox{Устрыманасьць ад пустых размоваў, ныцьця, крытыкі, скаргаў, парадаў~--- усё гэта трэніруе ўвагу і робіць маўленьне мацнейшым і выразьнейшым.}
+\infobox{Устрыманасьць ад пустых размоваў, ныцьця, крытыкі, скаргаў, парадаў~--- усё гэта трэніруе ўвагу і робіць маўленьне мацнейшым і выразьнейшым.}
 
 Дасьледаваньні пацьвярджаюць, што дзьве гадзіны поўнай цішыні могуць стымуляваць нэўрагенэз у~гіпакампе і палепшыць кагнітыўныя здольнасьці. Пэрыядычна рабіце «ціхі час» у~офісе~--- устрыманьне ад размоваў і перапіскі~--- гэта дапаможа павысіць прадуктыўнасьць. Дадайце ў~свой дзень моманты цішыні між працай і сустрэчамі, бо, як слушна заўважыў Барыс Пастарнак, ``цішыня~--- ты найлепшае з~таго, што я чуў''.
 
@@ -268,7 +268,7 @@
 
 У памяшканьнях паветра бруднейшае, чым на вуліцы, канцэнтрацыя ўнутры можа быць у~сотні разоў вышэй, чым на адкрытым паветры. Пыл, часьціцы якога нябачныя для вока, практычна не асядае, увесь час вісіць у~паветры і зьяўляецца адной з~асноўных крыніц інфэкцыяў: мікробы і бактэрыі выкарыстоўваюць яе часьціцы (памерам меней за 10\,мкм) для перасоўваньня і кантакту.
 
-\tipbox{Высокая вільготнасьць у~спалучэньні з~кепскай вэнтыляцыяй павялічвае рызыку зьяўленьня цьвілі, удыханьня зароднікаў, якія могуць быць шкоднымі для здароўя. Крыніцай забруджваньня паветра ў~памяшканьні можа стаць і занадта дбайная ўборка з~выкарыстаньнем вялікай колькасьці сродкаў бытавой хіміі.}
+\infobox{Высокая вільготнасьць у~спалучэньні з~кепскай вэнтыляцыяй павялічвае рызыку зьяўленьня цьвілі, удыханьня зароднікаў, якія могуць быць шкоднымі для здароўя. Крыніцай забруджваньня паветра ў~памяшканьні можа стаць і занадта дбайная ўборка з~выкарыстаньнем вялікай колькасьці сродкаў бытавой хіміі.}
 
 Праводзіць дома занадта вялікую колькасьць часу~--- гэта ня вельмі ўдалая ідэя. У хаце мы менш рухаемся, у~нас узьнікае дэфіцыт сонечнага сьвятла, зьбедненае візуальнае асяродзьдзе, мы больш ямо і схільныя больш ляжаць ды ізалявацца ад сацыяльных кантактаў. Ну і, зразумела, дамашняе асяродзьдзе можа быць ня занадта карысным. Так indoor~--- гэта значыць унутрыдомавы~--- лад жыцьця можа нэгатыўна ўплываць на нас.
 
@@ -289,7 +289,7 @@
 
 Варта страсянуць посцілку ў~сонечнае надвор'е, як паветра напаўняецца незьлічонымі часьціцамі пылу~--- гэта тое, чым мы дыхаем у~сябе дома. Пыл можа нашкодзіць нашай псыхіцы і ў~выпадку, калі сваякі і госьці няўхваляльна ківаюць галавой пры выглядзе пласта пылу, і нашаму арганізму~--- калі мы яе ўдыхаем. Сапраўды, «пылінка ня бачная, ды выесьць вочы». 
 
-\tipbox{Вылучаюць чатыры асноўныя крыніцы ўзьнікненьня пылу: жывёлы, людзі, разбурэньне матэрыялаў дома і прынесеныя з~вуліцы часьціцы.}
+\infobox{Вылучаюць чатыры асноўныя крыніцы ўзьнікненьня пылу: жывёлы, людзі, разбурэньне матэрыялаў дома і прынесеныя з~вуліцы часьціцы.}
 
 Вялікая колькасьць пылу~--- гэта тыповая праблема памяшканьняў. Рэгулярная ўборка і нізкі ўзровень пылу важныя для здароўя дома і яго жыхароў. У звычайнай кватэры ў~год утвараецца да 40 кіляграмаў пылу, прыкметная іх частка трапляе ў~нашы лёгкія. Бо за содні мы ўдыхаем да 12 тысячаў літраў паветра, а~ў кожным літры можа быць да 500 пылавых часьціц.
 
@@ -301,19 +301,19 @@
 
 Адэкватная вэнтыляцыя зьмяншае канцэнтрацыю бактэрыяў і вірусаў у~паветры. Гэта мінімізуе імавернасьць узьнікненьня інфэкцыяў, павялічвае прадукцыйнасьць працы супрацоўнікаў офісаў і пасьпяховасьць дзяцей у~школах. У дасьледаваньнях ультрафіялетавае абеззаражаньне (кварцаваньне) элемэнтаў ацяпленьня ў~офісах прыводзіла да зьніжэньня захворваньняў на ГРЗ.
 
-\tipbox{Абсалютная стэрыльнасьць жытла нам таксама не патрэбна: доза бактэрый мае U-вобразнае ўплыў на здароўі. Пры нізкіх і сярэдніх роўнях яна зьніжае рызыку алергій і астмы, а вось пры высокіх~--- павялічвае.}
+\infobox{Абсалютная стэрыльнасьць жытла нам таксама не патрэбна: доза бактэрый мае U-вобразнае ўплыў на здароўі. Пры нізкіх і сярэдніх роўнях яна зьніжае рызыку алергій і астмы, а вось пры высокіх~--- павялічвае.}
 
 \textbf{Не карміце кляшчоў.} Галоўная крыніца пылу і ежы для кляшчоў~--- гэта адпадкі эпітэлію нашай скуры, які назапашваецца, у~асноўным, у~пасьцельнай бялізьне. Таму трэба штотыдзень старанна яе праць пры тэмпэратуры 60° С і вышэй. Калі вы выкарыстоўваеце тэкстыльныя канапы, то не ляжыце на іх голым і ня сьпіце без прасьціны або замяніце іх на скураныя. Абмяжуйце колькасьць дзіцячых мяккіх цацак і рэгулярна іх мыйце.
 
 За сваё жыцьцё пылавы клешч вырабляе фэкаліяў у~2000 разоў больш, чым важыць сам, і менавіта яго адходы небясьпечнейшыя за ўсё. Кляшчы аддаюць перавагу цеплыні, вільгаць і эпітэлію скуры, таму нашы пасьцелі аптымальныя для іх жыцьцядзейнасьці і размнажэньня. Шмат іх можа быць у~тапках і падушках.
 
-\subsection*{Цьвіль.}
+\subsection*{Цьвіль}
 
 Самі па сабе цьвільныя грыбкі (любога кшталту: і бросьня на вадкасьцях, і плесьня~--- пушысты налёт на прадуктах, рэчах і рэштках) не выклікаюць інфэкцыяў~--- толькі ў~людзей з~сур'ёзным імунадэфіцытам. Але іх зароднікі і часьціцы, як жывыя, так і мёртвыя, у~высокіх канцэнтрацыях могуць выклікаць алергічныя рэакцыі і ўзмацняць запаленьне. Звычайна цьвіль аддае перавагу тэмпэратуры вышэй за 20 градусаў і вільготнасьці вышэй за 50. Дрэнны паветраабмен і кандэнсат на сьценах і мэблі (волкія і няветраныя памяшканьні) павялічваюць рызыку зьяўленьня цьвілі.
 
 Цьвіль можа пасяліцца ў~сыстэмах апалу, кандыцыянэрах, пасудамыйных машынах, кветкавых гаршках, ванных, ня кажучы ўжо пра гарышчы і гаражы. Пазьбягайце працяглага знаходжаньня ў~такіх памяшканьнях, кантралюйце гідраізаляцыю, сачыце за сьценамі, дахам і камунікацыямі: у~іх не павінна быць працёкаў вады. Калі адна са сьценаў дома адсырэла, ня стаўце ўсутыч да яе мэблю. Высушвайце ручнікі, вяхоткі, сьмецьцевыя вёдры і не дазваляйце ім стаяць мокрымі доўгі час. Дбайнае ацяпленьне памяшканьняў зімой і восеньню памяншае рызыку цьвілі. Для апрацоўкі заражаных паверхняў выкарыстоўвайце спэцыяльныя супрацьплесьневыя сродкі, якія дазваляюць зьнішчыць яе на ўсёй глыбіні пранікненьня ў~матэрыял.
 
-\subsection*{Як змагацца за чысьціню.}
+\subsection*{Як змагацца за чысьціню}
 
 \textbf{Антыпылавы дызайн.} Арганізуйце сваю кватэру так, каб у~ёй назапашвалася менш пылу і яе было зручна прыбіраць. Пазбаўцеся ад дываноў і палавікоў або зьменшыце іх колькасьць~--- гэта самыя галоўныя пылазборнікі. Шторы ня толькі зацямняюць кватэру, але й зьбіраюць шмат пылу. Зрэшты, цяпер ужо зьявіліся ў~продажы запавесы, ачышчальныя ад пылу. Важна падтрымліваць вільготнасьць у~50--60\,\%~--- гэта перашкаджае залішняму ўтварэньню і распаўсюджваньню пылу: чым ніжэй вільготнасьць, тым больш будзе пылу. Адзеньне захоўвайце ў~закрытых шафах. Ідэальна захоўваць розныя статуэткі і кнігі ў~шафах за шклом. Прызнаюся, што нават мне гэта не ўдалося арганізаваць. Памятайце, што трэба рэгулярна адсоўваць мэблю і прыбіраць пылавыя пасткі, часта гэта месцы за батарэямі або на задняй сьценцы лядоўні.
 
@@ -325,7 +325,7 @@
 
 Калі мы пачынаем перабіраць кнігі ці пыльныя рэчы, то канцэнтрацыя пылу драматычна павялічваецца і можа дасягаць 1000 мг на кубамэтар паветра пры норме 10 мг. Мэханічнае ачышчэньне цьвілі ў~33 разы павялічвае канцэнтрацыю зароднікаў у~паветры.
 
-\tipbox{Прыбірайцеся ў~рэсьпіратары, дзяцей і ўвогуле сямейнікаў выпраўляйце на шпацыр на паўтары гадзіны, разнасьцежвайце вокны.}
+\infobox{Прыбірайцеся ў~рэсьпіратары, дзяцей і ўвогуле сямейнікаў выпраўляйце на шпацыр на паўтары гадзіны, разнасьцежвайце вокны.}
 
 Аптымальна выкарыстоўваць пыласосы з~НЕРА-фільтрамі, распрацаваныя адмыслова для алергікаў. Калі ў~вас ёсьць робат-пыласос, то можна запраграмаваць яго працу, калі вас няма дома і вокны адкрытыя. Так пыл, які ўздымаецца падчас прыборкі, не нашкодзіць вам. На жаль, большасьць звычайных пыласосаў толькі дробняць часьціцы пылу, а~чым драбнейшыя часьціцы, тым глыбей яны трапляюць у~лёгкія і мацней шкодзяць здароўю.
 
@@ -356,11 +356,11 @@
 
 Тым ня менш, па меры павелічэньня колькасьці прыбораў і інтэнсіўнасьці выпраменьваньня (укараненьне больш магутных 5G сетак і да т.~п.) важна захоўваць разумную засьцярогу і прытрымлівацца папераджальнай палітыкі, абмяжоўваць па меры магчымасьці залішняе ўзьдзеяньне электрамагнітных палёў.
 
-\subsection*{Арганізуйце правільна праводку ў~доме.}
+\subsection*{Арганізуйце правільна праводку ў~доме}
 
 Гэта ня толькі крыху паменшыць інтэнсіўнасьць поля, але й зьнізіць рызыку электратраўмы~--- хай усе разэткі будуць з~зазямленьнем. Сачыце, каб відэльцы шчыльна ўваходзілі ў~разэткі, а~прыборы былі спраўныя. Праводка ў~сьцяне не павінна праходзіць каля галавы, калі вы сьпіце (або лінія мусіць быць абясточаная).
 
-\tipbox{Ідэальным варыянтам зьяўляецца выкарыстаньне адмысловых выключальнікаў: калі ўсе прылады выключаны, то сетка ў пакоі адключаецца.}
+\infobox{Ідэальным варыянтам зьяўляецца выкарыстаньне адмысловых выключальнікаў: калі ўсе прылады выключаны, то сетка ў пакоі адключаецца.}
 
 \textbf{Абарона адлегласьцю.} Трымайце дыстанцыю: пры аддаленьні ад крыніцы электрычнага поля на падвойную адлегласьць напружанасьць поля зьніжаецца ў~4 разы. Пры аддаленьні на патройную адлегласьць велічыня поля зьніжаецца ў~9 разоў і г.~д. Калі працуеце, не трымайце на стале шмат уключаных у~сетку прыбораў. Адлегласьць у~паўмэтра ад звычайнай праводкі напраўду эфэктыўная.
 
@@ -370,7 +370,7 @@
 
 \textbf{Электрастатычная электрычнасьць.} Яна ўзьнікае пры кантакце нашага цела з~рознымі паверхнямі: калі вы здымаеце ваўняны швэдар або расчэсваеце валасы сынтэтычнай расчоскай, ваша цела «электрызуецца». Скапленьне электрастатычнай электрычнасьці павялічвае назапашваньне пылу, а~вось нармальная вільготнасьць спрыяе расьсейваньню залішняга зараду.
 
-\tipbox{Бытавыя значэньні электрамагнітнага поля не паказалі значнага ўплыву на здароўе.}
+\infobox{Бытавыя значэньні электрамагнітнага поля не паказалі значнага ўплыву на здароўе.}
 
 У мінулым людзі ўвесь час кантактавалі зь зямлёй. Але цяпер мы ізалюем сябе штучнымі матэрыяламі, ад лінолеўму і лямінату да полівінілхлярыдных вырабаў, што прыводзіць да назапашваньня залішняга электрастатычнага зараду. Гэта яшчэ адзін сур'ёзны аргумэнт на карысьць клясычных натуральных матэрыялаў для будаўніцтва і рамонту. Існуюць адмысловыя антыстатычныя дабаўкі ў~лякі і фарбы, якія расьсейваюць электрычнасьць і не зьбіраюць пыл. Можна зазямляць мэблю, трубы.
 
@@ -392,7 +392,7 @@
 \textbf{Просты ўплыў вільготнасьці.} Чым менш вільготнасьць паветра, тым мацней выпарэньне са скуры й сьлізістых абалонак.
 Вільготнасьць паветра~--- важны складнік здаровага і камфортнага мікраклімату. Камфортнай лічыцца вільготнасьць ад 40\,\% да 60\,\%, прычым для высокіх тэмпэратураў (больш за 30°) трэба імкнуцца да вільготнасьці 30--50\,\%, пры тэмпэратурах менш за 20° C, наадварот, камфортнай будзе вільготнасьць 50--70\,\%. Пры больш высокай вільготнасьці мы лепей пераносім нізкія тэмпэратуры, а~пры нізкай~--- горай.
 
-\subsection*{Нэгатыўны ўплыў падвышанай вільготнасьці.}
+\subsection*{Нэгатыўны ўплыў падвышанай вільготнасьці}
 
 Вялікая канцэнтрацыя вільгаці не дазваляе целу чалавека падтрымліваць звычайную тэмпэратуру~--- не працуе належным чынам мэханізм тэрмарэгуляцыі. Каб астудзіць сябе, чалавечае цела выкарыстоўвае потавыдзяленьне. Пот, выпараючыся з~паверхні скуры, выводзіць лішнюю цеплыню. Але што, калі выпарацца няма куды? Тады арганізм пачынае працаваць з~падвышанай сілай, а~гэта вядзе да зваротнага выніку~--- перагрэву. Калі пот зь цела выпараецца павольна, то цела астуджаецца вельмі слаба, і мы пачуваемся не зусім камфортна.
 
@@ -412,7 +412,7 @@
 
 Таксама сухое паветра вядзе да назапашваньня электрастатычнай электрычнасьці, назапашваньня пылу і павольнейшаму яе асяданьню. Мікрачасьціцы пылу яшчэ мацней раздражняюць высахлыя сьлізістыя абалонкі. Калі вы змушаныя доўгі час знаходзіцца ў~памяшканьні з~сухім паветрам, то памажце нос любым алеем: тлушчавая плёнка на паверхні сьлізістай будзе абараняць яе ад высыханьня. Прамываньне носа воднымі растворамі, на жаль, мае эфэкт кароткатэрміновы~--- ня больш за паўгадзіны.
 
-\subsection*{Як кантраляваць вільготнасьць.}
+\subsection*{Як кантраляваць вільготнасьць}
 
 Каб вымераць вільготнасьць у~памяшканьні, скарыстайцеся адмысловым прыборам, які называецца гідрамэтар. Як правіла, датчык убудоўваецца ва ўвільгатняльнікі, у~вас можа быць некалькі датчыкаў у~розных памяшканьнях для паасобнага кантролю. Ёсьць спэцыяльныя асушальнікі паветра, ёсьць ультрагукавыя ўвільгатняльнікі паветра, і можна лёгка падтрымліваць неабходны ўзровень вільготнасьці ў~доме. Дасьледаваньні паказваюць, што павелічэньне вільготнасьці да 40\,\% здымае сымптомы раздражненьня. Оптымум вільготнасьці 40--60\,\%, занадта высокая вільготнасьць непажаданая, бо можа выклікаць шэраг іншых праблемаў. Выкарыстаньне буфэрных дыхальных матэрыялаў, накшталт мінімальна апрацаванага дрэва ці гіпсавых канструкцый, дазваляе ім убіраць лішак вільгаці з~паветра і затым, пры высыханьні, аддаваць.
 
