--- a/willpower/chapter13.tex
+++ b/willpower/chapter13.tex
@@ -4,7 +4,7 @@
 
 Існуе толькі чатыры непасрэдныя прычыны сьмерці: спыненьне дыханьня, спыненьне сэрца, сьмерць мозгу і сыход у~інтэрнэт. Сапраўды, з~кожным годам мы праводзім усё больш часу ў~лічбавым асяродзьдзі, камунікуем там, працуем, вучымся, адпачываем і забаўляемся. Гэты трэнд будзе толькі ўзмацняцца ў~будучыні, таму мы ўпэўнена можам лічыць лічбавае асяродзьдзе часткай нашага навакольнага асяродзьдзя, а~значыць, яно ўплывае на стан здароўя чалавека гэтак жа актыўна, як і ўсё астатняе. Сіла і карысьць інфармацыйнага асяродзьдзя вельмі вялікія: мы можам працаваць з~дому, быць на сувязі, даведвацца пра навіны, мець доступ да сяброў і калег, абменьвацца ідэямі і весьці бізнэс. Чым хутчэй абменьваемся, чым вышэйшая шчыльнасьць ідэяў, тым мацней паскараецца разьвіцьцё. Інтэрнэт~--- гэта магутны інструмэнт, які паскарае тэмп нашага жыцьця, але можа паскорыць і выгараньне. Таму перад яго выкарыстаньнем (ці хаця б у~працэсе) важна вывучыць тэхніку бясьпекі.
 
-\subsection*{Што мы робім анлайн.}
+\subsection*{Што мы робім анлайн}
 
 \textbf{Уявім сабе двух людзей, якія па-рознаму выкарыстоўваюць лічбавыя тэхналёгіі.} Для аднаго чалавека яны~--- дадатковы навык, доступ да важнай інфармацыі, карысныя знаёмствы, кіраваньне рознымі праектамі адначасова. Пры гэтым ён не выкарыстоўвае інтэрнэт як замену рэальнага жыцьця, хутчэй, як яго працяг, узмацненьне, паскарэньне. Для іншага гэтыя ж тэхналёгіі могуць стаць крыніцай залежнасьці: ён пракрастынуе, скачучы па спасылках, ходзіць па чужых профілях, замяняючы гэтым рэальнае знаёмства, заліпае ў~сэрыялах і гульнях замест рэальных актыўных гульняў і адпачынку. Любая залежнасьць з~навакольнага сьвету можа быць памножаная і лёгка даступная ў~інтэрнэце: порна, казіно, гвалт, доступ да наркотыкаў.
 
@@ -24,11 +24,11 @@
 
 Зразумела, ня варта дэманізаваць смартфоны, як і праклінаць гамбургеры з~малочнымі кактэйлямі. Смартфон~--- гэта самая важная рэч з~тых, што заўсёды з~намі, і ён сапраўды добра дапамагае. Як правіла, размовы аб тым, што смартфон робіць нас тупымі~--- гэта перабольшаньне, аднак шэраг важных заўваг усё ж такі ёсьць. Цяпер мы ня можам сказаць, колькі часу~--- норма, а~колькі~--- ужо залежнасьць, але калі ёсьць зьніжэньне якасьці жыцьця праз злоўжываньне смартфонам, то ёсьць і праблема.
 
-\subsection*{Пабочныя эфэкты.}
+\subsection*{Пабочныя эфэкты}
 
 Яны ёсьць заўсёды і ад усяго. Таму, як і з~харчаваньнем, трэба адсочваць свой рэжым і рацыён узаемадзеяньня са смартфонам. Замест вядзеньня харчовага дзёньніка дастаткова ўсталяваць праграмы (Quality Time BreakFree, Moment для iOS і інш.), якія адзначаюць, колькі разоў вы карыстаецеся тэлефонам і сумарны час выкарыстаньня, а~ў сваім дзёньніку адзначайце ваша самаадчуваньне.
 
-\tipbox{У смартфоне важна цалкам адключыць усе апавяшчэньням~--- банэры і гукі,~--- акрамя крытычна важных.}
+\infobox{У смартфоне важна цалкам адключыць усе апавяшчэньням~--- банэры і гукі,~--- акрамя крытычна важных.}
 
 Калі ў~вас больш за 80\,\% цэльнай якаснай ежы, то вы можаце дазволіць сабе адступленьні. Тое ж самае з~тэлефонам~--- ён небясьпечны, калі яго занадта шмат. Дасьледаваньні паказваюць, што 47\,\% амерыканцаў сьвядома прыкладаюць намаганьні, каб абмежаваць яго выкарыстаньне.
 
@@ -55,7 +55,7 @@
 
 Дасьледаваньні на МРТ паказваюць, што ў~людзей з~залежнасьцю ад тэлефона ёсьць такія ж зьмены ў~мозгу, як пры іншых залежнасьцях: зьніжаецца колькасьць шэрага рэчыва ў~скроневай кары, астраўковай долі, падае актыўнасьць пярэдняй зьвіліны поясу, якая адказвае за кантроль эмоцыяў, прыняцьце рашэньняў. Умоўна можна вылучыць некалькі тыпаў нэгатыўнага ўзьдзеяньня.
 
-\subsection*{Залежнасьць.}
+\subsection*{Залежнасьць}
 
 Многія дасьледчыкі ўпэўненыя, што залежнасьць ад смартфона можна паставіць у~адзін шэраг з~такімі нехімічнымі залежнасьцямі, як шопінг, гемблінг і да т.~п. Рызыка стаць залежным вышэй у~тых людзей, у~каго ўжо ёсьць існыя залежнасьці і схільнасьць да імпульсіўных паводзінаў.
 
@@ -85,25 +85,25 @@
 
 \textbf{Адмова або абмежаваньне} выкарыстаньня сацыяльных сетак вызваляе людзям каля адной гадзіны ў~дзень: яны больш камунікуюць, маюць менш радыкальныя палітычныя погляды, у~іх павялічваецца настрой і адчуваньне задавальненьня ад жыцьця. Нават часовая адмова ад сацсетак, паводле дасьледаваньняў, зьмяншае пачуцьцё прыгнечанасьці, павялічвае прадуктыўнасьць, зьмяншае імпульсіўнасьць, пераяданьне.
 
-\subsection*{Сацыяльны ўплыў.}
+\subsection*{Сацыяльны ўплыў}
 
 Інтэрнэт ня толькі злучае людзей, якія знаходзяцца далёка адно ад аднаго, але й разьядноўвае тых, хто знаходзіцца побач. Пастаяннае адцягненьне на тэлефон атрымала назву фабінг (phubbing), а~чалавек які адцягваецца завецца~--- фабэр. Фабэр пастаянна перарывае ежу, камунікацыю, паездку на аўтамабілі адцягненьнем на тэлефон. Такія паводзіны разбураюць зносіны, выклікаюць гнеў і раздражненьне суразмоўцы, зьяўляюцца частай прычынай канфліктаў у~сям'і.
 
 Паказана, што людзі без смартфона атрымліваюць прыкметна больш задавальненьня пры камунікацыі. Нават сам факт наяўнасьці тэлефона зьмяншае пачуцьцё блізкасьці і даверу, памяншае эмпатыю і разуменьне партнёра.
 
-\tipbox{У лічбавым асяродзьдзі няма паху, смаку, дотыку, эмпатыі~--- і такое беднае асяродзьдзе шкоднае для разьвіцьця. Хочаце шчырай размовы? Выключыце або пакіньце тэлефон у~іншым пакоі~--- гэта просты спосаб паказаць, наколькі важны для вас суразмоўца.}
+\infobox{У лічбавым асяродзьдзі няма паху, смаку, дотыку, эмпатыі~--- і такое беднае асяродзьдзе шкоднае для разьвіцьця. Хочаце шчырай размовы? Выключыце або пакіньце тэлефон у~іншым пакоі~--- гэта просты спосаб паказаць, наколькі важны для вас суразмоўца.}
 
 Лічбавае асяродзьдзе дазваляе шмат экспэрымэнтаваць з~сацыяльнымі ролямі, прымяраць на сябе розныя вобразы, ствараць свой імідж. Але інтэрнэт можа стаць крыніцай ілюзій і толькі раскормліваць эга. Карыстальнікі схільныя фіксавацца на сабе, ствараючы нерэальны вобраз са старанна адабраных і адфоташопленых фатаграфій і аповедаў. Гэта просты і даступны спосаб хутка павысіць сваю самаацэнку, прыцягнуць увагу іншых людзей і сабраць яшчэ больш лайкаў. Па меры павелічэньня канкурэнцыі, людзі гатовыя ісьці на што заўгодна, абы атрымаць дадатковую порцыю віртуальнай сацыяльнай ухвалы. Замест стварэньня чагосьці новага, замест рэальных дзеяньняў, мы спрабуем пераканаць часта нават незнаёмых нам людзей у~сваёй важнасьці, зрабіць на іх уражаньне.
 
 Спробы падняць свой статус анляйн схіляюць да разьвіцьця нарцысічных тэндэнцый. Бо размовы пра сябе так моцна павышаюць узровень дафаміну! Калі ў~асабістай гутарцы мы выказваем сваё меркаваньне толькі 30--40\,\% ад часу гутаркі, то анляйн мы каля 80\,\% часу гаворым толькі пра сябе. Мы не зважаем на невэрбаліку, на інтанацыі, на позірк і да т.~п. Нават нашы рэпосты~--- гэта спосаб зьвярнуць на сябе ўвагу і атрымаць адабрэньне.
 
-\subsection*{Фізычны ўплыў.}
+\subsection*{Фізычны ўплыў}
 
 Выкарыстаньне смартфона аказвае прыкметны ўплыў на паставу (уключаючы болі ў~шыі і сьпіне, парушэньне крывацёку ў~сасудах шыі і да т.~п.), павялічвае напругу вочных цягліцаў пры сталым разгляданьні блізкіх прадметаў, павялічвае ўзьдзеяньне яркага сьвятла сіняга спэктру (парушэньні сну і біярытмаў~--- падрабязна разабрана ў~разьдзеле ``Сон''), распаўсюджвае электрамагнітнае выпраменьваньне (падрабязна разабрана ў~разьдзеле ``Шкоднае асяродзьдзе''), пагаршае сядзячы лад жыцьця (падрабязна разабрана ў~разьдзеле ``Рух'').
 
 Нерухомасьць правакуе падвышаную рызыку трамбозу, гемарою, бясплодзьдзя (залішні нагрэў яечкаў), спэцыфічныя парушэньні суставаў (артроз вялікага пальца, тунэльны сындром), сындром сухога вока, тэлефон можа быць прычынай траўмаў, калі вы не адрываецеся ад экрана на хаду. Адцягненьне на тэлефон падчас кіраваньня~--- частая прычына аварый і павелічэньне рызыкі загінуць у~ДТЗ.
 
-\tipbox{Да 24\,\% усіх аварый выкліканы выкарыстаньнем тэлефона, а~кіроўца са смартфонам эквівалентны п'янаму за рулём. Выкарыстаньне гарнітуры толькі нязначна зьніжае рызыкі.}
+\infobox{Да 24\,\% усіх аварый выкліканы выкарыстаньнем тэлефона, а~кіроўца са смартфонам эквівалентны п'янаму за рулём. Выкарыстаньне гарнітуры толькі нязначна зьніжае рызыкі.}
 
 Калі мы трымаем тэлефон у~руках, мы глядзім на яго, апусьціўшы галаву ўніз. Куды скіраваны ваш погляд, туды ідзе і галава. А куды зьвернутая галава, туды і ўсе цягліцы цела. Таму калі вы гледзіце ўніз, то вы будзеце горбіцца. З гравітацыяй нашы цягліцы змагаюцца прыгожа, але ж цяпер больш актуальная іншая праблема~--- смартфон. Калі вы гледзіце на экран, то моцна нахіляеце галаву і падымаеце плечы. Гэтую зьяву назвалі «\textbf{тэкставая шыя}» (text neck).
 
@@ -119,7 +119,7 @@
 
 \emph{Сапраўды, як так атрымалася, што раней людзі глядзелі на зоркі ў~тэлескопы, потым апусьцілі позірк у~тэлевізары, а~цяпер нахіляюць галаву, каб глядзець у~смартфон?!}
 
-\subsection*{Спэцыфічныя лічбавыя разлады.}
+\subsection*{Спэцыфічныя лічбавыя разлады}
 
 Існуе шэраг спэцыфічных разладаў, зьвязаных з~залішнім знаходжаньнем у~лічбавым асяродзьдзі.
 
@@ -133,7 +133,7 @@
 
 \textbf{FOMO (ад анг. fear of missing out)}~--- гэта стан, пры якім чалавеку здаецца, што жыцьцё праходзіць міма яго, што ён прапускае важнае і цікавае, даступнае яго сябрам і знаёмым. Чым больш мы бачым пастоў аб тым, як насычана і ярка жыве наша фрэнд-стужка, тым менш радасным здаецца наша жыцьцё.
 
-\tipbox{Амаль 60\,\% карыстачоў нэгатыўна ацэньваюць сваё жыцьцё ў~параўнаньні з~пастамі сваіх сяброў у~сацсетках.} 
+\infobox{Амаль 60\,\% карыстачоў нэгатыўна ацэньваюць сваё жыцьцё ў~параўнаньні з~пастамі сваіх сяброў у~сацсетках.} 
 
 Зрэшты, сёньня на замену FOMO прыходзіць абарончая рэакцыі JOMO (joy of missing out), калі вы атрымліваеце задавальненьне, нешта прапусьціўшы, ці калі вы можаце дазволіць сабе нечага ня ведаць і ў~чымсьці ня ўдзельнічаць!
 
@@ -145,7 +145,7 @@
 
 \textbf{Мэдыяскетызм і лічбавая беднасьць.} Калі раней пастаянная прысутнасьць анляйн лічылася гераізмам, то цяпер гэта прыкмета глупства і нястрымнасьці. Дазвольце сабе раскошу адказваць на лісты і паведамленьні тады, калі вам зручна, не апраўдвайцеся, не прасіце прабачэньня, а~для таго, каб пазьбегнуць неразуменьня, выразна пазначце часавыя рамкі, калі вы адказваеце на лісты і чытаеце месэнджэры і пошту. Гэта прывучыць людзей выконваць вашыя ўмовы. Мэдыяскетызм~--- сьвядомае скарачэньне спажываньня кантэнту і анляйн-камунікацыі. Цяпер мы бачым, што лічбавыя тэхналёгіі выціскаюць рэальную камунікацыю, і большасьць людзей вымушаны размаўляць з~тэлефоннымі робатамі. Лічбавая няроўнасьць або лічбавая беднасьць сёньня~--- кансультацыі зь віртуальнымі або анляйн-дактарамі, і навучаньне дзяцей па запісах відэа, без актыўнага ўдзелу выкладчыка.
 
-\tipbox{Масавы лічбавы падыход замяняе пэрсанальны падыход жывога чалавека, а~жывая камунікацыя патроху робіцца ўсё даражэйшай.}
+\infobox{Масавы лічбавы падыход замяняе пэрсанальны падыход жывога чалавека, а~жывая камунікацыя патроху робіцца ўсё даражэйшай.}
 
 \textbf{Смартфон і глябальная нездаволенасьць.} Як прыкмеціў адзін мой сябар, адна з~прычын нарастаньня глябальнай нездаволенасьці~--- гэта паўсюднае выкарыстаньне смартфонаў. Калі раней у~вёсцы ці горадзе багатыя і бедныя жылі кожны ў~сваім сьвеце, то цяпер смартфоны дазваляюць параўноўваць сябе зь людзьмі іншых сацыяльных слаёў. І вельмі часта параўнаньне ідзе не на вашу карысьць. Самаацэнка фармуецца як стаўленьне да сярэдняга ўзроўню людзей вакол вас, а~ў віртуальнай рэальнасьці заўсёды знойдуцца тыя, хто нашмат прыгажэйшы, багацейшы і разумнейшы~--- ну, ці робіць такое ўражаньне.
 
@@ -186,7 +186,7 @@
 
 Калі вонкавыя стымулы крадуць нашу ўвагу, то ў~нас застаецца менш увагі да сваіх унутраных стымулаў, і нашы паводзіны становіцца рэактыўным (адказваем на вонкавыя стымулы), а~не праактыўным (дзейнічаем па сваім пляне). Трэніроўка ўсьвядомленасьці дапамагае кіраваць сваім фокусам увагі: гледзячы на лужыну, мы можам самі выбіраць, што ў~ёй бачыць~--- бруд ці зоркі.
 
-\tipbox{Навык нерэагаваньня дапамагае нам не запускаць асацыятыўную працу розуму, калі мы на нешта глядзім ці атрымліваем новую інфармацыю.}
+\infobox{Навык нерэагаваньня дапамагае нам не запускаць асацыятыўную працу розуму, калі мы на нешта глядзім ці атрымліваем новую інфармацыю.}
 
 Існуе \textbf{содневы ліміт інфармацыі}, якую наш мозг можа перастрававаць за дзень бяз шкоды для сябе, і мы павінны сьвядома сачыць за тым, што спажываем у~інфармацыйным асяродзьдзі. Інфармацыя не інэртная~--- яна мяняе нас, таму інфармацыйная гігіена вельмі важная. Неабходна дзейнічаць папераджальна, пазьбягаючы ўзьдзеяньня шкоднай інфармацыі і старанна адбіраючы самае лепшае: не душыцеся інфармацыйным фастфудам на хаду!
 
@@ -225,7 +225,7 @@
 
 Калі мы бачым жорсткія камэнтары, навіны ці відэа, гэта робіць і наш мозг больш уразьлівым да стрэсу, зьніжае самаацэнку, мы люстрана ``капіюем'' стрэс. Асабліва таксічныя асобіны або «мэдыяспэкулянты», якія прыцягваюць увагу і сеюць паніку лічбавым клікушствам. Падчас панікі лічбавы дэтокс дапамагае зразумець, што, нават калі вы пабылі бяз сувязі, сьвет жыве і абыходзіцца бяз вашае прысутнасьці анляйн.
 
-\subsection*{Інфармацыйная бурбалка.}
+\subsection*{Інфармацыйная бурбалка}
 
 Калі мы клікаем на карцінкі ці пасты, алгарытмы гэта запамінаюць і затым, на аснове нашага выбару, фармуюць бурбалку фільтраў. Гэтая бурбалка ўплывае на тое, што мы ўбачым у~сацыяльнай сетцы, тым самым ствараючы моцныя скажэньні.
 
@@ -243,13 +243,13 @@
 
 \textbf{Лічбавы сьлед}~--- гэта ўсе нашы дзеяньні ў~інтэрнэце, што мы глядзелі і колькі, што пісалі, каму пісалі. Прыватнасьць тут умоўная: па сутнасьці, усё, што патрапіла ў~інтэрнэт, ніколі з~яго не зьнікне, і нават выдаліць нейкі кантэнт канчаткова~--- гэта вялікая праблема. Апынуўшыся замкнёнымі ў~лічбавай бурбалцы, мы пазбаўляемся магчымасьці ўбачыць альтэрнатыўную інфармацыю. Нават калі мы нешта шукаем у~пошукавіку, выдача падладжваецца не пад адпаведнасьць запыту, а~пад гісторыю нашага пошуку. Атрымліваецца, што мы трапляем у~пятлю, змушаныя круціцца ў~адабранай для нас інфармацыі, штораз замацоўваючы існыя патэрны паводзінаў. 
 
-\tipbox{Гісторыя пошукавых запытаў, якая выкарыстоўваецца алгарытмамі, перашкаджае нам зьмяніцца, пашырыць бачаньне сьвету і разумець людзей з~альтэрнатыўнымі поглядамі. Бо мы нават не разумеем, што бачаць іншыя людзі ў~іх выдачы.}
+\infobox{Гісторыя пошукавых запытаў, якая выкарыстоўваецца алгарытмамі, перашкаджае нам зьмяніцца, пашырыць бачаньне сьвету і разумець людзей з~альтэрнатыўнымі поглядамі. Бо мы нават не разумеем, што бачаць іншыя людзі ў~іх выдачы.}
 
 Замыканьне ў~лічбавых бурбалках прыводзіць да радыкалізацыі, сьвет становіцца ўсё больш разьяднаным, узмацняецца пачуцьцё ізаляцыі. Людзі больш нецярпліва ставяцца да носьбітаў супрацьлеглых поглядаў і ўзмацняюць скрайнасьці ў~сваіх поглядах. Бо з~кожным клікам алгарытмы паказваюць вам больш інфармацыі, якая пацьвярджае вашыя погляды, і хаваюць інфармацыю, якая можа прымусіць вас у~іх сумнявацца. Падобны эфэкт атрымаў назву ``культурны трайбалізм'', калі людзі разьбіваюцца на інтэрнэт-плямёны, кожнае зь якіх лічыць свае погляды адзіна правільнымі і пазьбягае ўзаемадзеяньня зь іншымі.
 
 У рэальным сьвеце зьмесьціва кнігі ці кошт тавару не зьмяняюцца ў~залежнасьці ад таго, хто чытае кнігу ці хто купляе тавар. Але ў~лічбавым сьвеце зьмесьціва старонкі і кошт на тавар падладжваюцца пад вас. Факты ператвараюцца ў~ілюзіі, бо першапачатковая мэта алгарытмаў~--- утрымліваць вас як мага даўжэй ля экранаў, паказваючы вам асабістую карціну сьвету, выпінаючы тое, што мацней за ўсё вас прыцягвае або ятрыць. Як можна розным людзям знайсьці агульную мову, калі кожны зь іх бачыць у~экране свайго тэлефона зусім розныя карціны сьвету? Усё гэта адно правакуе і разьдзімае рознагалосьсі.
 
-\subsection*{Лічбавае скажэньне рэальнасьці.}
+\subsection*{Лічбавае скажэньне рэальнасьці}
 
 Сацыяльныя сеткі скажаюць рэальнае самаўспрыманьне. Чым больш часу жанчына праводзіць у~сацсетках, чым вышэй для яе важнасьць лайкаў, тым мацней яна схільная да парушэньняў успрыманьня вобразу цела і харчовых паводзінаў. Параўнаньне сябе з~адфаташопленнымі фатаграфіямі мадэляў павышае стрэс і зьніжае самаацэнку.
 
@@ -259,13 +259,13 @@
 
 \emph{``Зьясі рыбу~--- і будзеш сыты адзін вечар, загуглі рыбу~--- і будзеш бачыць яе цэлы тыдзень'',~--- дзеліцца з~намі сучасная народная мудрасьць. У скажонай рэальнасьці чалавек больш схільны набываць тое, што бачыць на экране, чым актыўна карыстаюцца прадаўцы.}
 
-\subsection*{Пошук нашых уразьлівасьцяў.}
+\subsection*{Пошук нашых уразьлівасьцяў}
 
 Абсалютная большасьць ``бясплатных'' сэрвісаў зусім не бясплатныя. Яны зьбіраюць інфармацыю аб вашых дзеяньнях, аналізуюць яе, знаходзячы вашыя ўпадабаньні. Кожнае ваша дзеяньне ў~інтэрнэце і ў~тэлефоне фіксуецца і захоўвацца, пачынаючы ад таго, колькі секунд вы глядзіце на карцінку, да кожнай вашай пакупкі. З клікаў складаецца поўная карціна вашых паводзінаў, якая дазваляе прадказваць вашыя дзеяньні і рэакцыі. Сутнасьць алгарытмаў~--- гэта ``if it bleeds, it leads'', то бок калі гэта крывавіцца, то будзе прадавацца. Чым мацней у~вас смартфон выклікае эмацыйны водгук, тым больш увагі гэта крадзе і тым даўжэй вы ў~ім седзіце. Чым больш ведаюць пра вас, тым прасьцей выклікаць у~вас рэакцыю, скамбінаваўшы навіны, падкінуўшы пасты людзей, значных для вас, і прапанаваўшы нешта купіць ці зьмяніць меркаваньне.
 
 Доступ да вашых дадзеных можа атрымаць дзяржава, скрасьці хакеры, купіць палітыкі, клінікі, працадаўцы, страхавыя. Выкарыстоўваючы вашыя дадзеныя, можна прымусіць вас купляць нешта, можна прымусіць вас кагосьці ненавідзець, галасаваць патрэбным чынам. Дадзеныя~--- гэта новая нафта. Суровае правіла бясплатнага сыру вястуе: калі вы ня плаціце за выкарыстаньне прадукту, значыць, вы і ёсьць канчатковы прадукт.
 
-\tipbox{Памятайце, што ня толькі вы чытаеце артыкул, але і артыкул чытае вас: усё, што вы клікніце, будзе выкарыстана супраць вас.}
+\infobox{Памятайце, што ня толькі вы чытаеце артыкул, але і артыкул чытае вас: усё, што вы клікніце, будзе выкарыстана супраць вас.}
 
 Упэўнены, што для сучасных сацыяльных праграмаў павінна быць патрабаваньне рассакрэціць іх алгарытмы і даваць магчымасьць адключыць іх у~асабістым профілі. Але цяпер у~нас нават няма права на прыватнасьць, права адмовіцца ад сачэньня за сабой у~лічбавым асяродзьдзі.
 
@@ -283,7 +283,7 @@
 
 \emph{Першае сэлфі было зроблена ў~1839 годзе, а~цяпер гэта стала паўсюдным сродкам самапрэзэнтацыі. Выяўляем сябе такімі, якімі хочам сябе бачыць і якімі спадабаемся іншым, каб сабраць лайкі. Вядома, акрамя прэзэнтацыі гэта яшчэ адна спроба зьвярнуць на сябе ўвагу, падняць самаацэнку. І далёка не заўсёды бясьпечная~--- спрабуючы прыцягнуць увагу незвычайным сэлфі, людзі гінуць.} 
 
-\tipbox{Ад сэлфі гіне больш людзей, чым ад нападу акул.}
+\infobox{Ад сэлфі гіне больш людзей, чым ад нападу акул.}
 
 У анляйн-размовах мы не атрымліваем зваротнай сувязі ад суразмоўцаў, але атрымліваем шмат дафаміну, прэзэнтуючы сябе і любуючыся сабой. Нашы анляйн-старонкі становяцца для нас крыніцай самаідэнтыфікацыі, а~іх прагляд падвышае самаацэнку. Зьвяртаючыся да групы людзей, мы схільныя перабольшваць рэчаіснасьць у~параўнаньні з~асабістай размовай з~адным чалавекам.
 
@@ -312,7 +312,7 @@
 
 \textbf{Лічбавае порна}~--- гэта магутная стымуляцыя дафамінавых рэцэптараў, якая прыводзіць да доўгатэрміновага зьніжэньня тэстастэрону, матывацыі і да выгараньня. Дафамінавая «халява» вельмі небясьпечная для падтрыманьня ўзроўню энэргіі. Небясьпека ж менавіта лічбавага порна ў~тым, што яно ўвесь час прапануе навізну, правакуе павышаць узровень жорсткасьці і не дае ніякага рэальнага досьведу. 
 
-\tipbox{Прыбярыце порна і стымуляцыю са свайго жыцьця, і вы адчуеце павышэньне лібіда і смаку жыцьця.}
+\infobox{Прыбярыце порна і стымуляцыю са свайго жыцьця, і вы адчуеце павышэньне лібіда і смаку жыцьця.}
 
 \textbf{Порна-палітыка.} Гэта дэфармаваньне сучаснай палітычнай сыстэмы, разбурэньне інстытуту рэпутацыі, калі залогам папулярнасьці зьяўляецца паясьнічаньне, хлусьня, пагрозы, абсурдныя заявы~--- усё толькі для таго, каб скрасьці больш увагі гледачоў. Сэнсавая нагрузка палітычных прамоваў пры гэтым імкнецца да нуля. Калі вы абураецеся і адцягваецеся ад працы~--- гэта спрацавала!
 
@@ -322,7 +322,7 @@
 
 Навіны часта пішуць журналісты, якія выкарыстоўваюць цяжкі арсэнал мэтадаў прапаганды, так пад соўсам навін мы атрымліваем прамываньне мазгоў. Частае паўтарэньне аднаго і таго ж, напрыклад, прыводзіць да таго, што мы пачынаем гэтаму верыць. Такія навіны ніколі не асьвятляюць дэталі, а~толькі даюць адзнакі і начэпліваюць цэтлікі. Адпісвайцеся ад тых, хто рэпосьціць дрэнныя навіны, менш камунікуйце з~тымі, хто ўвесь час залівае ваш мозг крывавымі і халодна-страшэннымі гісторыямі. Нэгатыўная інфармацыя нашмат хутчэй апрацоўваецца мозгам і дае цялесную рэакцыю ў~выглядзе павышэньня актыўнасьці сімпатыйнай стрэсавай сыстэмы. Калі гэта паўтараецца штодня, то можа прывесьці да выгараньня, дэпрэсіі, трывогі~--- мы пачынаем глядзець на сьвет празь несьвядомыя фільтры недаверу і трывогі.
 
-\tipbox{Чытаючы навіны, задавайце сабе пытаньне, ці датычыцца гэта асабіста вас? Калі не, дык не спажывайце гэтую інфармацыю і беражыце сваю энэргію.}
+\infobox{Чытаючы навіны, задавайце сабе пытаньне, ці датычыцца гэта асабіста вас? Калі не, дык не спажывайце гэтую інфармацыю і беражыце сваю энэргію.}
 
 Інфармацыя павінна стымуляваць да дзеяньня, а~не фармаваць пасіўнасьць. Звузьце фокус увагі да навін вашага раёна і мястэчка, дзе вы можаце прыняць удзел у~фармаваньні рэчаіснасьці і паўплываць на жыцьцё сваё і асяродзьдзя. Выберыце сабе кола сяброў і лепш цікаўцеся навінамі ў~іх. Таксама можна плаціць за кантэнт правераным выданьням, хто не зарабляе на рэкляме.
 
@@ -345,11 +345,11 @@
 
 «Я думаю, такім чынам, я існую»~--- казалі старажытныя. Сёньня мы кажам: «Я думаю, такім чынам, у~мяне разрадзіўся смартфон». Вядома, як і было напісана ў~пачатку гэтага разьдзела, лічбавыя тэхналёгіі~--- неад'емная частка нашага жыцьця, і мы ня зможам бязь іх абысьціся. Важна быць прасунутымі і актыўна вывучаць, як можна выкарыстоўваць новыя лічбавыя магчымасьці для павышэньня якасьці жыцьця. Але ў~пагоні за перавагамі важна выконваць тэхніку бясьпекі. Хачу прапанаваць вам набор ідэяў і парадаў~--- вы можаце абраць зь іх тое, што будзе лепш за ўсё працаваць менавіта для вас.
 
-\subsection*{Межы і буфэры.}
+\subsection*{Межы і буфэры}
 
 Усталюйце канкрэтныя межы выкарыстаньня смартфона. Гэта можа быць колькасьць гадзінаў для сацсетак, чытаньня, зносін або фізычныя межы, напрыклад, забарона на выкарыстаньне тэлефона ў~спальні і на кухні. Падумайце, куды вы можаце схадзіць без тэлефона? Пастрыгчыся, пагуляць у~парку, адправіцца ў~краму? Павялічвайце колькасьць такіх ``чыстых'' часавых зон, калі ў~вас побач няма тэлефона. Калі тэлефон неабходны як камера, уключыце авіярэжым. Ніколі і ні пры якіх абставінах не бярыце тэлефон у~ложак~--- гэта вельмі шкодная звычка, якая замінае паўнавартаснаму сну.
 
-\tipbox{Самыя эфэктыўныя~--- раніца да 12:00 і вечар пасьля 20:00 без сацыяльных сетак. Вызначце месцы, куды ня будзеце браць тэлефон ніколі, напрыклад лазенка, прыбіральня, кухня, спальня. Калі баіцеся праспаць, купіце звычайны будзільнік, а~не пачынайце свой дзень, хапаючы тэлефон і на аўтамаце пачынаючы яго праглядаць.}
+\infobox{Самыя эфэктыўныя~--- раніца да 12:00 і вечар пасьля 20:00 без сацыяльных сетак. Вызначце месцы, куды ня будзеце браць тэлефон ніколі, напрыклад лазенка, прыбіральня, кухня, спальня. Калі баіцеся праспаць, купіце звычайны будзільнік, а~не пачынайце свой дзень, хапаючы тэлефон і на аўтамаце пачынаючы яго праглядаць.}
 
 Для адсочваньня межаў усталюйце праграмы, якія паказваюць, колькі разоў вы карысталіся тэлефонам і чым менавіта. Вы можаце ўсталяваць содневыя ліміты для кожнае праграмы. Адсочвайце агульны час, праведзены ў~смартфоне,~--- гэтыя лічбы могуць вас жахнуць, асабліва калі вы падлічыце выдаткаваны за год час.
 
@@ -363,7 +363,7 @@
 
 \textbf{Мэтанакіраванае выкарыстаньне.} Смартфон~--- гэта ``соска для дарослых'', так жартуюць дзеці. Навучыцеся адрозьніваць, калі вы бераце тэлефон для вырашэньня канкрэтнай задачы, а~калі ад нуды. «Што я зараз зьбіраюся рабіць і колькі часу на гэта патрачу?»~--- пытайце і адказвайце шчыра. Калі ваш адказ ``нуда'' ці ``стрэс'', то знаходзьце больш здаровыя забаўкі і спосабы для зьніжэньня стрэсу. Прыцягвайце да лічбавага дэтоксу і сяброў, напрыклад, дамоўцеся пры сустрэчы скласьці ўсе тэлефоны ў~адну скрынку на стале.
 
-\subsection*{Лічбавае ўпарадкаваньне.}
+\subsection*{Лічбавае ўпарадкаваньне}
 
 Ня буду заклікаць вас выкінуць смартфон і купіць тэлефон-раскладушку, але добра б мець простыя спосабы сувязі накшталт кнопкавага тэлефона ці бранзалета-гадзіньніка зь сімкай. Выдаліце лішнія праграмы, адпішыцеся ад непатрэбных старонак і паштовых рассылак~--- зладзьце вялікую прыборку! Выдаліце ўсе апавяшчэньні ад праграмаў, акрамя крытычна важных.
 
@@ -373,7 +373,7 @@
 
 Адключыце ўсе апавяшчэньні ад праграмаў, акрамя канала сувязі з~блізкімі. Для зьніжэньня візуальнай нагрузкі вы можаце выкарыстоўваць пастаянны рэжым ``вячэрняга экрана'' або чорна-белы рэжым для меншага адцягненьня, самы радыкальны спосаб~--- гэта e-ink экраны, якія не выпраменьваюць сьвятло, яны прыцягваюць увагу менш за ўсё. Няхай ваша застаўка на тэлефоне будзе пустым фонам з~пытаньнем, якое павышае вашу прадуктыўнасьць, напрыклад: «Што я зараз зьбіраюся рабіць?», «Навошта я ўзяў тэлефон?», «Што мне зараз трэба?»
 
-\tipbox{Вядома, ад тэхналёгіяў ня трэба адмаўляцца, нам трэба ўпарадкаваць нашы адносіны з~тэлефонам.}
+\infobox{Вядома, ад тэхналёгіяў ня трэба адмаўляцца, нам трэба ўпарадкаваць нашы адносіны з~тэлефонам.}
 
 Тэлефон~--- гэта інструмэнт. А добры інструмэнт~--- той, якім мы карыстаемся для вырашэньня якога-небудзь пытаньня, а~потым адкладаем яго ўбок і займаецца сваімі справамі. Вы павінны кіраваць тэлефонам, а~ня ён~--- выкарыстоўваць вас. Але тэлефон жа адцягвае нас увесь час. Сёньня мы трацім на яго ў~сярэднім дзьве з~паловай гадзіны свайго жыцьця.
 
@@ -385,7 +385,7 @@
 
 \textbf{Выкарыстоўвайце аналягавыя мэтады.} Часьцей чытайце папяровыя кнігі, пішыце канспэкты, карыстайцеся папяровым дзёньнікам. Дасьледаваньні паказалі, што запіс канспэкта ад рукі больш эфэктыўны для разуменьня і запамінаньня матэрыялу, чым набор на ноўтбуку.
 
-\subsection*{Кібэрхондрыя.}
+\subsection*{Кібэрхондрыя}
 
 Акрамя розных відаў псэўда-дыягностыкі трывог людзям дадае і самодыягностікі. Інтэрнэт дазваляе зрабіць гэта нашмат больш эфэктыўна, чым стары добры даведнік хваробаў. Уласна, для такой зьявы ёсьць і асобны тэрмін кіберхондрыі~--- гэта імкненьне ставіць сабе дыягназы на падставе сымптомаў, знойдзеных у~пошукавіку.
 
@@ -397,7 +397,7 @@
 
 Большасьць карыстальнікаў робяць выснову аб дакладнасьці сайта на аснове яго дызайну, простасьці пошуку ў~ім і зразумелага апісання~--- гэтага цалкам дастаткова, каб пачаць давяраць. 75\,\% людзей зважаюць і на іншыя дыягназы, якія ёсць у~выдачы ці апісаннях. А калі гугліць часта, то можна апынуцца ў~бурбалцы фільтраў, калі чалавеку адусюль лезе рэклама лячэння, сімптомы хвароб і гісторыі ``выжылых''.
 
-\tipbox{Наш мозг мае і кагнітыўную памылку: чым больш мы даведаемся пра хваробу, тым больш верагоднай яна нам здаецца.}
+\infobox{Наш мозг мае і кагнітыўную памылку: чым больш мы даведаемся пра хваробу, тым больш верагоднай яна нам здаецца.}
 
 Чым гэта кепска? Трывожныя разлады пагаршаюць якасьць жыцьця, павялічваюць верагоднасьць ятрагеніі. Калі чалавек няправільна тлумачыць свае сымптомы, гэта можа прывесьці да пагаршэньня недыягнаставанага захворваньня: чалавек праводзіць час, накручваючы сябе і зьніжаючы настрой, замест таго, каб заняцца справай. 
 
