--- a/willpower/chapter5.tex
+++ b/willpower/chapter5.tex
@@ -22,7 +22,7 @@
 
 Наша праца стала амаль цалкам разумовай~--- ня толькі ў~офісе, але й дома. Мы купляем ежу, якую нам прывозіць кур'ер, посуд мые пасудамыйная машына, адзеньне мые пральная машына, прыбірае робат-пыласос. Шмат часу мы бавім не на вуліцы, а~ў памяшканьнях, дзе заўсёды ёсьць магчымасьць прысесьці. 
 
-\tipbox{Наша культура вучыць, што «ў нагах праўды няма», а~выхаваньне дзяцей спыняе высокі ўзровень актыўнасьці і гульні, прымушае сядзець ціха і абмяжоўваць рухі. Так наш мозг прывучаецца да таго, што трэба паводзіцца скавана, нерухома, і робіцца «маларухомым».}
+\infobox{Наша культура вучыць, што «ў нагах праўды няма», а~выхаваньне дзяцей спыняе высокі ўзровень актыўнасьці і гульні, прымушае сядзець ціха і абмяжоўваць рухі. Так наш мозг прывучаецца да таго, што трэба паводзіцца скавана, нерухома, і робіцца «маларухомым».}
 
 У сярэднім 30--50\,\% людзей вядуць маларухомы лад жыцьця, а~яшчэ 20--40\,\% хоць і рухаюцца больш, але гэтага ўсё роўна недастаткова для падтрыманьня аптымальнага здароўя. Рух~--- гэта натуральная чалавечая патрэба, такая ж, як патрэба ў~ежы, вадзе, бясьпецы або інтэрнэце. Многія людзі недаацэньваюць пагрозу дэфіцыту фізычнае актыўнасьці, прытым што менавіта адсутнасьць руху зьяўляецца адной зь вядучых прычынаў неінфэкцыйнай хворнасьці і пашкоджвае практычна ўсе органы і сыстэмы арганізма.
 
@@ -45,7 +45,7 @@
 
 «Як суконшчыкі чысьцяць сукны, выбіваючы іх ад пылу, так і гімнастыка чысьціць арганізм»,~--- словы Гіпакрата, а~яму можна верыць. Сапраўды, рух стымулюе аўтафагію~--- самаачышчэньне клетак. 
 
-\tipbox{Жыцьцё~--- гэта рух, і калі руху становіцца менш, то становіцца менш і жыцьця.}
+\infobox{Жыцьцё~--- гэта рух, і калі руху становіцца менш, то становіцца менш і жыцьця.}
 
 Гэта такое замкнёнае кола: чым больш мы фізычна актыўныя, тым лягчэй нам падтрымліваць гэтую самую актыўнасьць. Апроч іншага, практыкаваньні важныя для падтрыманьня дастатковай цяглічнай масы: у~сярэднім з~35 гадоў пачынае адбывацца паступовая страта цяглічнай масы, якая з~узростам толькі ўзмацняецца (саркапэнія), і цягліцы замяшчаюцца тлушчам.
 
@@ -53,13 +53,13 @@
 
 Рэч ня толькі ў~колькасьці, але і ў~якасьці цягліцаў. «Гультаяватыя» цягліцы горш спальваюць тлушчы, а~вось фізычная актыўнасьць зьмяняе мэтабалізм цягліцаў, амалоджвае іх, павялічвае ў~іх колькасьць мітахондрый, павялічвае іх актыўнасьць. Такія «актыўныя» цягліцы лепш спальваюць тлушчы, выдзяляюць больш чыньнікаў росту, абараняюць ад лішку глюкозы і тлушчу ў~крыві пры стрэсе. Таму не хвалюйцеся, што цягліцы не растуць,~--- яны проста пачынаюць працаваць нашмат лепш.
 
-\subsection*{Мэтабалізм.}
+\subsection*{Мэтабалізм}
 
 Цягліцы важныя ня толькі для руху, яны таксама зьяўляюцца магутнай абаронай мэтабалізму. Фізычная актыўнасьць і цяглічны тонус зьмяншаюць рызыку атлусьценьня і цукроўкі, павялічваюць адчувальнасьць да інсуліну. Цяпер, калі я пішу гэтыя радкі, мільёны людзей па ўсім сьвеце замкнёныя ў~дамах на карантын. \textbf{Адыліж часта мы зусім добраахвотна замыкаем самі сябе.}
 
 \emph{Актыўнасьць меншая за 1000 крокаў на дзень за паўмесяца ў~людзей зь пераддыябэтам выклікае моцнае пагаршэньне вугляводнага абмену. Умераныя сілавыя трэніроўкі ўсяго два разы на тыдзень аднаўляюць адчувальнасьць да глюкозы ў~кожнага трэцяга ў~гэтай жа групе людзей.}
 
-\subsection*{Сэрца.}
+\subsection*{Сэрца}
 
 Фізычная актыўнасьць павялічвае элястычнасьць сасудаў, паляпшае працу сэрца, спрыяе выдзяленьню рэчываў, якія расслабляюць сасуды і паляпшаюць крывацёк. 
 
@@ -81,7 +81,7 @@
 
 Фізычная актыўнасьць запавольвае старэньне і значна паляпшае якасьць жыцьця ў~старасьці: на 20\,\% паляпшае якасьць жыцьця, аддаляе непрацаздольнасьць і можа падаўжаць пэрыяд здароўя на цэлых 15 гадоў! Пры гэтым розныя віды спорту падаўжаюць жыцьцё ад 3 да 6 гадоў. Акрамя таго, дастатковы ўзровень руху на 11\,\% зьмяншае сьмяротнасьць ад ракавых хваробаў: анкалягічныя хворыя, якія займаюцца фізычнай актыўнасьцю, маюць лепшыя зыходы.
 
-\subsection*{Рухальная актыўнасьць і стрэс.}
+\subsection*{Рухальная актыўнасьць і стрэс}
 
 Натуральная рэакцыя на стрэсары~--- «біць або бегчы», таму актыўнасьць дапамагае бясьпечна ўтылізаваць мэтабалічныя стрэсавыя эфэкты і выкарыстоўваць «па прызначэньні» стрэсавы выкід тлушчаў і глюкозы ў~кроў. Фізычная актыўнасьць ня толькі зьніжае картызол, але й дапамагае падтрымліваць аптымальны ўзровень тэстастэрону, які «падае» пры стрэсе. Чым больш вы натрэніраваныя фізычна, тым больш стрэсаўстойлівыя і стрыманыя на перамовах: невыпадкова многія палітыкі і бізнэсмэны актыўна займаюцца спортам, а~многія спартоўцы пасьпяховыя ў~бізнэсе і палітыцы. 
 
@@ -93,13 +93,13 @@
 
 \textbf{Актыўнасьць~--- гэта сапраўдны лек.} Тыя, хто яго не прымае, мае рызыку зьяўленьня хваробаў сэрца на 45\,\% вышэй, астэапарозу~--- на 59\,\%, дыябэту~--- на 50\,\%. Спорт памяншае рызыку разьвіцьця больш за 15 відаў раку: кішачніка, малочнай залозы, эндамэтрыя, нырак, печані, стрававода, лёгкіх, страўніка, маткі, лімфомы, міеламы. Пры гэтым для многіх відаў раку ступень зьніжэньня рызыкі была дозазалежнай, то бок больш спорту~--- менш рызыка. Вядома, занадта захапляцца бегам пад пякучым сонцам ня трэба: у~дасьледаваньні выявілі павелічэньне рызыкі разьвіцьця мэляномы пры павышэньні актыўнасьці. Актыўнасьць паляпшае шматлікія біямаркеры: зьмяншаюцца паказьнікі запаленьня, мачавой кіслаты, ціску, глікаванага гемаглабіну. Можа нават памяншацца таўшчыня комплексу інтым-мэдыя, што гаворыць пра адваротнае разьвіцьцё атэрасклерозу.
 
-\tipbox{Чым даўжэй вы трэніруецеся, тым больш прыкметна нарастае розьніца паміж вамі і тымі, хто ляжыць на канапе, менавіта ў~разрэзе рызыкі для здароўя. І наадварот: калі вы рухаецеся менш, усе гэтыя лічбы працуюць супраць вас.}
+\infobox{Чым даўжэй вы трэніруецеся, тым больш прыкметна нарастае розьніца паміж вамі і тымі, хто ляжыць на канапе, менавіта ў~разрэзе рызыкі для здароўя. І наадварот: калі вы рухаецеся менш, усе гэтыя лічбы працуюць супраць вас.}
 
 \textbf{Гіпадынамія} павялічвае рызыку інфаркту ў~два разы, сьмяротнасьці ад яго~--- у~тры разы, таксама павышаецца рызыка атэрасклерозу і тромбаўтварэньня. Расьце рызыка захворваньняў суставаў, зьніжаецца лібіда, нарастае атлусьценьне. Кожны трэці выпадак цукроўкі, кожны чацьвёрты выпадак раку малочнай залозы і тоўстай кішкі зьвязаны зь нізкай рухальнай актыўнасьцю. Што ўжо казаць пра вэнозны застой, завалы, гемарой. Гіпадынамія на 50\,\% павышае рызыку сьмяротнасьці ад усіх прычынаў і на 150\,\% рызыку сардэчна-сасудзістых захворваньняў.
 
 Таўсьцейшыя людзі сядзяць на дзьве гадзіны даўжэй, чым людзі са звычайнай масай цела. Узьнікае заганнае кола: чым больш сядзім, тым таўсьцейшымі робімся, а~чым таўсьцейшымі мы робімся, тым цяжэй нам рухацца. Як апэтыт прыходзіць падчас ежы, так і цяглічная радасьць зьяўляецца пасьля руху. Чым актыўней мы рухаемся, тым лягчэй нам гэта рабіць, тым лепей працуюць цягліцы і тым болей задавальненьня мы атрымліваем і меней сядзім.
 
-\subsection*{Тромбаўтварэньне.}
+\subsection*{Тромбаўтварэньне}
 
 Нерухомасьць зьвязаная з~павелічэньнем рызыкі тромбаў: чым менш працуюць ногі, тым мацнейшы застой, бо праца цягліцаў ніжніх канцавінаў важная для забесьпячэньня вэнознага звароту (т.зв. «цяглічнае сэрца»). Часьцей за ўсё тромбы ўтвараюцца ў~нагах, але могуць трапляць у~лёгкія (ТЭЛА~--- тромбаэмбалія лёгачнай артэрыі, у~25\,\% пры буйным тромбе надыходзіць раптоўная сьмерць), сэрца (інфаркт), мозг (інсульт), выклікаючы цяжкія наступствы. Пастаянная ўмераная побытавая фізычная актыўнасьць~--- важны чыньнік даўгалецьця, у~тым ліку для прафіляктыкі тромбаўтварэньня.
 
@@ -107,7 +107,7 @@
 
 \textbf{Эвалюцыйна нам патрэбныя розныя спосабы актыўнасьці.} Мы, як нашчадкі паляўнічых-зьбіральнікаў, маем патрэбу ў~працяглай нізкаінтэнсіўнай нагрузцы~--- як зьбіральнікі, і ў~сярэдняй або высокаінтэнсіўнай~--- як паляўнічыя і ваяры. Паляваньне~--- гэта працяглая хада, затым бег (перасьлед здабычы), у~пэўны момант часу набор высокай хуткасьці й магутнасьці.
 
-\tipbox{Ідэальнага і прыдатнага для ўсіх спорту няма, але ёсьць камбінацыя розных відаў актыўнасьці, аптымальная для большасьці людзей.}
+\infobox{Ідэальнага і прыдатнага для ўсіх спорту няма, але ёсьць камбінацыя розных відаў актыўнасьці, аптымальная для большасьці людзей.}
 
 Гэтая структура фізычнае актыўнасьці можа быць уяўленая ў~выглядзе пірага. Разумею, што мэтафара пірага як мадэлі рухомасьці ня вельмі здорава гучыць, затое навочна дэманструе, як усё працуе. Такім чынам, цеста пірага~--- гэта нетрэніроўная актыўнасьць, а~вось начыньне~--- адмысловыя заняткі спортам або любая іншая фізычная нагрузка. Таму спачатку трэба «замясіць цеста», то бок стварыць дастатковы і пастаянны ўзровень нетрэніроўнай актыўнасьці, а~затым дадаваць «начыньне».
 
@@ -137,13 +137,13 @@
 
 Давайце разьбяромся, што мы павінны прыбраць са свайго жыцьця для паляпшэньня фізычнае актыўнасьці. 
 
-\tipbox{Самае важнае~--- гэта скараціць агульны час, праведзены седзячы і лежачы, і разьбіць прамежкі доўгага становішча седзячы на драбнейшыя, зрабіўшы рухальную актыўнасьць раўнамернай на працягу дня.}
+\infobox{Самае важнае~--- гэта скараціць агульны час, праведзены седзячы і лежачы, і разьбіць прамежкі доўгага становішча седзячы на драбнейшыя, зрабіўшы рухальную актыўнасьць раўнамернай на працягу дня.}
 
 \textbf{Меней сядзець.} Становішча седзячы~--- гэта асноўная форма гіпадынаміі, на другім месцы~--- становішча лежачы. Больш за палову ўсіх людзей праводзяць свой дзень, седзячы ў~самых розных формах: у~офісе, за стырном аўтамабіля, дома ў~фатэлі і да т.~п. Калі мы сядзім, то цягліцы кора (восевыя цягліцы цела, якія ўдзельнічаюць у~падтрыманьні цела) не працуюць, таму ў~становішчы седзячы і лежачы мы трацім менш калёрыяў, сэрцу цяжэй прапампоўваць кроў, плюс назапашваецца яшчэ цэлы набор нэгатыўных наступстваў.
 
 \textbf{Сядзеньне звыш 4--6 гадзінаў на дзень наносіць нам шкоду, якая толькі часткова кампэнсуецца фізычнымі практыкаваньнямі.} У выніку працяглага сядзеньня ў~цягліцах на 90\,\% памяншаецца актыўнасьць фэрмэнту ліпапратэінліпазы, якая расшчапляе тлушчы. Кароткая і сярэдняя працягласьць нагрузкі істотна не ўплывае на гэты працэс. Галоўная задача~--- скарачаць час, праведзены ў~становішчы седзячы: падлічыць, колькі гадзінаў на дзень вы седзіце, жахнуцца гэтаму і скласьці плян па скарачэньні гэтага часу.
 
-\subsection*{Што рабіць? Першая ідэя~--- устаць.}
+\subsection*{Што рабіць? Першая ідэя~--- устаць}
 
 Нашы продкі садзіліся толькі для адпачынку, калі стамляліся. Многія доўгажыхары, хоць і не займаюцца спэцыяльна спортам, цэлы дзень знаходзяцца ў~руху і амаль не сядзяць. Карысна частку сядзячай працы перанесьці ``на ногі'' і пачаць працаваць стоячы. У гэтым няма нічога незвычайнага: яшчэ нядаўна людзі працавалі стоячы, за канторкамі. Калі мы працуем стоячы, у~нас задзейнічаныя буйныя групы цягліц, а~нагрузка на сьпіну ў~два разы меншая ў~параўнаньні зь сядзеньнем.
 
@@ -151,7 +151,7 @@
 
 Праца стоячы спальвае на 1,36 кілакалёрыяў у~хвіліну больш, чым сядзеньне. Гэта амаль 80 дадатковых калёрыяў у~гадзіну. Стаяньне на працягу дзьвюх гадзінаў на 2\,\% зьніжае ўзровень глюкозы ў~крыві і на 11\,\%~--- узровень трыгліцерыдаў. Становішча стоячы~--- гэта больш моцная поза, таму мы лепей трываем стрэс і падвышаем прадуктыўнасьць, бо пракрастынаваць стоячы нашмат складаней.
 
-\subsection*{Скарачайце колькасьць гадзінаў, праведзеных седзячы, і дома.}
+\subsection*{Скарачайце колькасьць гадзінаў, праведзеных седзячы, і дома}
 
 Прагляд тэлевізара, кампутарныя гульні і да т.~п. таксама шкодныя. Любімы сэрыял можна паглядзець і зь велатрэнажора, а~ад тэлевізара варта наогул адмовіцца: глядзець «скрыню»~--- гэта ўжо мавэтон.
 
@@ -159,17 +159,17 @@
 
 \emph{Навукоўцы, дасьледуючы лад жыцьця паляўнічых-зьбі\-раль\-ні\-каў хадза, выявілі, што яны даволі шмат сядзяць. Вывучэньне паказала, што з~пункту гледжаньня біямэханікі сядзеньне на кукішках дае нашмат больш высокую статычную нагрузку на цягліцы ног і кора, чым звычайнае сядзеньне, набліжаючыся да хады! Гэта вядзе і да меншых рызыкаў для здароўя. Поза на кукішках можа быць адным з~элемэнтаў дынамічнае позы, разам зь сядзеньнем на крэсьле, з~працай стоячы, працай лежачы. Акрамя таго, так бясьпечней за ўсё паднімаць нешта з~падлогі і нашмат карысьней для здароўя зьдзяйсьняць у~ёй дэфэкацыю. На жаль, некаторым будзе складана яе выкарыстаць з~ужо апісаных анатамічных прычынаў.}
 
-\subsection*{Выкарыстоўвайце дынамічную позу.} Зьмена позы дапамагае пазьбегнуць зацяканьня цягліцаў, падвысіць прадуктыўнасьць. Ня трэба стаяць гадзінамі: як толькі адчулі стому ў~нагах~--- сядайце і працуйце седзячы. Доўгае нерухомае стаяньне таксама можа нашкодзіць. Для адпачынку на 15 хвілінаў закіньце ногі на стол або сьцяну вышэй за ўзровень галавы~--- гэта паляпшае адток крыві. Вы можаце прыдумаць любыя зручныя вам працоўныя позы~--- галоўнае не захрасаць у~іх надоўга. Працуйце пэрыядычна лежачы~--- гэта падвышае крэатыўнасьць.
+\subsection*{Выкарыстоўвайце дынамічную позу} Зьмена позы дапамагае пазьбегнуць зацяканьня цягліцаў, падвысіць прадуктыўнасьць. Ня трэба стаяць гадзінамі: як толькі адчулі стому ў~нагах~--- сядайце і працуйце седзячы. Доўгае нерухомае стаяньне таксама можа нашкодзіць. Для адпачынку на 15 хвілінаў закіньце ногі на стол або сьцяну вышэй за ўзровень галавы~--- гэта паляпшае адток крыві. Вы можаце прыдумаць любыя зручныя вам працоўныя позы~--- галоўнае не захрасаць у~іх надоўга. Працуйце пэрыядычна лежачы~--- гэта падвышае крэатыўнасьць.
 
 \emph{Поза напаўлежачы не перагружае хрыбет і падабаецца многім. Напрыклад, Максім Багдановіч звычайна чытаў і пісаў толькі лежачы, лежачы працавалі палітык Уінстан Чэрчыль, пісьменьнік Марк Твен, а~філёзаф Томас Гобс неяк нават пасьпісваў усе прасьціны~--- настолькі яму не хацелася вылазіць з-пад коўдры па паперу.}
 
-\tipbox{Становішча стоячы~--- гэта «мацнейшая» поза, таму мы лепш пераносім стрэс і павялічваем прадукцыйнасць, бо пракрастынаваць стоячы заўважна складаней!}
+\infobox{Становішча стоячы~--- гэта «мацнейшая» поза, таму мы лепш пераносім стрэс і павялічваем прадукцыйнасць, бо пракрастынаваць стоячы заўважна складаней!}
 
-\subsection*{Рабіце перапынкі.}
+\subsection*{Рабіце перапынкі}
 
 Небясьпечны ня толькі агульны час сядзеньня, але й працяглыя эпізоды нерухомасьці. Навукоўцы давялі, што чым больш перапынкаў, тым карысьней для здароўя: гэта ўплывае на аб'ём таліі, масу цела, узровень глюкозы і тлушчаў у~крыві. Таму старайцеся рабіць перапынкі, кожную гадзіну ўстаючы з-за стала хаця б на хвіліну. Нават калі вы прыўстанеце ўсяго на некалькі сэкундаў і проста сядзеце па-іншаму чыста анатамічна, будзе менш зацяканьня ў~целе і лепш для вас.
 
-\subsection*{Запоўніце перапынкі рухам.}
+\subsection*{Запоўніце перапынкі рухам}
 
 Нават дзьве хвіліны фізычнай актыўнасьці могуць аказаць істотны ўплыў на здароўе. Такія перапынкі карысныя і для прадуктыўнасьці, бо перадухіляюць стомленасьць і выгараньне. Купіце пясочны гадзіньнік на 2--3-5 хвілін для міні-перапынкаў. Схадзіце да калегаў, падыдзіце да акна, спусьціцеся па лесьвіцы, выйдзіце на вуліцу і назад, выпіце вады, а~калі ваш «сядзячы мозг» будзе спакушаць вас вольным месцам у~транспарце~--- не паддавайцеся яму!
 
@@ -246,11 +246,11 @@
   \item анаэробная зона, калі лактат расьце яшчэ вышэй, і дыхаць можна толькі 3 крокі ўдых~--- 3 крокі выдых. Для трэніровак аптымальна прытрымлівацца аэробнай зоны.
 \end{itemize}
 
-\tipbox{Простая і карысная фізычная актыўнасьць~--- гэта павольны бег трушком працягласьцю да 45 хвілін, з~пульсам 60--80\,\% ад максімальнага сумарна ад 150 да 360 хвілінаў на тыдзень, г.~зн. ад 3 да 5 трэніровак.}
+\infobox{Простая і карысная фізычная актыўнасьць~--- гэта павольны бег трушком працягласьцю да 45 хвілін, з~пульсам 60--80\,\% ад максімальнага сумарна ад 150 да 360 хвілінаў на тыдзень, г.~зн. ад 3 да 5 трэніровак.}
 
 Для бегу выбірайце прыгожае месца са сьвежым паветрам, зручны абутак, азнаёмцеся зь біямэханікай бегу і стартуйце. Перавагі аэробнай актыўнасьці ў~тым, што яна бадзёрыць, уцягвае, дае цяглічную радасьць, мае мала пабочных эфэктаў, не патрабуе глыбокага засваеньня тэхнікі, плюс яе можна рабіць у~групе ці з~партнёрам.
 
-\subsection*{Тэхніка бясьпекі пры бегу.}
+\subsection*{Тэхніка бясьпекі пры бегу}
 
 Прызямляцца варта на мысок роўна пад цэнтрам цяжару цела. Імкніцеся не рабіць занадта доўгія крокі, няхай будзе для пачатку каля 90 крокаў у~хвіліну. Рукі ў~ідэале павінны быць сагнутыя і рухацца ўздоўж цела. Калі вы пачынаеце бегчы, ня горбіцеся, трымайце калені мяккімі, глядзіце наперад, а~не ў~зямлю. Удыхайце паветра носам, дыхайце раўнамерна. У працэсе бегу не разгойдвайцеся, сярэдняя лінія вашага цела павінна быць стабілізаваная. Перад трэніроўкай абавязкова рабіце разьмінку, прынамсі 10 хвілінаў лёгкага бегу ці хуткай хадзьбы.
 
@@ -258,7 +258,7 @@
 
 Ваш натуральны тэмп павінен даваць магчымасьць казаць поўнымі сказамі: калі размаўляць цяжка, вы перавышаеце сваю аптымальную хуткасьць. Хуткае павышэньне нагрузкі прыводзіць да траўмаў, таму не павялічвайце штотыдзень колькасьць кілямэтраў больш, чым на 10\,\%. Важнае і пачуцьцё меры, бо залішні аб'ём трэніровак падвышае рызыку траўмаў: калена бегуна, запаленьне ахілесава сухажыльля, сындром расколатай галёнкі і інш. Бегайце ў~адмысловым бегавым абутку. Ідэальна бегаць па грунце, яшчэ лепш~--- па перасечанай мясцовасьці з~прыгожымі краявідамі.
 
-\subsection*{Дадайце няўстойлівасьці.}
+\subsection*{Дадайце няўстойлівасьці}
 
 Невідавочная пагроза для нашых цягліцаў~--- гэта роўныя паверхні. Роўная падлога, дарожка, калідор… гучыць і выглядае выдатна, дзе ж праблема? Рэч у~тым, што наша рухальная сыстэма эвалюцыйна прыстасаваная да руху па няроўных паверхнях. Сыстэмы раўнавагі і каардынацыі без належнай нагрузкі заўчасна атрафуюцца, мы страчваем плястычнасьць і ўстойлівасьць. З узростам гэта прыводзіць да ўзмацненьня крохкасьці і прыкметнага зьніжэньня якасьці жыцьця.
 
@@ -285,11 +285,11 @@
 
 Анаэробная актыўнасьць~--- гэта практыкаваньні, для выкананьня якіх энэргія выпрацоўваецца пры акісьленьні глюкозы ў~адсутнасьці кіслароду. Калі аэробная актыўнасьць уключае больш-менш раўнамерныя практыкаваньні, то анаэробныя трэніроўкі звычайна маюць выразную пэрыядызацыю: спачатку актыўная праца, затым адпачынак, па прынцыпе «трэніруйся каротка, але цяжка». Да іх адносяцца сілавы спорт, армрэсьлінг, красфіт, спрынт і да т.~п. Многія віды актыўнасьці могуць быць выкананыя ў~розных рэжымах: бег-спрынт і бег трушком, спрынт на ровары і спакойная велапрагулка.
 
-\subsection*{Разнастайце бег.}
+\subsection*{Разнастайце бег}
 
 Спачатку 100 мэтраў спрынту, потым 300 мэтраў пешшу, аднавіць дыханьне, затым зноў спрынт на максімальнай хуткасьці. Але такі від трэніроўкі не пасуе пачаткоўцам і супрацьпаказаны пры некаторых захворваньнях. Замест таго каб выконваць нагрузку «да канца», карысьней трэніравацца пры 80--90\,\% пульсу ад максімальнага. Такая актыўнасьць павялічвае ўзровень тэстастэрону, спрыяе цяглічнаму росту, дабратворна адбіваецца на здароўі костак і яшчэ на мностве іншых паказьнікаў арганізма.
 
-\subsection*{Базавыя практыкаваньні.}
+\subsection*{Базавыя практыкаваньні}
 
 Сярод размаітасьці ўсемагчымых практыкаваньняў перавагу трэба аддаць базавым~--- не ізаляваным,~--- якія залучаюць вялікую колькасьць цяглічных груп і выконваюцца са свабоднымі вагамі або вагой свайго цела. Гэта палеатрыяда «штурхай-цягні-брыкай». 
 
@@ -303,7 +303,7 @@
 
 \textbf{Сілавыя практыкаваньні.} У прафэсійным спорце гэта жым лежачы, станавая цяга, прысяданьні са штангай. У хатніх умовах вы можаце рабіць прысяданьні, падцягваньні на турніку і адцісканьні, працуючы са сваёй вагой. Выпады, адцісканьні на брусах, заскакваньні, жым над галавой, практыкаваньні з~гірай, жым штангі стоячы, бэрпі~--- гэта прыклады іншых відаў базавых практыкаваньняў, якія даюць найлепшы эфэкт для росту цягліцаў. Навічкі могуць цалкам скласьці зь іх сваю трэніроўку. 
 
-\tipbox{Базавыя практыкаваньні патрабуюць ідэальнай тэхнікі, бо іх няправільнае выкананьне зь вялікімі вагамі павялічвае рызыку траўмы нават пры невялікіх памылках.}
+\infobox{Базавыя практыкаваньні патрабуюць ідэальнай тэхнікі, бо іх няправільнае выкананьне зь вялікімі вагамі павялічвае рызыку траўмы нават пры невялікіх памылках.}
 
 У кожным практыкаваньні спачатку вызначыце сваю максімальную вагу (досьледным шляхам і з~дасьведчаным трэнерам!), а~трэніруйцеся з~вагамі 60--75\,\% ад максімуму~--- такая нагрузка добра пасуе для актывацыі росту розных цяглічных валокнаў. Сярэдні дыяпазон паўтораў (8--12 разоў) аптымальны для максімальнага росту цягліцаў, нізкая колькасьць паўтораў (1--5 разоў) зь яшчэ большымі вагамі паляпшае нэрвова-цяглічную адаптацыю.
 
@@ -330,7 +330,7 @@
 
 Сутнасьць сыстэмы высокаінтэнсіўнай інтэрвальнай трэніроўкі ВІІТ (HIIT) заключаецца ў~аб'яднаньні як аэробнага, так і анаэробнага падыходаў. Спачатку на кароткі прамежак (10--20 сэкундаў) часу мы перавышаем аэробны парог, выходзім у~анаэробную зону, затым вяртаемся назад, працуючы даўжэйшы пэрыяд зь нізкай нагрузкай. Гэта дазваляе нагружаць абодва тыпы цяглічных валокнаў, ствараць большы кіслародны голад, што стымулюе тлушчаспаленьне, таксама ВІІТ эфэктыўна павялічваюць адчувальнасьць да інсуліну. 
 
-\tipbox{Трэніроўкі ВІІТ досыць кароткія, 20--30 хвілінаў, падыходы адсочвайце з~дапамогай таймэра.}
+\infobox{Трэніроўкі ВІІТ досыць кароткія, 20--30 хвілінаў, падыходы адсочвайце з~дапамогай таймэра.}
 
 Сярод розных сыстэмаў сваім мінімалізмам вылучаецца \textbf{табата}, дзе трэніроўка можа доўжыцца чатыры хвіліны і складаецца з~васьмі раундаў, дзе 20 сэкундаў займае выкананьне практыкаваньня, а~10 сэкундаў~--- адпачынак. Можна выканаць восем розных практыкаваньняў або чаргаваць меншую іх колькасьць. Падлічвайце колькасьць паўтораў у~кожным падыходзе і складайце іх~--- гэта дапаможа вам адсочваць прагрэс. Можна спампаваць табата-таймэры, каб было зручней прытрымлівацца раўндаў. Або тры наступныя сэрыі з~адпачынкам паміж імі па 3 хвіліны: 30 сэкундаў моцных практыкаваньняў, 15 сэкундаў адпачынку і так 8 разоў.
 
@@ -359,7 +359,7 @@
 
 Невыпадкова гульнявыя віды спорту лепш падаўжаюць жыцьцё, а~танцы карысьнейшыя за фізычную актыўнасьць у~шэрагу выпадкаў, напрыклад пры нэўрадэгенэратыўных захворваньнях. Развучваючы новыя рухі, мы трэніруем яшчэ й рухальную памяць, што вельмі карысна для мозгу. Калі апошнім разам вы развучвалі новы для вас рух?
 
-\subsection*{Больш гульняў і танцаў.}
+\subsection*{Больш гульняў і танцаў}
 
 У гульнях і танцах мы задзейнічаем нашмат больш цяглічных груп у~большай разнастайнасьці рухальных патэрнаў і з~пастаяннай зьменай кірунку руху. Яшчэ адзін плюс~--- міжвольнае ўцягваньне ў~гульню без неабходнасьці валявога самапрымусу. Гэта найлепшы спосаб трэніравацца і адначасова адпачываць, а~таксама яшчэ й камунікаваць, як гэта адбываецца пры занятках тэнісам, футболам, танцамі. Карысьць ад такой фізычнай актыўнасьці павялічваецца ў~разы.
 
@@ -373,11 +373,11 @@
 
 Галоўнае~--- ня трэба занадта старацца, хай гульня расслабляе вас. Як было заўважана: «Ніхто ня ставіцца да гульні ў~тэніс так сур'ёзна, як аматары, якія гуляюць па выходных». Гульні паглынаюць вашу ўвагу, даюць адпачынак ад стрэсу, расслабляюць, даюць магчымасьць камунікаваць, канкураваць і перамагаць. Няважна, якая гульня, ад тэнісу да Pokemon go, важныя задавальненьне і сумесны рух. Асабліва патрэбная спантанная актыўнасьць тым, хто знаходзіцца ў~дэпрэсіі ці выгараньні. 
 
-\tipbox{Гульні можна прыдумаць на пустым месцы, напрыклад хто саб'е каменем пустую бутэльку на лецішчы, хто далей закіне камень у~возера і да т.~п.}
+\infobox{Гульні можна прыдумаць на пустым месцы, напрыклад хто саб'е каменем пустую бутэльку на лецішчы, хто далей закіне камень у~возера і да т.~п.}
 
 Здаровы чалавек заўсёды мае патрэбу ў~руху. Зьніжэньне рухальнай актыўнасьці~--- гэта індыкатар перавышэньня фізычных або стрэсавых нагрузак. Як апэтыт прыходзіць падчас яды, так і задавальненьне ад руху прыходзіць падчас гульняў. Успомніце, як часта бывала, што вы не хацелі выбірацца на заняткі ці ў~парк, а, выбраўшыся, атрымлівалі задавальненьне ад руху і былі радыя прынятаму рашэньню.
 
-\tipbox{Атрымлівайце задавальненьне.} Многія людзі пазьбягаюць і баяцца фізычных практыкаваньняў, таму што для іх гэта цяжкая, нецікавая і руцінная праца. Але ж гэта ня так! Добрая кампанія, цікавы маршрут, новыя адкрыцьці зробяць вашу трэніроўку вясёлай, драйвовай і энэргічнай. Падыходзьце творча да свайго паўсядзённага раскладу: падумайце, дзе можна дадаць крыху актыўнасьці. Сумесная фізычная актыўнасьць зь сям'ёй ці сябрамі спрыяе ўзмацненьню матывацыі. Ня стойце на месцы падчас прагулкі з~сабакам, а~рухайцеся і гуляйце зь ім, як у~дзяцінстве.
+\infobox{Атрымлівайце задавальненьне.} Многія людзі пазьбягаюць і баяцца фізычных практыкаваньняў, таму што для іх гэта цяжкая, нецікавая і руцінная праца. Але ж гэта ня так! Добрая кампанія, цікавы маршрут, новыя адкрыцьці зробяць вашу трэніроўку вясёлай, драйвовай і энэргічнай. Падыходзьце творча да свайго паўсядзённага раскладу: падумайце, дзе можна дадаць крыху актыўнасьці. Сумесная фізычная актыўнасьць зь сям'ёй ці сябрамі спрыяе ўзмацненьню матывацыі. Ня стойце на месцы падчас прагулкі з~сабакам, а~рухайцеся і гуляйце зь ім, як у~дзяцінстве.
 
 \textbf{Чым больш вы рухаецеся, тым больш вам хочацца рухацца!}
 
@@ -416,23 +416,23 @@
 
 Прыкметамі \textbf{недатрэніраванасьці} зьяўляецца адсутнасьць росту паказьнікаў, а~\textbf{ператрэніраванасьць} выяўляецца ў~парушэньнях псыхаэмацыйнага стану, млявасьці, павышэньні пульсу або ціску ў~спакоі, цяглічных болях, пагаршэньні спартыўных вынікаў, парушэньнях сну, разьбітасьці на наступны дзень пасьля трэніроўкі, зьніжэньні імунітэту і страце матывацыі. Часта ператрэніраванасьць бывае ў~тых, хто спрабуе «кампэнсаваць» прапушчаную трэніроўку або паскорыць свой прагрэс занадта высокім прыростам нагрузкі~--- ня варта так рабіць! Для прафіляктыкі ператрэніраванасьці не падразайце свой каляраж, дзяліце праграму на блёкі, аднаўляйцеся ў~саўне і на масажы, пазьбягайце нутрыцэўтычных дэфіцытаў (мінэралы, вітаміны), рабіце перапынкі або памяншайце трэніровачны аб'ём пры прыкметах ператрэніраванасьці.
 
-\subsection*{Адсочвайце прагрэс.}
+\subsection*{Адсочвайце прагрэс}
 
 Прагрэс можна адсочваць: па крокамеры, па кілямэтрах бегу, па колькасьці паднятае вагі ці колькасьці падыходаў да турніка. Можна паставіць сабе плян у~100 ці больш прысяданьняў і гнутка разьмеркаваць іх на працягу дня, выпрацоўваючы свой плян да вечара,~--- выбірайце тое, што спрацуе для вас лепш. 
 
-\tipbox{Дзёньнік трэніровак, дзе вы адзначаеце сваё самаадчуваньне і робіце нататкі да тэхнікі,~--- ідэальнае рашэньне.}
+\infobox{Дзёньнік трэніровак, дзе вы адзначаеце сваё самаадчуваньне і робіце нататкі да тэхнікі,~--- ідэальнае рашэньне.}
 
 \emph{Сучасныя рэкамэндацыі па фізычнай актыўнасьці гавораць, што дарослыя павінны аддаваць ня менш як 150 хвілінаў на тыдзень трэніроўкам сярэдняй інтэнсіўнасьці або ня менш як 75 хвілінаў высокай інтэнсіўнасьці, кожная трэніроўка павінна займаць ня менш як 10 хвілін. Для дадатковых перавагаў~--- адпаведна 300 хвілінаў сярэдняй і 150 хвілінаў высокай інтэнсіўнасьці. Сілавым практыкаваньням трэба аддаваць два і больш дзён на тыдзень. Аднак і гэтыя значэньні не дацягваюць да оптымуму нагрузкі.}
 
-\subsection*{Лепей зусім мала, чым нічога.}
+\subsection*{Лепей зусім мала, чым нічога}
 
 Карысьць могуць прынесьці самыя кароткія эпізоды актыўнасьці: напрыклад, для станоўчага псыхалягічнага эфэкту часта дастаткова ўсяго 5--10 хвілінаў, а~вось трэніроўкі больш за 45--60 хвілінаў лепш не рабіць, замяніце працягласьць павелічэньнем іх частасьці. Розныя дасьледаваньні паказваюць, што пры хадзьбе працягласьцю 1--2 гадзіны на тыдзень (то бок па 15--20 хвілінаў на дзень) зьніжаецца імавернасьць інфаркту, інсульту і разьвіцьця дыябэту, памяншаецца рызыка заўчаснай сьмерці.
 
 Дасьледаваньні паказалі, што нават адной высокаінтэнсіўнай інтэрвальнай трэніроўкі на тыдзень дастаткова, каб атрымаць паляпшэньне фізычнае формы, зьніжэньне ціску і паляпшэньне структуры цела. Пры гэтым адна такая трэніроўка мала чым саступае тром сярэднеінтэнсіўным трэніроўкам на тыдзень.
 
-\subsection*{Прасьцей, яшчэ прасьцей.} Калі ў~вас мала часу, то выкарыстоўвайце простыя падыходы, напрыклад абярыце 2--3 ключавых практыкаваньні і рабіце іх кожны дзень. А каб уцягнуцца, можаце пачаць і з~аднаго практыкаваньня ў~некалькі падыходаў. Калі ў~вас нестабільны графік і вам не ўдаецца вылучаць фіксаваны час для трэніровак, задайце сабе штотыднёвы аб'ём прысяданьняў, падцягваньняў, адцісканьняў, павесьце аркушык-сьпіс і рэгулярна на працягу дня выконвайце свой плян. Скажам, вы можаце пачаць з~адцісканьняў, прысяданьняў і падцягваньняў~--- і гэтага мінімуму вам можа быць дастаткова для пачатку.
+\subsection*{Прасьцей, яшчэ прасьцей} Калі ў~вас мала часу, то выкарыстоўвайце простыя падыходы, напрыклад абярыце 2--3 ключавых практыкаваньні і рабіце іх кожны дзень. А каб уцягнуцца, можаце пачаць і з~аднаго практыкаваньня ў~некалькі падыходаў. Калі ў~вас нестабільны графік і вам не ўдаецца вылучаць фіксаваны час для трэніровак, задайце сабе штотыднёвы аб'ём прысяданьняў, падцягваньняў, адцісканьняў, павесьце аркушык-сьпіс і рэгулярна на працягу дня выконвайце свой плян. Скажам, вы можаце пачаць з~адцісканьняў, прысяданьняў і падцягваньняў~--- і гэтага мінімуму вам можа быць дастаткова для пачатку.
 
-\subsection*{Сумарная актыўнасьць.}
+\subsection*{Сумарная актыўнасьць}
 
 А як падлічыць агульны ўзровень неабходнай актыўнасьці, калі я займаюся рознымі яе відамі? Бо карысна раўнамерна разьмяркоўваць яе віды: пагуляць у~парку, прабегчыся, падняць цяжкасьці. Існуе такі паказьнік, як мэтабалічны эквівалент (Metabolic Equivalents, METs),~--- гэта адзінка вымярэньня фізычнай нагрузкі, якая паказвае стаўленьне ўзроўню мэтабалізму падчас актыўнасьці да ўзроўню мэтабалізму ў~спакоі. Гэта значыць, што калі вы хутка ідзяце пешшу, то вашая актыўнасьць 4 MET, г.~зн. вы вытрачаеце ў~4 разы больш энэргіі, чым лежачы. Адна адзінка МЕТ прыблізна роўная 3,5 мл кіслароду на кіляграм вагі ў~хвіліну. Для прыкладу, праца за кампутарам 3, тэніс 5, баскетбол 8, бег 10 МЕТ.
 
@@ -455,11 +455,11 @@
 
 \emph{Зьвярніце ўвагу, што залішняе спажываньне бялку, а~асабліва комплексаў амінакіслотаў ВСАА можа скарачаць працягласьць жыцьця і неспрыяльна ўзьдзейнічаць на мэтабалізм.}
 
-\subsection*{Фітнэс-адыкцыя.}
+\subsection*{Фітнэс-адыкцыя}
 
 Заняткі спортам спрыяюць павышэньню настрою, таму ў~людзей, схільных да залежных паводзінаў, можа разьвіцца і фітнэс-адыкцыя~--- залежнасьць ад фізычнае актыўнасьці. У гэтым выпадку самаацэнка прывязваецца да спартовых посьпехаў і патрабуе нарошчваньня «дозы» і публічнага прызнаньня. 
 
-\tipbox{Калі чалавек займаецца спортам дзеля эўфарыі, павялічвае час заняткаў, у~выпадку пропуску ў~яго пагаршаецца настрой, ён выпадае з~сацыяльнага жыцьця і больш займаецца адзін, ці ігнаруе траўмы і боль,~--- гэта можна назваць залежнасьцю.}
+\infobox{Калі чалавек займаецца спортам дзеля эўфарыі, павялічвае час заняткаў, у~выпадку пропуску ў~яго пагаршаецца настрой, ён выпадае з~сацыяльнага жыцьця і больш займаецца адзін, ці ігнаруе траўмы і боль,~--- гэта можна назваць залежнасьцю.}
 
 Шматгадзінныя маратоны, бег з~высокім пульсам, злоўжываньне спрынтамі і сілавымі відамі спорту, уключаючы красфіт, можа павысіць рызыку арытмій, прыводзіць да небясьпечных для сэрца зьменаў, уключаючы гіпэртрафію і фіброз сэрца. Умераны бег можа падоўжыць жыцьцё на 6 гадоў, а~цяжкая атлетыка~--- усяго на паўтара года. 
 
@@ -513,7 +513,7 @@
 
 Існуе мноства спосабаў вымярэньня цяглічнай масы, сілы і функцыі. Разгледзім некалькі зь іх. Так, гэта ўжо згаданыя намі DEXA, біяімпэданс і антрапамэтрычныя мэтады, якія вы можаце выкарыстоўваць самі.
 
-\subsection*{Абхоп пляча.}
+\subsection*{Абхоп пляча}
 
 Вымерайце мернай стужкай абхоп сярэдзіны пляча. Затым вазьміце пальцамі скуру пляча ў~складку і вымерайце яе таўшчыню з~дапамогай лінаркі. Паўтарыце вымярэньне, дамогшыся падобных значэньняў. 
 
@@ -527,19 +527,19 @@
 
 Прамежкавыя значэньні~--- ніжэйшыя паказьнікі.
 
-\subsection*{Колькасьць адцісканьняў, прысяданьняў.}
+\subsection*{Колькасьць адцісканьняў, прысяданьняў}
 
 Маніторынг сваіх сілавых паказьнікаў~--- колькасьці адцісканьняў, прысяданьняў, падцягваньняў, як агульны лік, так і колькасьць за адну хвіліну, узьнятая вага і інш.~--- добры спосаб адзнакі стану цяглічнай сыстэмы. 
 
 \textbf{Тыя мужчыны, якія змаглі адціснуцца за хвіліну больш за 40 разоў, мелі прыкметна меншую рызыку сардэчна-сасудзістых захворваньняў, чым тыя, хто адціскаўся менш за 10. Падлічыце, колькі разоў вы можаце падцягнуцца, прысесьці і адціснуцца за адзін падыход, запішыце гэтыя значэньні.}
 
-\subsection*{Хуткасьць хадзьбы.}
+\subsection*{Хуткасьць хадзьбы}
 
 Чым хутчэй вы ходзіце, тым вышэйшы паказьнік здароўя. З дапамогай смартфона падлічыце сваю хуткасьць хадзьбы. Хуткасьць ніжэйшая за 2,16 км у~гадзіну зьвязаная з~самай высокай рызыкай. Чым вышэйшая хуткасьць, тым лепшыя паказьнікі для здароўя. 
 
 \textbf{Аптымальная хуткасьць~--- больш за 4,3 км за гадзіну.}
 
-\subsection*{Сіла сьціску ручыцы.}
+\subsection*{Сіла сьціску ручыцы}
 
 Вымяраецца з~дапамогай адмысловага дынамометра. Ня ведаю, як у~вас, але ў~мяне млявы поціск рук выклікае непрыемныя асацыяцыі. Цікава, што за апошнія дзесяцігоддзі поціск рукі мужчынаў стаў слабейшым, а~ў жанчынаў, наадварот, мацнейшым. Дасьледаваньні паказваюць, што сьмяротнасьць ад сардэчна-сасудзістых, лёгачных захворваньняў, інсультаў і шэрагу відаў раку зьвязаная са зьмяншэньнем сілы сьціску. Больш высокія значэньні~--- характарыстыка павышэньня даўгалецьця і зьніжэньня рызыкі многіх захворваньняў.
 
@@ -549,11 +549,11 @@
 
 Больш дакладныя значэньні можна атрымаць, калі суаднесьці сілу з~масай цела. Сілу падзяліць на масу цела і памножыць на 100: у~мужчынаў сярэднія значэньня складаюць 60--70\,\% масы цела, у~жанчынаў~--- 45--50\,\%.
 
-\subsection*{Планка.}
+\subsection*{Планка}
 
 Прыміце ўпор лежачы на локцях. Засячыце час, на працягу якога вы можаце ўтрымліваць гэтую позу. Таксама можна рабіць бакавыя планкі (правую і левую). Аптымальна: больш за 180 сэкундаў. Нармальна: 100--180 сэкундаў.
 
-\subsection*{Тэст на балянс.}
+\subsection*{Тэст на балянс}
 
 Пакладзіце рукі на пояс. Падніміце адну нагу і ўпрыце яе ступаком у~процілеглую нагу на ўзроўні калена. 
 
@@ -561,7 +561,7 @@
 
 Заплюшчыце вочы і зрабіце тое ж самае: аптымальна~--- больш за 27 сэкундаў, нармальна~--- 15--27 сэкундаў.
 
-\subsection*{Тэсты на скачкі.}
+\subsection*{Тэсты на скачкі}
 
 Павесьце мерную стужку на сьцяну, адмераўшы два мэтры ад падлогі. Зафіксуйце кропку, да якой вы дацягваецеся рукой. Затым скокніце ў~вышыню, імкнучыся дасягнуць найболей высокай кропкі, выніковы вынік лічыцца як розьніца паміж кропкамі. Паспрабуйце некалькі разоў, абярыце лепшы вынік: норма~--- 40--50 см, выдатны вынік~--- больш за паўмэтра. Скачкі ў~даўжыню: сагніце ногі ў~каленях і скокніце наперад, дапамагаючы сабе махам рукамі. Норма~--- больш за 2 м 10 см, выдатны вынік~--- звыш 2 м 40 см.
 
@@ -582,29 +582,29 @@
 
 \textbf{Трэніроўкі могуць палепшыць рэсурсы сардэчна-са\-су\-дзіс\-тай і цяглічнай сыстэмаў нават у~самым сталым узросьце.}
 
-\subsection*{Артастатычная проба.}
+\subsection*{Артастатычная проба}
 
 Ацэньвае стан сардэчна-сасудзістай сыстэмы. Вызначыце ваш пульс лежачы. Устаньце і праз тры хвіліны памерайце пульс яшчэ раз. Унясіце абодва значэньні. 
 
 \textbf{Розьніца ў~ЧСС:} ня больш за 11 удараў~--- оптымум (чым менш, тым лепш), 12--18~--- норма, больш за 19~--- зьніжана.
 
-\subsection*{Затрымка дыханьня.}
+\subsection*{Затрымка дыханьня}
 
 Затрымка дыханьня ацэньвае пераноснасьць гіпаксіі. Затрымайце дыханьне на поўным удыху, закрыўшы нос пальцамі. Значэньні: затрымка менш за 39 сэкундаў~--- паніжаны паказьнік, 40--49~--- норма, вышэй за 50~--- оптымум.
 
-\subsection*{Проба Штанге.}
+\subsection*{Проба Штанге}
 
 Гэтая проба ацэньвае рэсурсы дыхальнай і сардэчна-сасудзістай сыстэмаў. Памерайце свой пульс стоячы. Затым сядзьце на крэсла, зрабіце тры ўдыхі, потым затрымайце дыханьне (нос закрыць пальцамі) на поўным удыху. Засячыце час, які вы можаце вытрымаць, і памерайце свой пульс адразу пасьля першага ўдыху. Падлічыце пульс за 30 сэкундаў (пасьля тэсту) і падзяліце на значэньне пульсу за 30 сэкундаў (да тэсту), выніковае значэньне не павінна перавышаць 1,2. Аптымальная пераноснасьць гіпаксіі~--- да 1,1, нармальная пераноснасьць гіпаксіі~--- да 1,2, дрэнная пераноснасьць гіпаксіі~--- вышэй за 1,2.
 
-\subsection*{Проба Руф'е--Дыксана.}
+\subsection*{Проба Руф'е--Дыксана}
 
 Ляжце на сьпіну, ляжыце на працягу 5 хвілінаў. Памерайце пульс за 15 сэкундаў (P1), затым на працягу 45 сэкундаў зрабіце 30 прысяданьняў. Пасьля гэтага кладзіцеся і пмерайце пульс за першыя 15 сэкундаў (P2). Праз 45 сэкундаў зноў памерайце пульс за 15 сэкундаў (P3). Унясіце значэньні ў~формулу: ((P2--70) + 2(P3-P1))/10. Падлічыўшы, вы атрымаеце значэньне індэкса. Значэньні 0,1--5 паказваюць аптымальную фізычную працаздольнасьць, 5,1--8~--- нармальную фізычную працаздольнасьць, больш за 8~--- нізкую.
 
-\subsection*{Максімальнае спажываньне кіслароду (МСК, ViO\textsubscript{2}max).}
+\subsection*{Максімальнае спажываньне кіслароду (МСК, ViO\textsubscript{2}max)}
 
 МСК~--- гэта максімальны ўзровень выкарыстаньня і дастаўкі кіслароду пры максімальнай нагрузцы, вымяраецца ў~мл / мін / кг і зьяўляецца адным з~самых важных маркераў здароўя. Нізкія кардыярэсьпіраторныя рэзэрвы вядуць да павелічэньня рызыкі заўчаснае сьмерці і павышэньня рызыкі захворваньняў. Павелічэньне МСК зьніжае рызыку праз аптымізацыю работы сэрца, лепшага кровазабесьпячэньня цягліцаў і росту капіляраў у~іх, паляпшэньня работы мітахондрыяў. 
 
-\tipbox{Па сутнасьці, ваш МСК~--- гэта паказьнік рэальнага біялягічнага, а~ня пашпартнага ўзросту, бо можна і ў~50 гадоў мець паказьнікі 25-гадовага.}
+\infobox{Па сутнасьці, ваш МСК~--- гэта паказьнік рэальнага біялягічнага, а~ня пашпартнага ўзросту, бо можна і ў~50 гадоў мець паказьнікі 25-гадовага.}
 
 У нетрэніраваных людзей МСК зьніжаецца ўжо з~20 гадоў, прычым у~мужчынаў страта адбываецца з~хуткасьцю 0,5 мл / мін / кг, у~жанчынаў~--- 0,3 мл / мін / кг за год. Пры гэтым людзі ва ўзросьце 55--70 гадоў, якія чатыры месяцы актыўна займаліся хадзьбой альбо бегам, павысілі МСК: мужчыны~--- на 27\,\%, жанчыны~--- на 9\,\%. Тыя, хто займаецца спортам, маюць паказьнікі МСК, якія значна пераўзыходзяць звычайных людзей. Так, мужчына ва ўзросьце 30 гадоў можа мець МСК 40 мл/кг/мін, а~прафэсійны бягун~--- да 75 мл/кг/мін.
 
