--- a/willpower/chapter12.tex
+++ b/willpower/chapter12.tex
@@ -16,7 +16,7 @@
 
 \textbf{У чым жа парадокс вітаміну D?} Высокі ўзровень вітаміну D у~шэрагу дасьледаваньняў зьвязаны са зьніжэньнем рызыкі многіх захворваньняў, ад раку і аўтаімунных хваробаў да атлусьценьня і дыябэту. Якасьць і дакладнасьць гэтых дасьледаваньняў не выклікаюць сумневаў. Зь іншага боку, ужываньне дабавак зь вітамінам Д паказвае прыкметна больш сьціплыя вынікі, чым можна было чакаць. Ёсьць пытаньні і да дазоўкі вітаміну, бо яго ўзровень у~крыві можа расьці вельмі павольна нават пры высокай дазоўцы. Але магчымыя і іншыя тлумачэньні, адно з~найбольш імаверных~--- гэта дзеяньне непасрэдна сонечнага сьвятла, яго спэктар, інтэнсіўнасьць і да т.~п. 
 
-\tipbox{Адно з~маштабных дасьледаваньняў паказала, што пазьбяганьне сонца павялічвае рызыку сьмерці амаль на 72\,\% і паводле шкоды бадай супастаўнае з~курэньнем.}
+\infobox{Адно з~маштабных дасьледаваньняў паказала, што пазьбяганьне сонца павялічвае рызыку сьмерці амаль на 72\,\% і паводле шкоды бадай супастаўнае з~курэньнем.}
 
 У адным з~дасьледаваньняў было паказана, што ультрафіялет зьніжае атлусьценьне і прыкметы мэтабалічнага сындрому незалежна ад вітаміну D. У экспэрымэнце працяглае субэрытэмнае апраменьваньне ультрафіялетам прыводзіла да зьніжэньня вагі, паляпшэньня глюкозаталерантнасьці, павышэньня адчувальнасьці да інсуліну, зьмяншэньня прыкметаў тлушчавага гепатозу печані, зьніжэньня узроўняў нашчавага інсуліну, глюкозы і халестэрыну. Аўтары падкрэсьліваюць, што большасьць станоўчых эфэктаў сьвятла не аднаўлялася дадаткамі вітаміну D.
 
@@ -47,7 +47,7 @@
 
 \textbf{Колькі ж вітаміну D выпрацоўваецца на сонцы?} Для разьліку выкарыстоўваецца складаная формула з~улікам вашага тыпу скуры, вагі, росту, месца пражываньня. Таму лепш скарыстацца праграмамі: Dminder (Android iOS) або SunDay: Vitamin D \& UV Monitor. Яны яшчэ і разьлічваюць бясьпечную для скуры колькасьць сонца для вашай геаграфіі і надвор'я. Калі я ў~плаўках выйду ў~Тайландзе ў~13:00 на пляж бяз крэму (чаго я, вядома, не раблю), то літаральна за 10 хвілін атрымаю 10.000 МЕ вітаміну D. 
 
-\tipbox{З дапамогай сонечных ваннаў можна стварыць у~падскурнай клятчатцы вялікі запас вітаміну D, якога хопіць і на зімовыя месяцы. Але лепш не рызыкаваць~--- і зімой прымаць прафіляктычныя дозы вітаміну.} 
+\infobox{З дапамогай сонечных ваннаў можна стварыць у~падскурнай клятчатцы вялікі запас вітаміну D, якога хопіць і на зімовыя месяцы. Але лепш не рызыкаваць~--- і зімой прымаць прафіляктычныя дозы вітаміну.} 
 
 Выпрацоўка вітаміну D адбываецца ў~скуры, ён утвараецца з~7-дэгідрахалестэролу пры ўзьдзеяньні ультрафіялету B (даўжыня хвалі 315--280 нм). Рэцэптары да вітаміну D ёсьць практычна ўсюды, таму вітамін D нават завуць гармонам. Ён рэгулюе ня толькі абмен кальцыя, але і ўплывае на рост клетак, сасудаў, выпрацоўку інсуліну, працу імуннай сыстэмы, палавой сыстэмы, актывуе транскрыпцыю каля 200 генаў.
 
@@ -67,7 +67,7 @@
 
 \emph{Аказваецца, сьвятло сілай у~10\,000 люкс павялічвае актыўнасьць экспрэсіі цыркаднага гена Period 2 (PER2), што ў~сваю чаргу павялічвае актыўнасьць гіпаксіяй індукаванага фактару HIF1A. А HIF1A у~сваю чаргу аказвае ахоўны эфэкт у~розных тканках.}
 
-\tipbox{Такім чынам, яркае сьвятло абараняе ад сардэчна-сасудзістых захворваньняў і, у~выпадку інфаркту, значна абмяжоўвае пашкоджаньне сардэчнай мышцы.}
+\infobox{Такім чынам, яркае сьвятло абараняе ад сардэчна-сасудзістых захворваньняў і, у~выпадку інфаркту, значна абмяжоўвае пашкоджаньне сардэчнай мышцы.}
 
 \textbf{Праопіямэлянакартын}~--- гэта гіпафізарны прагармон, пад узьдзеяньнем сонца яго выпрацоўка павялічваецца. Сам па сабе ён неактыўны, але разразаецца спэцыфічнымі фэрмэнтамі эндапэптыдазамі трыма спосабамі, даючы розныя мэтабаліты: ліпатрапін (гармон тлушчаспаленьня), эндарфіны (задавальненьне), мэлянацытстымулёўны гармон (колер скуры), адрэнакартыкатропны гармон (стрэс).
 
@@ -145,7 +145,7 @@
 
 Калі мы глядзім на сябе ў~люстэрка, то, апроч іншага, бачым вынік уплыву тэмпэратуры на наш выгляд: валасы ў~нас растуць у~асноўным толькі на галаве, і ня надта інтэнсіўна~--- на целе. Зразумець, калі продкі чалавека пачалі губляць валасы, цяжка, бо парэшткі не даюць на гэта адказу. На дапамогу прыходзіць вывучэньне ДНК вошай, якія жывуць на галаве і ў~лабковых валасах. Верагодна, 2 мільёны гадоў таму валасы расьлі ўжо не на ўсім целе, а~200 тысячаў гадоў таму нашы продкі сталі насіць адзеньне. Чалавека часам завуць ``безвалосай малпай'', але пры гэтым забываюць пра прычыны, якія прывялі да гладкай скуры.
 
-\subsection*{Прыстасаваньне да высокіх тэмпэратураў.}
+\subsection*{Прыстасаваньне да высокіх тэмпэратураў}
 
 Адна з~тэорый эвалюцыі вястуе: нашы продкі пазбавіліся большай часткі валасоў, каб павысіць эфэктыўнасьць тэрмарэгуляцыі. Вымушана пакінуўшы лес, яны апынуліся пад пякучым сонцам саваны. Вядома, яны ўжо хадзілі на дзьвюх нагах, і гэта дапамагала не перагравацца, бо сумарнае цеплавое ўзьдзеяньне ніжэйшае, калі стаіш. А калі бяжыш, дык яшчэ і ахалоджваесься ветрам. Але нават двухногаму цяжка доўга бегчы на сьпякоце~--- літаральна праз паўгадзіны ён бы пераграваўся і рабіўся здабычай драпежнікаў. Страта валасоў і пяціразовае павелічэньне колькасьці потавых залозаў павысілі эфэктыўнасьць тэрмарэгуляцыі. Гэта забясьпечыла чалавеку дзівосныя магчымасьці і зрабіла яго істотай, якая можа бегчы даўжэй за ўсіх і на вялікіх адлегласьцях абагнаць нават каня.
 
@@ -153,7 +153,7 @@
 
 Ёсьць меркаваньне, што нават аблысеньне ў~мужчынаў зьяўляецца адаптацыяй для лепшага астываньня~--- бо на галаве шмат капіляраў. Па меры росту вусоў і барады плошча для астуджэньня памяншаецца, і прырода кампэнсуе гэта павелічэньнем паверхні голай скуры на макаўцы.
 
-\subsection*{Прыстасаваньне да нізкіх тэмпэратураў.}
+\subsection*{Прыстасаваньне да нізкіх тэмпэратураў}
 
 Каля 65 мільёнаў гадоў таму ў~раёне паўвострава Юкатан упаў вялізны мэтэарыт. Яго падзеньне падняло ў~паветра багацьце пылу, які не асядаў гадамі. ``Ядзерная зіма'' прывяла да выміраньня дыназаўраў і хуткай эвалюцыі млекакормячых. Адным з~мэханізмаў, які дазволіў нашым продкам дамінаваць, быў разьвіты тэрмагенэз (цеплаўтварэньне)~--- здольнасьць цела падтрымліваць пастаянную тэмпэратуру. Так яны атрымалі перавагу ў~эвалюцыйнай гонцы.
 
@@ -171,7 +171,7 @@
 
 \emph{Аказваецца, нэўроны ў~дугападобным ядры гіпаталямуса, якія рэгулююць апэтыт, адчувальныя і да ваганьняў тэмпэратуры цела. Таму фізычная актыўнасьць, якая падвышае тэмпэратуру цела, ня толькі спальвае калёрыі, але і дапамагае паменшыць голад. А ляжаньне на канапе можа толькі ўзмацніць цягу да ежы. Гэтыя ж нэўроны экспрэсуюць праопіямэлянакартын, таму апэтыт памяншаецца і пры павелічэньні знаходжаньня на сонца, і пры выпрацоўцы эндарфінаў (радасьць, лазня, сэкс і да т.~п.). Таксама на гэтых нэўронах ёсьць адмысловыя тжрмаадчувальныя рэцэптары, якія могуць быць актываваныя рэчывамі, што пакідаюць адчуваньне халоднае (ментол, мята, эўкаліпт) або гарачае (імбір, гваздзік, хрэн, чырвоны перац). Яны таксама стымулююць тлушчаспаленьне і прыгнятаюць апэтыт.}
 
-\subsection*{Цеплавое забруджваньне.}
+\subsection*{Цеплавое забруджваньне}
 
 Цікава, што мы з~вамі мярзьлівейшыя за сваіх продкаў. Яшчэ 150 гадоў таму нармальная тэмпэратура цела была роўна 37°С, а~сёньня сярэднія значэньні дасягаюць 36,4°С. Сярод прычын гэтага абмяркоўваецца як зьніжэньне колькасьці інфэкцыяў, так і зьніжэньне базавага абмену празь нізкую фізычную актыўнасьць, зьніжэньне тэрмагенэзу праз знаходжаньне ў~пастаянным цеплавым камфорце. Калі раней наш арганізм адаптаваўся для барацьбы зь пераахаладжэньнем, то цяпер нам пагражае пераграваньне.
 
@@ -202,7 +202,7 @@
 
 Холад мае вялікую колькасьць станоўчых эфэктаў для здароўя: ён дапамагае зьнізіць вагу, павышае адчувальнасьць да інсуліну, нават паляпшае мікрафлёру, зьніжае рост пухлін, павышае імунітэт, аказвае супрацьзапаленчае ўзьдзеяньне, зьніжае акісьляльны стрэс, паляпшае стан касьцей. Таксама халадовыя працэдуры стымулююць выпрацоўку шэрагу карысных ахоўных малекул і актывуюць сыгнальныя шляхі (FGF-21, адыпанэктын, ірызын, SIRT1, бялкі цеплавога шоку).
 
-\tipbox{Холад абараняе мозг ад ішэмічных пашкоджаньняў, павялічвае фэртыльнасьць, паляпшае працу шчытавіцы.}
+\infobox{Холад абараняе мозг ад ішэмічных пашкоджаньняў, павялічвае фэртыльнасьць, паляпшае працу шчытавіцы.}
 
 Цікава, што тыя жывёлы, якія ўпадаюць у~сьпячку, жывуць нашмат даўжэй за сваіх суродзічаў. Так, звычайная мыш жыве тры гады, а~кажан, які ўпадае ў~сьпячку больш чым на паўгода, дажывае да 18 гадоў!
 
@@ -226,7 +226,7 @@
 
 \textbf{Спорт.} Усе віды фізычнай актыўнасьці паляпшаюць працу бурага тлушчу і выдатна дапаўняюць халадовыя працэдуры. Прахалода падтрымлівае адэкватны цяглічны тонус, стымулюе актыўнасьць за кошт павышэньня адрэналіну і норадрэналіну. Трэніроўкі павялічваюць узровень гармону ірызіну (ген FNDC5), які стымулюе ператварэньне белага тлушчу ў~буры (бэжавы). Прасьцейшы і дзейсны пры гэтым варыянт~--- хуткая хадзьба ўвосень або ўзімку.
 
-\tipbox{Ідэальная раніца~--- гэта спорт на вуліцы ў~прахалодзе і нашча, каб стымуляваць тэрмагенэз.}
+\infobox{Ідэальная раніца~--- гэта спорт на вуліцы ў~прахалодзе і нашча, каб стымуляваць тэрмагенэз.}
 
 \textbf{Здаровае харчаваньне} выдатна спалучаецца з~гартаваньнем: важна мець у~рацыёне дастатковую колькасьць бялку і тлушчаў і выключыць высокаглікемічныя вугляводы: інсулін душыць працу бурага тлушчу. Умеранае абмежаваньне калярыйнасьці ежы прыводзіць да двухразовага павелічэньня экспрэсіі генаў UCP-2 і UCP-З у~адыпацытах і шкілетных цягліцах. Звужэньне харчовага акна, а~таксама ўмеранае абмежаваньне калярыйнасьці дапамагаюць павысіць тлушчаспаленьне. Павышаюць актыўнасьць бурага тлушчу аліўкавы алей і Амэга-3 тоўстыя кіслоты, розныя каратыноіды, напрыклад, фукаксантын з~марскіх водарасьцяў.
 
@@ -289,7 +289,7 @@
 
 Даданьне штаму Bifidobacterium infantis мышам у~стане стрэсу памяншала яго прыкметы і зьмяншала выяўленасьць дэпрэсіі і неспакою. Многія штамы Lactobacillus таксама дапамагаюць змагацца са стрэсам. Бактэрыя Bifidobacterium longum штам NCIMB 41676 зьніжае ўзровень картызолу, трывожнасьць і паляпшае памяць.
 
-\tipbox{Праца ў~садзе можа ўзбагаціць нас глебавымі бактэрыямі, напрыклад Mycobacterium vaccae, якія станоўча ўплываюць на настрой.}
+\infobox{Праца ў~садзе можа ўзбагаціць нас глебавымі бактэрыямі, напрыклад Mycobacterium vaccae, якія станоўча ўплываюць на настрой.}
 
 \textbf{Віды штамаў.} Часта ўзьдзеяньне бактэрыі залежыць ад таго, які менавіта штам вас насяляе. Так, існуюць анкагенныя штамы Helicobacter pylori, якія павялічваюць рызыку раку страўніка, а~звычайныя яго штамы ў~страўніку могуць нават зьніжаць рызыку гастрыту і аўтаімунных захворваньняў. Бактэрыі сынтэзуюць з~харчовых валокнаў кароткаланцужковыя тлустыя кіслоты, якія моцна ўплываюць на ўвесь арганізм у~цэлым. Розныя тыпы бактэрыяў утвараюць ацэтат (воцатная кіслата), прапіянат (прапіёнавая кіслата) і найболей важны~--- бутырат (алейная кіслата). Ацэтат зьяўляецца крыніцай энэргіі, стымулюе маторыку і сакрэцыю кішачніка, валодае антымікробнымі эфэктамі. Прапіянат абараняе кішачнік ад патагенных мікраарганізмаў і ўдзельнічае ў~шэрагу біяхімічных рэакцый.
 
@@ -316,7 +316,7 @@
 
 Звужэньне бактэрыяльнай разнастайнасьці~--- гэта кара нашага часу. Яно адбываецца кумулятыўна: чым меншая разнастайнасьць у~бацькоў, тым меншая будзе ў~іх дзяцей. Мы паступова губляем многія штамы бактэрыяў, якія былі ў~арганізьме людзей дзясяткі тысячаў гадоў. Паляпшэньне экалёгіі і апрацоўка ежы, выкарыстаньне мыйных сродкаў, антысэптыкаў, памяншэньне кантакту з~глебай, строгія санітарныя стандарты~--- усё гэта прыводзіць да драматычнага памяншэньня колькасьці бактэрыяў, якія маглі б узбагаціць нашу мікрафлёру. Памяншэньне разнастайнасьці харчаваньня і колькасьці расьліннай ежы ў~рацыёне, павелічэньне колькасьці мяса і тлушчу, рафінаваных прадуктаў, скарачэньне колькасьці харчовых валокнаў~--- усё гэта пазбаўляе нашу мікрафлёру харчаваньня, зьніжаючы яе разнастайнасьць.
 
-\tipbox{Чым меншая разнастайнасьць, тым горшая ўстойлівасьць добрых бактэрыяў да ўкараненьня чужародных і небясьпечных.}
+\infobox{Чым меншая разнастайнасьць, тым горшая ўстойлівасьць добрых бактэрыяў да ўкараненьня чужародных і небясьпечных.}
 
 \textbf{Ужываньне антыбіётыкаў} спустошвае мікрабіем, прычым нават аднаразовы курс можа прывесьці да зьніжэньня разнастайнасьці. Калі вы не ўжываеце антыбіётыкі для лячэньня, яны ўсё роўна могуць трапляць да вас у~арганізм зь мясам, яйкамі і малаком, бо 70\,\% антыбіётыкаў у~сусьветнай гаспадарцы вырабляецца для жывёлагадоўлі. Нэгатыўна ўзьдзейнічаць на мікрафлёру могуць і іншыя прэпараты, ад тых, што зьніжаюць кіслотнасьць страўніка, да антыдэпрэсантаў, а~таксама многія харчовыя дабаўкі, ад загушчальнікаў да цукразаменьнікаў. Лішак алькаголю, цукру, пераяданьне пагаршаюць склад мікрафлёры.
 
@@ -334,7 +334,7 @@
 
 Бабовыя ўтрымліваюць шмат харчовых валокнаў і дабратворна ўплываюць на мікрафлёру. Павелічэньне колькасьці гародніны (капуста, цыбуля, батат, гарбуз, бурак, артышок і да т.~п.), зеляніны, грыбоў, водарасьцяў, гарэхаў, садавіны, ягадаў забясьпечыць дастатковую колькасьць клятчаткі ды іншых прэбіётыкаў.
 
-\tipbox{Фастынг у~розных формах паляпшае мікрафлёру, павялічваючы колькасьць карысных бактэрыяў і зьмяншаючы аб'ём шкодных.}
+\infobox{Фастынг у~розных формах паляпшае мікрафлёру, павялічваючы колькасьць карысных бактэрыяў і зьмяншаючы аб'ём шкодных.}
 
 \subsection*{Прэбіётыкі}
 
@@ -354,7 +354,7 @@
 
 Шэраг дасьледаваньняў паказваюць эфэктыўнасьць прабіётыкаў, якія зьніжаюць частату дыярэі, паляпшаюць ліпідны профіль, зьніжаюць частату інфэкцыяў і г.~д. Але бязь зьмены харчаваньня прабіётыкі могуць і нашкодзіць. У адным з~дасьледаваньняў на жывёлах прабіятычныя бактэрыі пры нездаровым рацыёне праяўлялі патагенную актыўнасьць, а~вось у~групе здаровага харчаваньня паводзілі сябе бязь зьменаў. 
 
-\tipbox{Многія карысныя бактэрыі знаходзяцца ў~складзе фэрмэнтаваных прадуктаў, такіх як квас, кефір, ёгурт, а~таксама міса, кімчы і інш.}
+\infobox{Многія карысныя бактэрыі знаходзяцца ў~складзе фэрмэнтаваных прадуктаў, такіх як квас, кефір, ёгурт, а~таксама міса, кімчы і інш.}
 
 Акрамя кішачніка, прабіётыкі могуць быць карысныя і для аднаўленьня і іншай мікрафлёры. Напрыклад, аральны прабіётык Streptococcus Salivarius штамы K12 (больш горла) і M18 (больш зубы), які зьніжае рызыку карыесу, танзілітаў ды іншых інфэкцыяў, пазбаўляе і ад непрыемнага паху з~рота і ўтварэньня камянёў. Lactobacillus sakei дапамагаюць аднавіць мікрафлёру насавых пазухаў, эфэктыўныя пры сінусіце. Ёсьць і прабіётыкі для скуры, напрыклад Streptococcus thermophiles у~выглядзе крэму павялічвае вытворчасьць ахоўных цэрамідаў, якія паляпшаюць бар'ерную функцыю скуры і маюць супрацьмікробныя ўласьцівасьці. Аднавіць мікрафлёру похвы і зьнізіць рызыку інфэкцыяў могуць штамы Lactobacillus crispatus CTV05, L. jensenii, ATCC 9857, L. gasseri, L. Iners, L. casei rhamnosus, L. acidophilus.
 
@@ -414,7 +414,7 @@
 
 Выкарыстоўвайце біядызайн: глядзіце на аблокі, запаліце камін, пагуляйце на прыродзе. Азеляненьне, парк, лес, дрэвы~--- усё гэта вельмі дабратворна ўплывае на нас, фармуючы карыснае і аздараўленчае асяродзьдзе. Узровень азеляненьня~--- адзін з~надзейных, але дарагіх спосабаў падтрыманьня кагнітыўнага здароўя. Чым больш зеляніны, тым лепш разьвіцьцё мозгу ў~школьнікаў і тым павольней падзеньне кагнітыўных функцый у~старых. Азеляненьне на 15\,\% зьніжае рызыку нэўрадэгенэратыўных захворваньняў.
 
-\tipbox{Тут некалькі эфэктаў: просты візуальны антыстрэсавы эфэкт ад разглядваньня зеляніны, зьніжэньне паветранага забруджаньня, зьніжэньне роўню шуму, больш за ўмоваў для фізычнай актыўнасьці й ня толькі.}
+\infobox{Тут некалькі эфэктаў: просты візуальны антыстрэсавы эфэкт ад разглядваньня зеляніны, зьніжэньне паветранага забруджаньня, зьніжэньне роўню шуму, больш за ўмоваў для фізычнай актыўнасьці й ня толькі.}
 
 \textbf{Пагуляйце па лесе.} Дабратворны ўплыў прагулак па лесе або парку на стан здароўя чалавека пачаў вывучацца як навуковы фэномэн з~80-х гадоў XX стагодзьдзя. Калі раней людзі проста бралі заплечнік і сыходзілі ў~паход, цяпер прыдумалі больш адмысловых тэрмінаў. Першымі тут былі японцы, якія ўвялі тэрмін сінрын-ёку~--- ``лясныя ванны'', цяпер кажуць пра ``дэндратэрапію'', ``спа-лес'', Park Rx і інш. Можна выдатна спалучаць дзелавую сустрэчу, чытаньне або шпацыр з~дзецьмі ў~парку. Гэта станоўча ўзьдзейнічае на ваш мозг і ваша цела, не патрабуе напругі і заўсёды даступна.
 
@@ -432,7 +432,7 @@
 
 \textbf{Азеляняйце пакой.} Дасьледаваньні ўсталявалі, што хворым трэба менш абязбольвальных і яны хутчэй папраўляюцца, калі з~акна іх палаты відаць дрэвы. Пазьнейшыя працы паказалі, што дастаткова глядзець нават на фатаграфію прыроды. Разгляданьне жывых кветак расслабляе, зьніжае ўзровень стрэсу, павышае тонус антыстрэсавай парасімпатыйнай сыстэмы. Працуюць і асобныя элемэнты прыроднага асяродзьдзя: сьпевы птушак, расьліны, водары, гукі прыроды і г.~д. У зялёных офісах супрацоўнікі ня толькі лепей пачуваюцца, але й хутчэй прымаюць рашэньні. Фітадызайн дапаможа ўкараніць расьліны ў~ваша жыцьцё найболей зручным спосабам. Напрыклад, існуюць спэцыяльныя ``зялёныя сьцены'' з~аўтаматызаваным палівам. Калі не атрымліваецца хадзіць у~лес, можна зрабіць лес у~сябе дома!
 
-\subsection*{Некамфортнае візуальнае асяродзьдзе.}
+\subsection*{Некамфортнае візуальнае асяродзьдзе}
 
 Калі мы бачым нешта непрыемнае, то хочацца заплюшчыць вочы, каб паберагчы свае нэрвовыя клеткі. І гэта нядзіўна, бо тое, што мы бачым, уплывае на нашае здароўе. Прычым ня толькі ў~такога адчувальна віду, як чалавек,~--- нават у~мух.
 
@@ -471,7 +471,7 @@
 
 Паказана станоўчае ўзьдзеяньне на розныя захворваньні, але самым уражлівым, на мой погляд, зьяўляецца зьніжэньне рызыкі разьвіцьця пухлінаў і запаволеньне іх росту. Вывучэньне ўзбагачанага асяродзьдзя пры гліёме паказала, што яно павышае выжывальнасьць, павышае актывацыю клетак імуннай сыстэмы макрафагаў і проціпухлінных NK-лімфацытаў. Сярод вывучаных відаў раку, узбагачанае асяродзьдзе дакладна эфэктыўны пры мэляноме, раку лёгкіх, падстраўніцы, грудзей, прамой кішкі. 
 
-\tipbox{Узбагачанае асяродзьдзе зьніжала памеры пухлінаў падстраўніцы розных відаў ад 41 да 53\,\%.}
+\infobox{Узбагачанае асяродзьдзе зьніжала памеры пухлінаў падстраўніцы розных відаў ад 41 да 53\,\%.}
 
 Цікава, што дзеяньне ўзбагачанага асяродзьдзя комплекснае і ня зводзіцца толькі да аднаго зь яе чыньнікаў. Так, ізаляваная фізычная актыўнасьць хоць і паляпшала агульны стан, але нязначна ўплывала на рост пухлінаў. Асобна ўзятая сацыяльная актыўнасьць або толькі забаўкі ня мелі прыкметнага эфэкту. 
 
@@ -481,7 +481,7 @@
 
 \textbf{Зьніжэньне рызыкі залежнасьці.} У дафамінавай сыстэме за нашу ўвагу канкуруюць розныя стымулы. Калі чалавек жыве ў~зьбедненым асяродзьдзі, то ён мае высокую рызыку хімічных і нехімічных залежнасьцяў, становіцца ўразьлівым. Стварэньне асяродзьдзя зьмяншае спажываньне наркотыкаў і аслабляе іншыя віды залежнасьцяў. Жыцьцё ў~зьбедненым асяродзьдзі прыводзіць да разумовага адставаньня, неразьвітага маўленьня і парушэньняў рухальных навыкаў, павялічвае рызыку наркатычнай залежнасьці. На жаль, кампэнсаваць гэта ў~дарослых дастаткова цяжка.
 
-\subsection*{Стварыце або знайдзіце ўзбагачанае асяродзьдзе.}
+\subsection*{Стварыце або знайдзіце ўзбагачанае асяродзьдзе}
 
 Каб чалавек узаемадзейнічаў з~элемэнтамі навакольнага асяродзьдзя, яны павінны быць для яго эмацыйна значнымі, цікавымі, а~таксама разнастайнымі, дынамічнымі. Важныя магчымасьць выбіраць, а~таксама авалодваць новымі навыкамі, атрымліваць новы досьвед і зваротную сувязь, пашыраць свае магчымасьці і самае важнае~--- пераўтвараць і ўзбагачаць асяродзьдзе асабіста. Вядома, пры гэтым важны і пэўны ўзровень стрэсу і непрадказальнасьці, што паляпшае навучаньне, але з~падтрыманьнем псыхалягічнай бясьпекі. 
 
